@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,47 +16,44 @@
 
 package org.springframework.beans.factory.support;
 
-import java.lang.reflect.InvocationHandler;
-import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
-import java.util.AbstractCollection;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.Mockito;
 
-import org.springframework.beans.PropertyEditorRegistrar;
-import org.springframework.beans.PropertyEditorRegistry;
 import org.springframework.beans.factory.BeanCreationException;
+import org.springframework.beans.factory.FactoryBean;
 import org.springframework.beans.factory.NoUniqueBeanDefinitionException;
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.beans.factory.config.TypedStringValue;
 import org.springframework.beans.factory.xml.XmlBeanDefinitionReader;
 import org.springframework.beans.propertyeditors.CustomNumberEditor;
+import org.springframework.beans.testfixture.beans.GenericBean;
+import org.springframework.beans.testfixture.beans.GenericIntegerBean;
+import org.springframework.beans.testfixture.beans.GenericSetOfIntegerBean;
+import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.core.OverridingClassLoader;
 import org.springframework.core.ResolvableType;
 import org.springframework.core.annotation.AnnotationAwareOrderComparator;
 import org.springframework.core.annotation.Order;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.UrlResource;
-import org.springframework.tests.Assume;
-import org.springframework.tests.TestGroup;
-import org.springframework.tests.sample.beans.GenericBean;
-import org.springframework.tests.sample.beans.GenericIntegerBean;
-import org.springframework.tests.sample.beans.GenericSetOfIntegerBean;
-import org.springframework.tests.sample.beans.TestBean;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.entry;
 
 /**
  * @author Juergen Hoeller
@@ -64,599 +61,522 @@ import static org.junit.Assert.*;
  * @author Sam Brannen
  * @since 20.01.2006
  */
-public class BeanFactoryGenericsTests {
+class BeanFactoryGenericsTests {
 
 	@Test
-	public void testGenericSetProperty() {
+	void genericSetProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
-		Set<String> input = new HashSet<>();
-		input.add("4");
-		input.add("5");
-		rbd.getPropertyValues().add("integerSet", input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.getPropertyValues().add("integerSet", Set.of("4", "5"));
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertThat(gb.getIntegerSet()).containsExactlyInAnyOrder(4, 5);
 	}
 
 	@Test
-	public void testGenericListProperty() throws Exception {
+	void genericListProperty() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
-		List<String> input = new ArrayList<>();
-		input.add("http://localhost:8080");
-		input.add("http://localhost:9090");
-		rbd.getPropertyValues().add("resourceList", input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		List<String> input = List.of("http://localhost:8080", "http://localhost:9090");
+		bd.getPropertyValues().add("resourceList", input);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
-		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
+		assertThat(gb.getResourceList())
+				.containsExactly(new UrlResource("http://localhost:8080"), new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericListPropertyWithAutowiring() throws Exception {
+	void genericListPropertyWithAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
 
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericIntegerBean.class);
-		rbd.setAutowireMode(RootBeanDefinition.AUTOWIRE_BY_TYPE);
-		bf.registerBeanDefinition("genericBean", rbd);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericIntegerBean.class);
+		bd.setAutowireMode(RootBeanDefinition.AUTOWIRE_BY_TYPE);
+		bf.registerBeanDefinition("genericBean", bd);
+
 		GenericIntegerBean gb = (GenericIntegerBean) bf.getBean("genericBean");
-
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
-		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
+		assertThat(gb.getResourceList())
+				.containsExactly(new UrlResource("http://localhost:8080"), new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericListPropertyWithInvalidElementType() {
+	void genericListPropertyWithInvalidElementType() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericIntegerBean.class);
 
-		List<Integer> input = new ArrayList<>();
-		input.add(1);
-		rbd.getPropertyValues().add("testBeanList", input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericIntegerBean.class);
+		bd.getPropertyValues().add("testBeanList", List.of(1));
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
-		try {
-			bf.getBean("genericBean");
-			fail("Should have thrown BeanCreationException");
-		}
-		catch (BeanCreationException ex) {
-			assertTrue(ex.getMessage().contains("genericBean") && ex.getMessage().contains("testBeanList[0]"));
-			assertTrue(ex.getMessage().contains(TestBean.class.getName()) && ex.getMessage().contains("Integer"));
-		}
+		assertThatExceptionOfType(BeanCreationException.class).isThrownBy(() -> bf.getBean("genericBean"))
+				.withMessageContaining("genericBean")
+				.withMessageContaining("testBeanList[0]")
+				.withMessageContaining(TestBean.class.getName())
+				.withMessageContaining("Integer");
 	}
 
 	@Test
-	public void testGenericListPropertyWithOptionalAutowiring() {
+	void genericListPropertyWithOptionalAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setAutowireMode(RootBeanDefinition.AUTOWIRE_BY_TYPE);
-		bf.registerBeanDefinition("genericBean", rbd);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setAutowireMode(RootBeanDefinition.AUTOWIRE_BY_TYPE);
+		bf.registerBeanDefinition("genericBean", bd);
+
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertNull(gb.getResourceList());
+		assertThat(gb.getResourceList()).isNull();
 	}
 
 	@Test
-	public void testGenericMapProperty() {
+	void genericMapProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
-		Map<String, String> input = new HashMap<>();
-		input.put("4", "5");
-		input.put("6", "7");
-		rbd.getPropertyValues().add("shortMap", input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		Map<String, String> input = Map.of(
+				"4", "5",
+				"6", "7");
+		bd.getPropertyValues().add("shortMap", input);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericListOfArraysProperty() {
+	void genericListOfArraysProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
+
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("listOfArrays");
-
-		assertEquals(1, gb.getListOfArrays().size());
-		String[] array = gb.getListOfArrays().get(0);
-		assertEquals(2, array.length);
-		assertEquals("value1", array[0]);
-		assertEquals("value2", array[1]);
+		assertThat(gb.getListOfArrays()).containsExactly(new String[] {"value1", "value2"});
 	}
 
-
 	@Test
-	public void testGenericSetConstructor() {
+	void genericSetConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
-		Set<String> input = new HashSet<>();
-		input.add("4");
-		input.add("5");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		Set<String> input = Set.of("4", "5");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertThat(gb.getIntegerSet()).containsExactlyInAnyOrder(4, 5);
 	}
 
 	@Test
-	public void testGenericSetConstructorWithAutowiring() {
+	void genericSetConstructorWithAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.registerSingleton("integer1", new Integer(4));
-		bf.registerSingleton("integer2", new Integer(5));
+		bf.registerSingleton("integer1", 4);
+		bf.registerSingleton("integer2", 5);
 
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
-		bf.registerBeanDefinition("genericBean", rbd);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
+		bf.registerBeanDefinition("genericBean", bd);
+
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertThat(gb.getIntegerSet()).containsExactlyInAnyOrder(4, 5);
 	}
 
 	@Test
-	public void testGenericSetConstructorWithOptionalAutowiring() {
+	void genericSetConstructorWithOptionalAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
-		bf.registerBeanDefinition("genericBean", rbd);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
+		bf.registerBeanDefinition("genericBean", bd);
+
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertNull(gb.getIntegerSet());
+		assertThat(gb.getIntegerSet()).isNull();
 	}
 
 	@Test
-	public void testGenericSetListConstructor() throws Exception {
+	void genericSetListConstructor() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
-		Set<String> input = new HashSet<>();
-		input.add("4");
-		input.add("5");
-		List<String> input2 = new ArrayList<>();
-		input2.add("http://localhost:8080");
-		input2.add("http://localhost:9090");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		Set<String> input1 = Set.of("4", "5");
+		List<String> input2 = List.of("http://localhost:8080", "http://localhost:9090");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input1);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
-		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
+		assertThat(gb.getIntegerSet()).containsExactlyInAnyOrder(4, 5);
+		assertThat(gb.getResourceList())
+				.containsExactly(new UrlResource("http://localhost:8080"), new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericSetListConstructorWithAutowiring() throws Exception {
+	void genericSetListConstructorWithAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.registerSingleton("integer1", new Integer(4));
-		bf.registerSingleton("integer2", new Integer(5));
+		bf.registerSingleton("integer1", 4);
+		bf.registerSingleton("integer2", 5);
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
 
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
-		bf.registerBeanDefinition("genericBean", rbd);
-		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
-		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
+		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
+		assertThat(gb.getIntegerSet()).containsExactlyInAnyOrder(4, 5);
+		assertThat(gb.getResourceList())
+				.containsExactly(new UrlResource("http://localhost:8080"), new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericSetListConstructorWithOptionalAutowiring() throws Exception {
+	void genericSetListConstructorWithOptionalAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
 
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
-		bf.registerBeanDefinition("genericBean", rbd);
-		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		assertNull(gb.getIntegerSet());
-		assertNull(gb.getResourceList());
+		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
+		assertThat(gb.getIntegerSet()).isNull();
+		assertThat(gb.getResourceList()).isNull();
 	}
 
 	@Test
-	public void testGenericSetMapConstructor() {
+	void genericSetMapConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
-		Set<String> input = new HashSet<>();
-		input.add("4");
-		input.add("5");
-		Map<String, String> input2 = new HashMap<>();
-		input2.put("4", "5");
-		input2.put("6", "7");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		Set<String> input1 = Set.of("4", "5");
+		Map<String, String> input2 = Map.of(
+				"4", "5",
+				"6", "7");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input1);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertThat(gb.getIntegerSet()).containsExactlyInAnyOrder(4, 5);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapResourceConstructor() throws Exception {
+	void genericMapResourceConstructor() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
-		Map<String, String> input = new HashMap<>();
-		input.put("4", "5");
-		input.put("6", "7");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue("http://localhost:8080");
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		Map<String, String> input = Map.of(
+				"4", "5",
+				"6", "7");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bd.getConstructorArgumentValues().addGenericArgumentValue("http://localhost:8080");
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertThat(gb.getResourceList()).containsExactly(new UrlResource("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericMapMapConstructor() {
+	void genericMapMapConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
-		Map<String, String> input = new HashMap<>();
-		input.put("1", "0");
-		input.put("2", "3");
-		Map<String, String> input2 = new HashMap<>();
-		input2.put("4", "5");
-		input2.put("6", "7");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		Map<String, String> input1 = Map.of(
+				"1", "0",
+				"2", "3");
+		Map<String, String> input2 = Map.of(
+				"4", "5",
+				"6", "7");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input1);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertNotSame(gb.getPlainMap(), gb.getShortMap());
-		assertEquals(2, gb.getPlainMap().size());
-		assertEquals("0", gb.getPlainMap().get("1"));
-		assertEquals("3", gb.getPlainMap().get("2"));
-		assertEquals(2, gb.getShortMap().size());
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertThat(gb.getShortMap()).isNotSameAs(gb.getPlainMap());
+		assertThat(gb.getPlainMap()).hasSize(2);
+		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
+		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
+		assertThat(gb.getShortMap()).hasSize(2);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapMapConstructorWithSameRefAndConversion() {
+	void genericMapMapConstructorWithSameRefAndConversion() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
-		Map<String, String> input = new HashMap<>();
-		input.put("1", "0");
-		input.put("2", "3");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		Map<String, String> input = Map.of(
+				"1", "0",
+				"2", "3");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertNotSame(gb.getPlainMap(), gb.getShortMap());
-		assertEquals(2, gb.getPlainMap().size());
-		assertEquals("0", gb.getPlainMap().get("1"));
-		assertEquals("3", gb.getPlainMap().get("2"));
-		assertEquals(2, gb.getShortMap().size());
-		assertEquals(new Integer(0), gb.getShortMap().get(new Short("1")));
-		assertEquals(new Integer(3), gb.getShortMap().get(new Short("2")));
+		assertThat(gb.getShortMap()).isNotSameAs(gb.getPlainMap());
+		assertThat(gb.getPlainMap()).hasSize(2);
+		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
+		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
+		assertThat(gb.getShortMap()).hasSize(2);
+		assertThat(gb.getShortMap().get(Short.valueOf("1"))).isEqualTo(0);
+		assertThat(gb.getShortMap().get(Short.valueOf("2"))).isEqualTo(3);
 	}
 
 	@Test
-	public void testGenericMapMapConstructorWithSameRefAndNoConversion() {
+	void genericMapMapConstructorWithSameRefAndNoConversion() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
 		Map<Short, Integer> input = new HashMap<>();
-		input.put(new Short((short) 1), new Integer(0));
-		input.put(new Short((short) 2), new Integer(3));
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		input.put((short) 1, 0);
+		input.put((short) 2, 3);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertSame(gb.getPlainMap(), gb.getShortMap());
-		assertEquals(2, gb.getShortMap().size());
-		assertEquals(new Integer(0), gb.getShortMap().get(new Short("1")));
-		assertEquals(new Integer(3), gb.getShortMap().get(new Short("2")));
+		assertThat(gb.getShortMap()).isSameAs(gb.getPlainMap());
+		assertThat(gb.getShortMap()).hasSize(2);
+		assertThat(gb.getShortMap().get(Short.valueOf("1"))).isEqualTo(0);
+		assertThat(gb.getShortMap().get(Short.valueOf("2"))).isEqualTo(3);
 	}
 
 	@Test
-	public void testGenericMapWithKeyTypeConstructor() {
+	void genericMapWithKeyTypeConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
-		Map<String, String> input = new HashMap<>();
-		input.put("4", "5");
-		input.put("6", "7");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		Map<String, String> input = Map.of(
+				"4", "5",
+				"6", "7");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertEquals("5", gb.getLongMap().get(new Long("4")));
-		assertEquals("7", gb.getLongMap().get(new Long("6")));
+		assertThat(gb.getLongMap().get(4L)).isEqualTo("5");
+		assertThat(gb.getLongMap().get(6L)).isEqualTo("7");
 	}
 
 	@Test
-	public void testGenericMapWithCollectionValueConstructor() {
+	void genericMapWithCollectionValueConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.addPropertyEditorRegistrar(new PropertyEditorRegistrar() {
-			@Override
-			public void registerCustomEditors(PropertyEditorRegistry registry) {
-				registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
-			}
-		});
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
+		bf.addPropertyEditorRegistrar(registry ->
+				registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false)));
 
-		Map<String, AbstractCollection<?>> input = new HashMap<>();
-		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(new Integer(1));
-		input.put("1", value1);
-		ArrayList<Boolean> value2 = new ArrayList<>();
-		value2.add(Boolean.TRUE);
-		input.put("2", value2);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(Boolean.TRUE);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		Map<String, Collection<?>> input = Map.of(
+				"1", Set.of(1),
+				"2", List.of(Boolean.TRUE));
+		bd.getConstructorArgumentValues().addGenericArgumentValue(Boolean.TRUE);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertTrue(gb.getCollectionMap().get(new Integer(1)) instanceof HashSet);
-		assertTrue(gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList);
+		assertThat(gb.getCollectionMap().get(1)).isInstanceOf(Set.class);
+		assertThat(gb.getCollectionMap().get(2)).isInstanceOf(List.class);
 	}
 
-
 	@Test
-	public void testGenericSetFactoryMethod() {
+	void genericSetFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setFactoryMethodName("createInstance");
 
-		Set<String> input = new HashSet<>();
-		input.add("4");
-		input.add("5");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setFactoryMethodName("createInstance");
+		Set<String> input = Set.of("4", "5");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertThat(gb.getIntegerSet()).containsExactlyInAnyOrder(4, 5);
 	}
 
 	@Test
-	public void testGenericSetListFactoryMethod() throws Exception {
+	void genericSetListFactoryMethod() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setFactoryMethodName("createInstance");
 
-		Set<String> input = new HashSet<>();
-		input.add("4");
-		input.add("5");
-		List<String> input2 = new ArrayList<>();
-		input2.add("http://localhost:8080");
-		input2.add("http://localhost:9090");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setFactoryMethodName("createInstance");
+		Set<String> input1 = Set.of("4", "5");
+		List<String> input2 = List.of("http://localhost:8080", "http://localhost:9090");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input1);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
-		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
+		assertThat(gb.getIntegerSet()).containsExactlyInAnyOrder(4, 5);
+		assertThat(gb.getResourceList())
+				.containsExactly(new UrlResource("http://localhost:8080"), new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericSetMapFactoryMethod() {
+	void genericSetMapFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setFactoryMethodName("createInstance");
 
-		Set<String> input = new HashSet<>();
-		input.add("4");
-		input.add("5");
-		Map<String, String> input2 = new HashMap<>();
-		input2.put("4", "5");
-		input2.put("6", "7");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setFactoryMethodName("createInstance");
+		Set<String> input1 = Set.of("4", "5");
+		Map<String, String> input2 = Map.of(
+				"4", "5",
+				"6", "7");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input1);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertThat(gb.getIntegerSet()).containsExactlyInAnyOrder(4, 5);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapResourceFactoryMethod() throws Exception {
+	void genericMapResourceFactoryMethod() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setFactoryMethodName("createInstance");
 
-		Map<String, String> input = new HashMap<>();
-		input.put("4", "5");
-		input.put("6", "7");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue("http://localhost:8080");
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setFactoryMethodName("createInstance");
+		Map<String, String> input = Map.of(
+				"4", "5",
+				"6", "7");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bd.getConstructorArgumentValues().addGenericArgumentValue("http://localhost:8080");
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertThat(gb.getResourceList()).containsExactly(new UrlResource("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericMapMapFactoryMethod() {
+	void genericMapMapFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setFactoryMethodName("createInstance");
 
-		Map<String, String> input = new HashMap<>();
-		input.put("1", "0");
-		input.put("2", "3");
-		Map<String, String> input2 = new HashMap<>();
-		input2.put("4", "5");
-		input2.put("6", "7");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setFactoryMethodName("createInstance");
+		Map<String, String> input1 = Map.of(
+				"1", "0",
+				"2", "3");
+		Map<String, String> input2 = Map.of(
+				"4", "5",
+				"6", "7");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input1);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input2);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertEquals("0", gb.getPlainMap().get("1"));
-		assertEquals("3", gb.getPlainMap().get("2"));
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
+		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapWithKeyTypeFactoryMethod() {
+	void genericMapWithKeyTypeFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setFactoryMethodName("createInstance");
 
-		Map<String, String> input = new HashMap<>();
-		input.put("4", "5");
-		input.put("6", "7");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setFactoryMethodName("createInstance");
+		Map<String, String> input = Map.of(
+				"4", "5",
+				"6", "7");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertEquals("5", gb.getLongMap().get(new Long("4")));
-		assertEquals("7", gb.getLongMap().get(new Long("6")));
+		assertThat(gb.getLongMap().get(Long.valueOf("4"))).isEqualTo("5");
+		assertThat(gb.getLongMap().get(Long.valueOf("6"))).isEqualTo("7");
 	}
 
 	@Test
-	public void testGenericMapWithCollectionValueFactoryMethod() {
+	void genericMapWithCollectionValueFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.addPropertyEditorRegistrar(new PropertyEditorRegistrar() {
-			@Override
-			public void registerCustomEditors(PropertyEditorRegistry registry) {
-				registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
-			}
-		});
-		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
-		rbd.setFactoryMethodName("createInstance");
+		bf.addPropertyEditorRegistrar(registry ->
+				registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false)));
 
-		Map<String, AbstractCollection<?>> input = new HashMap<>();
-		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(new Integer(1));
-		input.put("1", value1);
-		ArrayList<Boolean> value2 = new ArrayList<>();
-		value2.add(Boolean.TRUE);
-		input.put("2", value2);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(Boolean.TRUE);
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		RootBeanDefinition bd = new RootBeanDefinition(GenericBean.class);
+		bd.setFactoryMethodName("createInstance");
+		Map<String, Collection<?>> input = Map.of(
+				"1", Set.of(1),
+				"2", List.of(Boolean.TRUE));
+		bd.getConstructorArgumentValues().addGenericArgumentValue(Boolean.TRUE);
+		bd.getConstructorArgumentValues().addGenericArgumentValue(input);
+		bf.registerBeanDefinition("genericBean", bd);
 
-		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
-
-		assertTrue(gb.getCollectionMap().get(new Integer(1)) instanceof HashSet);
-		assertTrue(gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList);
+		assertThat(gb.getCollectionMap().get(1)).isInstanceOf(Set.class);
+		assertThat(gb.getCollectionMap().get(2)).isInstanceOf(List.class);
 	}
 
 	@Test
-	public void testGenericListBean() throws Exception {
+	void genericListBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
-		List<?> list = (List<?>) bf.getBean("list");
-		assertEquals(1, list.size());
-		assertEquals(new URL("http://localhost:8080"), list.get(0));
+
+		NamedUrlList list = bf.getBean("list", NamedUrlList.class);
+		assertThat(list).containsExactly(new URL("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericSetBean() throws Exception {
+	void genericSetBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
-		Set<?> set = (Set<?>) bf.getBean("set");
-		assertEquals(1, set.size());
-		assertEquals(new URL("http://localhost:8080"), set.iterator().next());
+
+		NamedUrlSet set = bf.getBean("set", NamedUrlSet.class);
+		assertThat(set).containsExactly(new URL("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericMapBean() throws Exception {
+	void genericMapBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
-		Map<?, ?> map = (Map<?, ?>) bf.getBean("map");
-		assertEquals(1, map.size());
-		assertEquals(new Integer(10), map.keySet().iterator().next());
-		assertEquals(new URL("http://localhost:8080"), map.values().iterator().next());
+
+		NamedUrlMap map = bf.getBean("map", NamedUrlMap.class);
+		assertThat(map).containsExactly(entry(10, new URL("http://localhost:8080")));
 	}
 
 	@Test
-	public void testGenericallyTypedIntegerBean() {
+	void genericallyTypedIntegerBean() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
+
 		GenericIntegerBean gb = (GenericIntegerBean) bf.getBean("integerBean");
-		assertEquals(new Integer(10), gb.getGenericProperty());
-		assertEquals(new Integer(20), gb.getGenericListProperty().get(0));
-		assertEquals(new Integer(30), gb.getGenericListProperty().get(1));
+		assertThat(gb.getGenericProperty()).isEqualTo(10);
+		assertThat(gb.getGenericListProperty()).containsExactly(20, 30);
 	}
 
 	@Test
-	public void testGenericallyTypedSetOfIntegerBean() {
+	void genericallyTypedSetOfIntegerBean() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
+
 		GenericSetOfIntegerBean gb = (GenericSetOfIntegerBean) bf.getBean("setOfIntegerBean");
-		assertEquals(new Integer(10), gb.getGenericProperty().iterator().next());
-		assertEquals(new Integer(20), gb.getGenericListProperty().get(0).iterator().next());
-		assertEquals(new Integer(30), gb.getGenericListProperty().get(1).iterator().next());
+		assertThat(gb.getGenericProperty()).singleElement().isEqualTo(10);
+		assertThat(gb.getGenericListProperty()).satisfiesExactly(
+				zero -> assertThat(zero).containsExactly(20),
+				first -> assertThat(first).containsExactly(30));
 	}
 
 	@Test
-	public void testSetBean() throws Exception {
-		Assume.group(TestGroup.LONG_RUNNING);
-
+	void setBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
-		UrlSet us = (UrlSet) bf.getBean("setBean");
-		assertEquals(1, us.size());
-		assertEquals(new URL("http://www.springframework.org"), us.iterator().next());
+
+		UrlSet urlSet = bf.getBean("setBean", UrlSet.class);
+		assertThat(urlSet).containsExactly(new URL("https://www.springframework.org"));
 	}
 
 	/**
@@ -670,18 +590,33 @@ public class BeanFactoryGenericsTests {
 	 * <p>See SPR-9493
 	 */
 	@Test
-	public void parameterizedStaticFactoryMethod() {
-		RootBeanDefinition rbd = new RootBeanDefinition(Mockito.class);
-		rbd.setFactoryMethodName("mock");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
+	void parameterizedStaticFactoryMethod() {
+		RootBeanDefinition bd = new RootBeanDefinition(getClass());
+		bd.setFactoryMethodName("createMockitoMock");
+		bd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
 
+		assertRunnableMockFactory(bd);
+	}
+
+	@Test
+	void parameterizedStaticFactoryMethodWithWrappedClassName() {
+		RootBeanDefinition bd = new RootBeanDefinition();
+		bd.setBeanClassName(getClass().getName());
+		bd.setFactoryMethodName("createMockitoMock");
+		// TypedStringValue is used as an equivalent to an XML-defined argument String
+		bd.getConstructorArgumentValues().addGenericArgumentValue(new TypedStringValue(Runnable.class.getName()));
+
+		assertRunnableMockFactory(bd);
+	}
+
+	private void assertRunnableMockFactory(RootBeanDefinition bd) {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.registerBeanDefinition("mock", rbd);
+		bf.registerBeanDefinition("mock", bd);
 
-		assertEquals(Runnable.class, bf.getType("mock"));
-		assertEquals(Runnable.class, bf.getType("mock"));
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).hasSize(1);
 	}
 
 	/**
@@ -696,132 +631,113 @@ public class BeanFactoryGenericsTests {
 	 * <p>See SPR-10411
 	 */
 	@Test
-	public void parameterizedInstanceFactoryMethod() {
+	void parameterizedInstanceFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
-		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
-		bf.registerBeanDefinition("mocksControl", rbd);
+		RootBeanDefinition bd1 = new RootBeanDefinition(MocksControl.class);
+		bf.registerBeanDefinition("mocksControl", bd1);
 
-		rbd = new RootBeanDefinition();
-		rbd.setFactoryBeanName("mocksControl");
-		rbd.setFactoryMethodName("createMock");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
-		bf.registerBeanDefinition("mock", rbd);
+		RootBeanDefinition bd2 = new RootBeanDefinition();
+		bd2.setFactoryBeanName("mocksControl");
+		bd2.setFactoryMethodName("createMock");
+		bd2.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
+		bf.registerBeanDefinition("mock", bd2);
 
-		assertTrue(bf.isTypeMatch("mock", Runnable.class));
-		assertTrue(bf.isTypeMatch("mock", Runnable.class));
-		assertEquals(Runnable.class, bf.getType("mock"));
-		assertEquals(Runnable.class, bf.getType("mock"));
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithNonResolvedClassName() {
+	void parameterizedInstanceFactoryMethodWithNonResolvedClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
-		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
-		bf.registerBeanDefinition("mocksControl", rbd);
+		RootBeanDefinition bd1 = new RootBeanDefinition(MocksControl.class);
+		bf.registerBeanDefinition("mocksControl", bd1);
 
-		rbd = new RootBeanDefinition();
-		rbd.setFactoryBeanName("mocksControl");
-		rbd.setFactoryMethodName("createMock");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class.getName());
-		bf.registerBeanDefinition("mock", rbd);
+		RootBeanDefinition bd2 = new RootBeanDefinition();
+		bd2.setFactoryBeanName("mocksControl");
+		bd2.setFactoryMethodName("createMock");
+		bd2.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class.getName());
+		bf.registerBeanDefinition("mock", bd2);
 
-		assertTrue(bf.isTypeMatch("mock", Runnable.class));
-		assertTrue(bf.isTypeMatch("mock", Runnable.class));
-		assertEquals(Runnable.class, bf.getType("mock"));
-		assertEquals(Runnable.class, bf.getType("mock"));
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithWrappedClassName() {
+	void parameterizedInstanceFactoryMethodWithInvalidClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
-		RootBeanDefinition rbd = new RootBeanDefinition();
-		rbd.setBeanClassName(Mockito.class.getName());
-		rbd.setFactoryMethodName("mock");
-		// TypedStringValue used to be equivalent to an XML-defined argument String
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(new TypedStringValue(Runnable.class.getName()));
-		bf.registerBeanDefinition("mock", rbd);
+		RootBeanDefinition bd1 = new RootBeanDefinition(MocksControl.class);
+		bf.registerBeanDefinition("mocksControl", bd1);
 
-		assertTrue(bf.isTypeMatch("mock", Runnable.class));
-		assertTrue(bf.isTypeMatch("mock", Runnable.class));
-		assertEquals(Runnable.class, bf.getType("mock"));
-		assertEquals(Runnable.class, bf.getType("mock"));
+		RootBeanDefinition rbd2 = new RootBeanDefinition();
+		rbd2.setFactoryBeanName("mocksControl");
+		rbd2.setFactoryMethodName("createMock");
+		rbd2.getConstructorArgumentValues().addGenericArgumentValue("x");
+		bf.registerBeanDefinition("mock", rbd2);
+
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isFalse();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isFalse();
+		assertThat(bf.getType("mock")).isNull();
+		assertThat(bf.getType("mock")).isNull();
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).isEmpty();
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithInvalidClassName() {
+	void parameterizedInstanceFactoryMethodWithIndexedArgument() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
-		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
-		bf.registerBeanDefinition("mocksControl", rbd);
+		RootBeanDefinition bd1 = new RootBeanDefinition(MocksControl.class);
+		bf.registerBeanDefinition("mocksControl", bd1);
 
-		rbd = new RootBeanDefinition();
-		rbd.setFactoryBeanName("mocksControl");
-		rbd.setFactoryMethodName("createMock");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue("x");
-		bf.registerBeanDefinition("mock", rbd);
+		RootBeanDefinition bd2 = new RootBeanDefinition();
+		bd2.setFactoryBeanName("mocksControl");
+		bd2.setFactoryMethodName("createMock");
+		bd2.getConstructorArgumentValues().addIndexedArgumentValue(0, Runnable.class);
+		bf.registerBeanDefinition("mock", bd2);
 
-		assertFalse(bf.isTypeMatch("mock", Runnable.class));
-		assertFalse(bf.isTypeMatch("mock", Runnable.class));
-		assertNull(bf.getType("mock"));
-		assertNull(bf.getType("mock"));
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(0, beans.size());
-	}
-
-	@Test
-	public void parameterizedInstanceFactoryMethodWithIndexedArgument() {
-		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-
-		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
-		bf.registerBeanDefinition("mocksControl", rbd);
-
-		rbd = new RootBeanDefinition();
-		rbd.setFactoryBeanName("mocksControl");
-		rbd.setFactoryMethodName("createMock");
-		rbd.getConstructorArgumentValues().addIndexedArgumentValue(0, Runnable.class);
-		bf.registerBeanDefinition("mock", rbd);
-
-		assertTrue(bf.isTypeMatch("mock", Runnable.class));
-		assertTrue(bf.isTypeMatch("mock", Runnable.class));
-		assertEquals(Runnable.class, bf.getType("mock"));
-		assertEquals(Runnable.class, bf.getType("mock"));
-		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test  // SPR-16720
-	public void parameterizedInstanceFactoryMethodWithTempClassLoader() {
+	void parameterizedInstanceFactoryMethodWithTempClassLoader() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setTempClassLoader(new OverridingClassLoader(getClass().getClassLoader()));
 
-		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
-		bf.registerBeanDefinition("mocksControl", rbd);
+		RootBeanDefinition bd1 = new RootBeanDefinition(MocksControl.class);
+		bf.registerBeanDefinition("mocksControl", bd1);
 
-		rbd = new RootBeanDefinition();
-		rbd.setFactoryBeanName("mocksControl");
-		rbd.setFactoryMethodName("createMock");
-		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
-		bf.registerBeanDefinition("mock", rbd);
+		RootBeanDefinition bd2 = new RootBeanDefinition();
+		bd2.setFactoryBeanName("mocksControl");
+		bd2.setFactoryMethodName("createMock");
+		bd2.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
+		bf.registerBeanDefinition("mock", bd2);
 
-		assertTrue(bf.isTypeMatch("mock", Runnable.class));
-		assertTrue(bf.isTypeMatch("mock", Runnable.class));
-		assertEquals(Runnable.class, bf.getType("mock"));
-		assertEquals(Runnable.class, bf.getType("mock"));
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void testGenericMatchingWithBeanNameDifferentiation() {
+	void genericMatchingWithBeanNameDifferentiation() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
 
@@ -831,146 +747,158 @@ public class BeanFactoryGenericsTests {
 				new RootBeanDefinition(NumberBean.class, RootBeanDefinition.AUTOWIRE_CONSTRUCTOR, false));
 
 		NumberBean nb = bf.getBean(NumberBean.class);
-		assertSame(bf.getBean("doubleStore"), nb.getDoubleStore());
-		assertSame(bf.getBean("floatStore"), nb.getFloatStore());
+		assertThat(nb.getDoubleStore()).isSameAs(bf.getBean("doubleStore"));
+		assertThat(nb.getFloatStore()).isSameAs(bf.getBean("floatStore"));
 
 		String[] numberStoreNames = bf.getBeanNamesForType(ResolvableType.forClass(NumberStore.class));
 		String[] doubleStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		String[] floatStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertEquals(2, numberStoreNames.length);
-		assertEquals("doubleStore", numberStoreNames[0]);
-		assertEquals("floatStore", numberStoreNames[1]);
-		assertEquals(0, doubleStoreNames.length);
-		assertEquals(0, floatStoreNames.length);
+		assertThat(numberStoreNames).containsExactly("doubleStore", "floatStore");
+		assertThat(doubleStoreNames).isEmpty();
+		assertThat(floatStoreNames).isEmpty();
 	}
 
-	@Test
-	public void testGenericMatchingWithFullTypeDifferentiation() {
+	@ParameterizedTest
+	@ValueSource(classes = {NumberStoreFactory.class, NumberStoreFactoryBeans.class})
+	void genericMatchingWithFullTypeDifferentiation(Class<?> factoryClass) {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
 
-		RootBeanDefinition bd1 = new RootBeanDefinition(NumberStoreFactory.class);
+		RootBeanDefinition bd1 = new RootBeanDefinition(factoryClass);
 		bd1.setFactoryMethodName("newDoubleStore");
 		bf.registerBeanDefinition("store1", bd1);
-		RootBeanDefinition bd2 = new RootBeanDefinition(NumberStoreFactory.class);
+		RootBeanDefinition bd2 = new RootBeanDefinition(factoryClass);
 		bd2.setFactoryMethodName("newFloatStore");
 		bf.registerBeanDefinition("store2", bd2);
-		bf.registerBeanDefinition("numberBean",
-				new RootBeanDefinition(NumberBean.class, RootBeanDefinition.AUTOWIRE_CONSTRUCTOR, false));
+		RootBeanDefinition bd3 = new RootBeanDefinition(NumberBean.class);
+		bd3.setScope(RootBeanDefinition.SCOPE_PROTOTYPE);
+		bd3.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
+		bf.registerBeanDefinition("numberBean", bd3);
 
+		NumberStore<?> store1 = bf.getBean("store1", NumberStore.class);
+		NumberStore<?> store2 = bf.getBean("store2", NumberStore.class);
 		NumberBean nb = bf.getBean(NumberBean.class);
-		assertSame(bf.getBean("store1"), nb.getDoubleStore());
-		assertSame(bf.getBean("store2"), nb.getFloatStore());
+		assertThat(nb.getDoubleStore()).isSameAs(store1);
+		assertThat(nb.getFloatStore()).isSameAs(store2);
+		nb = bf.getBean(NumberBean.class);
+		assertThat(nb.getDoubleStore()).isSameAs(store1);
+		assertThat(nb.getFloatStore()).isSameAs(store2);
 
 		String[] numberStoreNames = bf.getBeanNamesForType(ResolvableType.forClass(NumberStore.class));
 		String[] doubleStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		String[] floatStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertEquals(2, numberStoreNames.length);
-		assertEquals("store1", numberStoreNames[0]);
-		assertEquals("store2", numberStoreNames[1]);
-		assertEquals(1, doubleStoreNames.length);
-		assertEquals("store1", doubleStoreNames[0]);
-		assertEquals(1, floatStoreNames.length);
-		assertEquals("store2", floatStoreNames[0]);
+		assertThat(numberStoreNames).containsExactly("store1", "store2");
+		assertThat(doubleStoreNames).containsExactly("store1");
+		assertThat(floatStoreNames).containsExactly("store2");
 
 		ObjectProvider<NumberStore<?>> numberStoreProvider = bf.getBeanProvider(ResolvableType.forClass(NumberStore.class));
 		ObjectProvider<NumberStore<Double>> doubleStoreProvider = bf.getBeanProvider(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		ObjectProvider<NumberStore<Float>> floatStoreProvider = bf.getBeanProvider(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		try {
-			numberStoreProvider.getObject();
-			fail("Should have thrown NoUniqueBeanDefinitionException");
-		}
-		catch (NoUniqueBeanDefinitionException ex) {
-			// expected
-		}
-		try {
-			numberStoreProvider.getIfAvailable();
-			fail("Should have thrown NoUniqueBeanDefinitionException");
-		}
-		catch (NoUniqueBeanDefinitionException ex) {
-			// expected
-		}
-		assertNull(numberStoreProvider.getIfUnique());
-		assertSame(bf.getBean("store1"), doubleStoreProvider.getObject());
-		assertSame(bf.getBean("store1"), doubleStoreProvider.getIfAvailable());
-		assertSame(bf.getBean("store1"), doubleStoreProvider.getIfUnique());
-		assertSame(bf.getBean("store2"), floatStoreProvider.getObject());
-		assertSame(bf.getBean("store2"), floatStoreProvider.getIfAvailable());
-		assertSame(bf.getBean("store2"), floatStoreProvider.getIfUnique());
+		assertThatExceptionOfType(NoUniqueBeanDefinitionException.class).isThrownBy(numberStoreProvider::getObject);
+		assertThatExceptionOfType(NoUniqueBeanDefinitionException.class).isThrownBy(numberStoreProvider::getIfAvailable);
+		assertThat(numberStoreProvider.getIfUnique()).isNull();
+		assertThat(doubleStoreProvider.getObject()).isSameAs(store1);
+		assertThat(doubleStoreProvider.getIfAvailable()).isSameAs(store1);
+		assertThat(doubleStoreProvider.getIfUnique()).isSameAs(store1);
+		assertThat(floatStoreProvider.getObject()).isSameAs(store2);
+		assertThat(floatStoreProvider.getIfAvailable()).isSameAs(store2);
+		assertThat(floatStoreProvider.getIfUnique()).isSameAs(store2);
 
 		List<NumberStore<?>> resolved = new ArrayList<>();
 		for (NumberStore<?> instance : numberStoreProvider) {
 			resolved.add(instance);
 		}
-		assertEquals(2, resolved.size());
-		assertSame(bf.getBean("store1"), resolved.get(0));
-		assertSame(bf.getBean("store2"), resolved.get(1));
-
-		resolved = numberStoreProvider.stream().collect(Collectors.toList());
-		assertEquals(2, resolved.size());
-		assertSame(bf.getBean("store1"), resolved.get(0));
-		assertSame(bf.getBean("store2"), resolved.get(1));
-
-		resolved = numberStoreProvider.orderedStream().collect(Collectors.toList());
-		assertEquals(2, resolved.size());
-		assertSame(bf.getBean("store2"), resolved.get(0));
-		assertSame(bf.getBean("store1"), resolved.get(1));
+		assertThat(resolved).containsExactly(store1, store2);
+		assertThat(numberStoreProvider.stream()).containsExactly(store1, store2);
+		assertThat(numberStoreProvider.orderedStream()).containsExactly(store2, store1);
 
 		resolved = new ArrayList<>();
 		for (NumberStore<Double> instance : doubleStoreProvider) {
 			resolved.add(instance);
 		}
-		assertEquals(1, resolved.size());
-		assertTrue(resolved.contains(bf.getBean("store1")));
-
-		resolved = doubleStoreProvider.stream().collect(Collectors.toList());
-		assertEquals(1, resolved.size());
-		assertTrue(resolved.contains(bf.getBean("store1")));
-
-		resolved = doubleStoreProvider.orderedStream().collect(Collectors.toList());
-		assertEquals(1, resolved.size());
-		assertTrue(resolved.contains(bf.getBean("store1")));
+		assertThat(resolved).containsExactly(store1);
+		assertThat(doubleStoreProvider.stream()).singleElement().isEqualTo(store1);
+		assertThat(doubleStoreProvider.orderedStream()).singleElement().isEqualTo(store1);
 
 		resolved = new ArrayList<>();
 		for (NumberStore<Float> instance : floatStoreProvider) {
 			resolved.add(instance);
 		}
-		assertEquals(1, resolved.size());
-		assertTrue(resolved.contains(bf.getBean("store2")));
-
-		resolved = floatStoreProvider.stream().collect(Collectors.toList());
-		assertEquals(1, resolved.size());
-		assertTrue(resolved.contains(bf.getBean("store2")));
-
-		resolved = floatStoreProvider.orderedStream().collect(Collectors.toList());
-		assertEquals(1, resolved.size());
-		assertTrue(resolved.contains(bf.getBean("store2")));
+		assertThat(resolved).containsExactly(store2);
+		assertThat(floatStoreProvider.stream()).singleElement().isEqualTo(store2);
+		assertThat(floatStoreProvider.orderedStream()).singleElement().isEqualTo(store2);
 	}
 
-	@Test
-	public void testGenericMatchingWithUnresolvedOrderedStream() {
+	@ParameterizedTest
+	@ValueSource(classes = {NumberStoreFactory.class, NumberStoreFactoryBeans.class})
+	void genericMatchingWithUnresolvedOrderedStream(Class<?> factoryClass) {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
 
-		RootBeanDefinition bd1 = new RootBeanDefinition(NumberStoreFactory.class);
+		RootBeanDefinition bd1 = new RootBeanDefinition(factoryClass);
 		bd1.setFactoryMethodName("newDoubleStore");
 		bf.registerBeanDefinition("store1", bd1);
-		RootBeanDefinition bd2 = new RootBeanDefinition(NumberStoreFactory.class);
+		RootBeanDefinition bd2 = new RootBeanDefinition(factoryClass);
 		bd2.setFactoryMethodName("newFloatStore");
 		bf.registerBeanDefinition("store2", bd2);
 
 		ObjectProvider<NumberStore<?>> numberStoreProvider = bf.getBeanProvider(ResolvableType.forClass(NumberStore.class));
-		List<NumberStore<?>> resolved = numberStoreProvider.orderedStream().collect(Collectors.toList());
-		assertEquals(2, resolved.size());
-		assertSame(bf.getBean("store2"), resolved.get(0));
-		assertSame(bf.getBean("store1"), resolved.get(1));
+		assertThat(numberStoreProvider.orderedStream()).containsExactly(
+				bf.getBean("store2", NumberStore.class), bf.getBean("store1", NumberStore.class));
+	}
+
+	@Test  // gh-32489
+	void genericMatchingAgainstFactoryBeanClass() {
+		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
+		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
+
+		RootBeanDefinition bd = new RootBeanDefinition(MyFactoryBean.class);
+		bd.setTargetType(ResolvableType.forClassWithGenerics(MyFactoryBean.class, String.class));
+		bf.registerBeanDefinition("myFactoryBean", bd);
+		bf.registerBeanDefinition("myFactoryBeanHolder",
+				new RootBeanDefinition(MyFactoryBeanHolder.class, AbstractBeanDefinition.AUTOWIRE_CONSTRUCTOR, false));
+
+		assertThat(bf.getBean(MyFactoryBeanHolder.class).factoryBeans).containsOnly(bf.getBean(MyFactoryBean.class));
+		assertThat(bf.getBeanProvider(MyGenericInterfaceForFactoryBeans.class)).containsOnly(bf.getBean(MyFactoryBean.class));
+		assertThat(bf.getBeanProvider(bd.getResolvableType())).containsOnly(bf.getBean(MyFactoryBean.class));
+	}
+
+	@Test  // gh-32489
+	void genericMatchingAgainstLazyFactoryBeanClass() {
+		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
+		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
+
+		RootBeanDefinition bd = new RootBeanDefinition(MyFactoryBean.class);
+		// Replicate org.springframework.data.repository.config.RepositoryConfigurationDelegate#registerRepositoriesIn
+		// behavior of setting targetType, required to hit other branch in
+		// org.springframework.beans.factory.support.GenericTypeAwareAutowireCandidateResolver.checkGenericTypeMatch
+		bd.setTargetType(ResolvableType.forClassWithGenerics(MyFactoryBean.class, String.class));
+		bd.setLazyInit(true);
+		bf.registerBeanDefinition("myFactoryBean", bd);
+		bf.registerBeanDefinition("myFactoryBeanHolder",
+				new RootBeanDefinition(MyFactoryBeanHolder.class, AbstractBeanDefinition.AUTOWIRE_CONSTRUCTOR, false));
+
+		assertThat(bf.getBeanProvider(bd.getResolvableType())).containsOnly(bf.getBean(MyFactoryBean.class));
+		assertThat(bf.getBeanProvider(MyGenericInterfaceForFactoryBeans.class)).containsOnly(bf.getBean(MyFactoryBean.class));
+		assertThat(bf.getBean(MyFactoryBeanHolder.class).factoryBeans).containsOnly(bf.getBean(MyFactoryBean.class));
+		assertThat(bf.getBeanProvider(bd.getResolvableType())).containsOnly(bf.getBean(MyFactoryBean.class));
+	}
+
+
+	/**
+	 * Mimics and delegates to {@link Mockito#mock(Class)} -- created here to avoid factory
+	 * method resolution issues caused by the introduction of {@code Mockito.mock(T...)}
+	 * in Mockito 4.10.
+	 */
+	public static <T> T createMockitoMock(Class<T> classToMock) {
+		return Mockito.mock(classToMock);
 	}
 
 
 	@SuppressWarnings("serial")
-	public static class NamedUrlList extends LinkedList<URL> {
+	public static class NamedUrlList extends ArrayList<URL> {
 	}
 
 
@@ -987,9 +915,9 @@ public class BeanFactoryGenericsTests {
 	public static class CollectionDependentBean {
 
 		public CollectionDependentBean(NamedUrlList list, NamedUrlSet set, NamedUrlMap map) {
-			assertEquals(1, list.size());
-			assertEquals(1, set.size());
-			assertEquals(1, map.size());
+			assertThat(list).hasSize(1);
+			assertThat(set).hasSize(1);
+			assertThat(map).hasSize(1);
 		}
 	}
 
@@ -1021,11 +949,8 @@ public class BeanFactoryGenericsTests {
 		@SuppressWarnings("unchecked")
 		public <T> T createMock(Class<T> toMock) {
 			return (T) Proxy.newProxyInstance(BeanFactoryGenericsTests.class.getClassLoader(), new Class<?>[] {toMock},
-					new InvocationHandler() {
-						@Override
-						public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-							throw new UnsupportedOperationException("mocked!");
-						}
+					(proxy, method, args) -> {
+						throw new UnsupportedOperationException("mocked!");
 					});
 		}
 	}
@@ -1074,6 +999,66 @@ public class BeanFactoryGenericsTests {
 		@Order(0)
 		public static NumberStore<Float> newFloatStore() {
 			return new FloatStore();
+		}
+	}
+
+
+	public static class NumberStoreFactoryBeans {
+
+		@Order(1)
+		public static FactoryBean<NumberStore<Double>> newDoubleStore() {
+			return new FactoryBean<>() {
+				@Override
+				public NumberStore<Double> getObject() {
+					return new DoubleStore();
+				}
+				@Override
+				public Class<?> getObjectType() {
+					return DoubleStore.class;
+				}
+			};
+		}
+
+		@Order(0)
+		public static FactoryBean<NumberStore<Float>> newFloatStore() {
+			return new FactoryBean<>() {
+				@Override
+				public NumberStore<Float> getObject() {
+					return new FloatStore();
+				}
+				@Override
+				public Class<?> getObjectType() {
+					return FloatStore.class;
+				}
+			};
+		}
+	}
+
+
+	public interface MyGenericInterfaceForFactoryBeans<T> {
+	}
+
+
+	public static class MyFactoryBean<T extends CharSequence> implements FactoryBean<T>, MyGenericInterfaceForFactoryBeans<T> {
+
+		@Override
+		public T getObject() {
+			throw new UnsupportedOperationException();
+		}
+
+		@Override
+		public Class<?> getObjectType() {
+			return String.class;
+		}
+	}
+
+
+	public static class MyFactoryBeanHolder {
+
+		List<MyGenericInterfaceForFactoryBeans<?>> factoryBeans;  // Requested type is not a FactoryBean type
+
+		public MyFactoryBeanHolder(List<MyGenericInterfaceForFactoryBeans<?>> factoryBeans) {
+			this.factoryBeans = factoryBeans;
 		}
 	}
 
