@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,15 +17,14 @@
 package org.springframework.jmx.export.assembler;
 
 import java.lang.reflect.Method;
-import java.util.Arrays;
 import java.util.Enumeration;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 
-import org.springframework.lang.Nullable;
+import org.jspecify.annotations.Nullable;
+
 import org.springframework.util.StringUtils;
 
 /**
@@ -58,14 +57,12 @@ public class MethodNameBasedMBeanInfoAssembler extends AbstractConfigurableMBean
 	/**
 	 * Stores the set of method names to use for creating the management interface.
 	 */
-	@Nullable
-	private Set<String> managedMethods;
+	private @Nullable Set<String> managedMethods;
 
 	/**
 	 * Stores the mappings of bean keys to an array of method names.
 	 */
-	@Nullable
-	private Map<String, Set<String>> methodMappings;
+	private @Nullable Map<String, Set<String>> methodMappings;
 
 
 	/**
@@ -76,7 +73,7 @@ public class MethodNameBasedMBeanInfoAssembler extends AbstractConfigurableMBean
 	 * @see #setMethodMappings
 	 */
 	public void setManagedMethods(String... methodNames) {
-		this.managedMethods = new HashSet<>(Arrays.asList(methodNames));
+		this.managedMethods = Set.of(methodNames);
 	}
 
 	/**
@@ -91,7 +88,7 @@ public class MethodNameBasedMBeanInfoAssembler extends AbstractConfigurableMBean
 		for (Enumeration<?> en = mappings.keys(); en.hasMoreElements();) {
 			String beanKey = (String) en.nextElement();
 			String[] methodNames = StringUtils.commaDelimitedListToStringArray(mappings.getProperty(beanKey));
-			this.methodMappings.put(beanKey, new HashSet<>(Arrays.asList(methodNames)));
+			this.methodMappings.put(beanKey, Set.of(methodNames));
 		}
 	}
 
