@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,6 +16,7 @@
 
 package org.springframework.jmx.export;
 
+import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -23,9 +24,10 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Stream;
+
 import javax.management.Attribute;
 import javax.management.InstanceNotFoundException;
-import javax.management.JMException;
 import javax.management.MBeanServer;
 import javax.management.MalformedObjectNameException;
 import javax.management.Notification;
@@ -34,17 +36,18 @@ import javax.management.ObjectInstance;
 import javax.management.ObjectName;
 import javax.management.modelmbean.ModelMBeanInfo;
 
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.aop.framework.ProxyFactory;
+import org.springframework.aop.testfixture.interceptor.NopInterceptor;
 import org.springframework.beans.factory.FactoryBean;
 import org.springframework.beans.factory.support.BeanDefinitionBuilder;
 import org.springframework.beans.factory.support.DefaultListableBeanFactory;
 import org.springframework.beans.factory.support.RootBeanDefinition;
+import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.support.ClassPathXmlApplicationContext;
+import org.springframework.context.testfixture.jmx.export.Person;
 import org.springframework.jmx.AbstractMBeanServerTests;
 import org.springframework.jmx.IJmxTestBean;
 import org.springframework.jmx.JmxTestBean;
@@ -54,13 +57,16 @@ import org.springframework.jmx.export.assembler.SimpleReflectiveMBeanInfoAssembl
 import org.springframework.jmx.export.naming.SelfNaming;
 import org.springframework.jmx.support.ObjectNameManager;
 import org.springframework.jmx.support.RegistrationPolicy;
-import org.springframework.tests.aop.interceptor.NopInterceptor;
-import org.springframework.tests.sample.beans.TestBean;
+import org.springframework.util.ReflectionUtils;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.assertThatNoException;
+import static org.assertj.core.api.Assertions.assertThatRuntimeException;
 
 /**
- * Integration tests for the {@link MBeanExporter} class.
+ * Integration tests for {@link MBeanExporter}.
  *
  * @author Rob Harrop
  * @author Juergen Hoeller
@@ -70,53 +76,42 @@ import static org.junit.Assert.*;
  * @author Sam Brannen
  * @author Stephane Nicoll
  */
-public class MBeanExporterTests extends AbstractMBeanServerTests {
-
-	@Rule
-	public final ExpectedException thrown = ExpectedException.none();
+class MBeanExporterTests extends AbstractMBeanServerTests {
 
 	private static final String OBJECT_NAME = "spring:test=jmxMBeanAdaptor";
 
+	private final MBeanExporter exporter = new MBeanExporter();
+
 
 	@Test
-	public void testRegisterNullNotificationListenerType() throws Exception {
+	void registerNullNotificationListenerType() {
 		Map<String, NotificationListener> listeners = new HashMap<>();
 		// put null in as a value...
 		listeners.put("*", null);
 		MBeanExporter exporter = new MBeanExporter();
 
-		thrown.expect(IllegalArgumentException.class);
-		exporter.setNotificationListenerMappings(listeners);
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setNotificationListenerMappings(listeners));
 	}
 
 	@Test
-	public void testRegisterNotificationListenerForNonExistentMBean() throws Exception {
-		Map<String, NotificationListener> listeners = new HashMap<>();
-		NotificationListener dummyListener = new NotificationListener() {
-			@Override
-			public void handleNotification(Notification notification, Object handback) {
-				throw new UnsupportedOperationException();
-			}
+	void registerNotificationListenerForNonExistentMBean() {
+		NotificationListener dummyListener = (notification, handback) -> {
+			throw new UnsupportedOperationException();
 		};
 		// the MBean with the supplied object name does not exist...
-		listeners.put("spring:type=Test", dummyListener);
-		MBeanExporter exporter = new MBeanExporter();
+		Map<String, NotificationListener> listeners = Map.of("spring:type=Test", dummyListener);
 		exporter.setBeans(getBeanMap());
 		exporter.setServer(server);
 		exporter.setNotificationListenerMappings(listeners);
-		try {
-			start(exporter);
-			fail("Must have thrown an MBeanExportException when registering a " +
-					"NotificationListener on a non-existent MBean.");
-		}
-		catch (MBeanExportException expected) {
-			assertTrue(expected.contains(InstanceNotFoundException.class));
-		}
+		assertThatExceptionOfType(MBeanExportException.class)
+				.as("NotificationListener on a non-existent MBean")
+				.isThrownBy(() -> start(exporter))
+				.withCauseExactlyInstanceOf(InstanceNotFoundException.class);
 	}
 
 	@Test
-	public void testWithSuppliedMBeanServer() throws Exception {
-		MBeanExporter exporter = new MBeanExporter();
+	void withSuppliedMBeanServer() throws Exception {
 		exporter.setBeans(getBeanMap());
 		exporter.setServer(server);
 		try {
@@ -130,13 +125,11 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	public void testUserCreatedMBeanRegWithDynamicMBean() throws Exception {
-		Map<String, Object> map = new HashMap<>();
-		map.put("spring:name=dynBean", new TestDynamicMBean());
+	void userCreatedMBeanRegWithDynamicMBean() throws Exception {
+		Map<String, Object> map = Map.of("spring:name=dynBean", new TestDynamicMBean());
 
 		InvokeDetectAssembler asm = new InvokeDetectAssembler();
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(server);
 		exporter.setBeans(map);
 		exporter.setAssembler(asm);
@@ -144,8 +137,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		try {
 			start(exporter);
 			Object name = server.getAttribute(ObjectNameManager.getInstance("spring:name=dynBean"), "Name");
-			assertEquals("The name attribute is incorrect", "Rob Harrop", name);
-			assertFalse("Assembler should not have been invoked", asm.invoked);
+			assertThat(name).as("The name attribute is incorrect").isEqualTo("Rob Harrop");
+			assertThat(asm.invoked).as("Assembler should not have been invoked").isFalse();
 		}
 		finally {
 			exporter.destroy();
@@ -153,79 +146,62 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	public void testAutodetectMBeans() throws Exception {
-		ConfigurableApplicationContext ctx = load("autodetectMBeans.xml");
-		try {
+	void autodetectMBeans() throws Exception {
+		try (ConfigurableApplicationContext ctx = load("autodetectMBeans.xml")) {
 			ctx.getBean("exporter");
 			MBeanServer server = ctx.getBean("server", MBeanServer.class);
 			ObjectInstance instance = server.getObjectInstance(ObjectNameManager.getInstance("spring:mbean=true"));
-			assertNotNull(instance);
+			assertThat(instance).isNotNull();
 			instance = server.getObjectInstance(ObjectNameManager.getInstance("spring:mbean2=true"));
-			assertNotNull(instance);
+			assertThat(instance).isNotNull();
 			instance = server.getObjectInstance(ObjectNameManager.getInstance("spring:mbean3=true"));
-			assertNotNull(instance);
-		}
-		finally {
-			ctx.close();
+			assertThat(instance).isNotNull();
 		}
 	}
 
 	@Test
-	public void testAutodetectWithExclude() throws Exception {
-		ConfigurableApplicationContext ctx = load("autodetectMBeans.xml");
-		try {
+	void autodetectWithExclude() throws Exception {
+		try (ConfigurableApplicationContext ctx = load("autodetectMBeans.xml")) {
 			ctx.getBean("exporter");
 			MBeanServer server = ctx.getBean("server", MBeanServer.class);
 			ObjectInstance instance = server.getObjectInstance(ObjectNameManager.getInstance("spring:mbean=true"));
-			assertNotNull(instance);
+			assertThat(instance).isNotNull();
 
-			thrown.expect(InstanceNotFoundException.class);
-			server.getObjectInstance(ObjectNameManager.getInstance("spring:mbean=false"));
-		}
-		finally {
-			ctx.close();
+			assertThatExceptionOfType(InstanceNotFoundException.class)
+					.isThrownBy(() -> server.getObjectInstance(ObjectNameManager.getInstance("spring:mbean=false")));
 		}
 	}
 
 	@Test
-	public void testAutodetectLazyMBeans() throws Exception {
-		ConfigurableApplicationContext ctx = load("autodetectLazyMBeans.xml");
-		try {
+	void autodetectLazyMBeans() throws Exception {
+		try (ConfigurableApplicationContext ctx = load("autodetectLazyMBeans.xml")) {
 			ctx.getBean("exporter");
 			MBeanServer server = ctx.getBean("server", MBeanServer.class);
 
 			ObjectName oname = ObjectNameManager.getInstance("spring:mbean=true");
-			assertNotNull(server.getObjectInstance(oname));
+			assertThat(server.getObjectInstance(oname)).isNotNull();
 			String name = (String) server.getAttribute(oname, "Name");
-			assertEquals("Invalid name returned", "Rob Harrop", name);
+			assertThat(name).as("Invalid name returned").isEqualTo("Rob Harrop");
 
 			oname = ObjectNameManager.getInstance("spring:mbean=another");
-			assertNotNull(server.getObjectInstance(oname));
+			assertThat(server.getObjectInstance(oname)).isNotNull();
 			name = (String) server.getAttribute(oname, "Name");
-			assertEquals("Invalid name returned", "Juergen Hoeller", name);
-		}
-		finally {
-			ctx.close();
+			assertThat(name).as("Invalid name returned").isEqualTo("Juergen Hoeller");
 		}
 	}
 
 	@Test
-	public void testAutodetectNoMBeans() throws Exception {
-		ConfigurableApplicationContext ctx = load("autodetectNoMBeans.xml");
-		try {
+	void autodetectNoMBeans() {
+		try (ConfigurableApplicationContext ctx = load("autodetectNoMBeans.xml")) {
 			ctx.getBean("exporter");
 		}
-		finally {
-			ctx.close();
-		}
 	}
 
 	@Test
-	public void testWithMBeanExporterListeners() throws Exception {
+	void withMBeanExporterListeners() throws Exception {
 		MockMBeanExporterListener listener1 = new MockMBeanExporterListener();
 		MockMBeanExporterListener listener2 = new MockMBeanExporterListener();
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setBeans(getBeanMap());
 		exporter.setServer(server);
 		exporter.setListeners(listener1, listener2);
@@ -237,7 +213,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	public void testExportJdkProxy() throws Exception {
+	void exportJdkProxy() throws Exception {
 		JmxTestBean bean = new JmxTestBean();
 		bean.setName("Rob Harrop");
 
@@ -249,40 +225,36 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		IJmxTestBean proxy = (IJmxTestBean) factory.getProxy();
 		String name = "bean:mmm=whatever";
 
-		Map<String, Object> beans = new HashMap<>();
-		beans.put(name, proxy);
+		Map<String, Object> beans = Map.of(name, proxy);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(server);
 		exporter.setBeans(beans);
 		exporter.registerBeans();
 
 		ObjectName oname = ObjectName.getInstance(name);
 		Object nameValue = server.getAttribute(oname, "Name");
-		assertEquals("Rob Harrop", nameValue);
+		assertThat(nameValue).isEqualTo("Rob Harrop");
 	}
 
 	@Test
-	public void testSelfNaming() throws Exception {
+	void selfNaming() throws Exception {
 		ObjectName objectName = ObjectNameManager.getInstance(OBJECT_NAME);
 		SelfNamingTestBean testBean = new SelfNamingTestBean();
 		testBean.setObjectName(objectName);
 
-		Map<String, Object> beans = new HashMap<>();
-		beans.put("foo", testBean);
+		Map<String, Object> beans = Map.of("foo", testBean);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(server);
 		exporter.setBeans(beans);
 
 		start(exporter);
 
 		ObjectInstance instance = server.getObjectInstance(objectName);
-		assertNotNull(instance);
+		assertThat(instance).isNotNull();
 	}
 
 	@Test
-	public void testRegisterIgnoreExisting() throws Exception {
+	void registerIgnoreExisting() throws Exception {
 		ObjectName objectName = ObjectNameManager.getInstance(OBJECT_NAME);
 
 		Person preRegistered = new Person();
@@ -295,11 +267,11 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 
 		String objectName2 = "spring:test=equalBean";
 
-		Map<String, Object> beans = new HashMap<>();
-		beans.put(objectName.toString(), springRegistered);
-		beans.put(objectName2, springRegistered);
+		Map<String, Object> beans = Map.of(
+				objectName.toString(), springRegistered,
+				objectName2, springRegistered
+			);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(server);
 		exporter.setBeans(beans);
 		exporter.setRegistrationPolicy(RegistrationPolicy.IGNORE_EXISTING);
@@ -307,16 +279,16 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		start(exporter);
 
 		ObjectInstance instance = server.getObjectInstance(objectName);
-		assertNotNull(instance);
+		assertThat(instance).isNotNull();
 		ObjectInstance instance2 = server.getObjectInstance(new ObjectName(objectName2));
-		assertNotNull(instance2);
+		assertThat(instance2).isNotNull();
 
 		// should still be the first bean with name Rob Harrop
-		assertEquals("Rob Harrop", server.getAttribute(objectName, "Name"));
+		assertThat(server.getAttribute(objectName, "Name")).isEqualTo("Rob Harrop");
 	}
 
 	@Test
-	public void testRegisterReplaceExisting() throws Exception {
+	void registerReplaceExisting() throws Exception {
 		ObjectName objectName = ObjectNameManager.getInstance(OBJECT_NAME);
 
 		Person preRegistered = new Person();
@@ -327,10 +299,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		Person springRegistered = new Person();
 		springRegistered.setName("Sally Greenwood");
 
-		Map<String, Object> beans = new HashMap<>();
-		beans.put(objectName.toString(), springRegistered);
+		Map<String, Object> beans = Map.of(objectName.toString(), springRegistered);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(server);
 		exporter.setBeans(beans);
 		exporter.setRegistrationPolicy(RegistrationPolicy.REPLACE_EXISTING);
@@ -338,14 +308,14 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		start(exporter);
 
 		ObjectInstance instance = server.getObjectInstance(objectName);
-		assertNotNull(instance);
+		assertThat(instance).isNotNull();
 
 		// should still be the new bean with name Sally Greenwood
-		assertEquals("Sally Greenwood", server.getAttribute(objectName, "Name"));
+		assertThat(server.getAttribute(objectName, "Name")).isEqualTo("Sally Greenwood");
 	}
 
 	@Test
-	public void testWithExposeClassLoader() throws Exception {
+	void withExposeClassLoader() throws Exception {
 		String name = "Rob Harrop";
 		String otherName = "Juergen Hoeller";
 
@@ -353,10 +323,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		bean.setName(name);
 		ObjectName objectName = ObjectNameManager.getInstance("spring:type=Test");
 
-		Map<String, Object> beans = new HashMap<>();
-		beans.put(objectName.toString(), bean);
+		Map<String, Object> beans = Map.of(objectName.toString(), bean);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setBeans(beans);
 		exporter.setExposeManagedResourceClassLoader(true);
@@ -364,45 +332,42 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 
 		assertIsRegistered("Bean instance not registered", objectName);
 
-		Object result = server.invoke(objectName, "add", new Object[] {new Integer(2), new Integer(3)}, new String[] {
+		Object result = server.invoke(objectName, "add", new Object[] {2, 3}, new String[] {
 				int.class.getName(), int.class.getName()});
 
-		assertEquals("Incorrect result return from add", result, new Integer(5));
-		assertEquals("Incorrect attribute value", name, server.getAttribute(objectName, "Name"));
+		assertThat(Integer.valueOf(5)).as("Incorrect result return from add").isEqualTo(result);
+		assertThat(server.getAttribute(objectName, "Name")).as("Incorrect attribute value").isEqualTo(name);
 
 		server.setAttribute(objectName, new Attribute("Name", otherName));
-		assertEquals("Incorrect updated name.", otherName, bean.getName());
+		assertThat(bean.getName()).as("Incorrect updated name.").isEqualTo(otherName);
 	}
 
 	@Test
-	public void testBonaFideMBeanIsNotExportedWhenAutodetectIsTotallyTurnedOff() throws Exception {
+	void bonaFideMBeanIsNotExportedWhenAutodetectIsTotallyTurnedOff() {
 		BeanDefinitionBuilder builder = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		factory.registerBeanDefinition("^&_invalidObjectName_(*", builder.getBeanDefinition());
 		String exportedBeanName = "export.me.please";
 		factory.registerSingleton(exportedBeanName, new TestBean());
 
-		MBeanExporter exporter = new MBeanExporter();
-		Map<String, Object> beansToExport = new HashMap<>();
-		beansToExport.put(OBJECT_NAME, exportedBeanName);
+		Map<String, Object> beansToExport = Map.of(OBJECT_NAME, exportedBeanName);
 		exporter.setBeans(beansToExport);
 		exporter.setServer(getServer());
 		exporter.setBeanFactory(factory);
-		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_NONE);
+		exporter.setAutodetect(false);
 		// MBean has a bad ObjectName, so if said MBean is autodetected, an exception will be thrown...
 		start(exporter);
-
 	}
 
 	@Test
-	public void testOnlyBonaFideMBeanIsExportedWhenAutodetectIsMBeanOnly() throws Exception {
+	@SuppressWarnings("deprecation")
+	void onlyBonaFideMBeanIsExportedWhenAutodetectIsMBeanOnly() throws Exception {
 		BeanDefinitionBuilder builder = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		factory.registerBeanDefinition(OBJECT_NAME, builder.getBeanDefinition());
 		String exportedBeanName = "spring:type=TestBean";
 		factory.registerSingleton(exportedBeanName, new TestBean());
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setAssembler(new NamedBeanAutodetectCapableMBeanInfoAssemblerStub(exportedBeanName));
 		exporter.setBeanFactory(factory);
@@ -416,7 +381,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	public void testBonaFideMBeanAndRegularBeanExporterWithAutodetectAll() throws Exception {
+	@SuppressWarnings("deprecation")
+	void bonaFideMBeanAndRegularBeanExporterWithAutodetectAll() throws Exception {
 		BeanDefinitionBuilder builder = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		factory.registerBeanDefinition(OBJECT_NAME, builder.getBeanDefinition());
@@ -425,7 +391,6 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		String notToBeExportedBeanName = "spring:type=NotToBeExported";
 		factory.registerSingleton(notToBeExportedBeanName, new TestBean());
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setAssembler(new NamedBeanAutodetectCapableMBeanInfoAssemblerStub(exportedBeanName));
 		exporter.setBeanFactory(factory);
@@ -440,14 +405,14 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	public void testBonaFideMBeanIsNotExportedWithAutodetectAssembler() throws Exception {
+	@SuppressWarnings("deprecation")
+	void bonaFideMBeanIsNotExportedWithAutodetectAssembler() throws Exception {
 		BeanDefinitionBuilder builder = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		factory.registerBeanDefinition(OBJECT_NAME, builder.getBeanDefinition());
 		String exportedBeanName = "spring:type=TestBean";
 		factory.registerSingleton(exportedBeanName, new TestBean());
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setAssembler(new NamedBeanAutodetectCapableMBeanInfoAssemblerStub(exportedBeanName));
 		exporter.setBeanFactory(factory);
@@ -463,15 +428,14 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	 * Want to ensure that said MBean is not exported twice.
 	 */
 	@Test
-	public void testBonaFideMBeanExplicitlyExportedAndAutodetectionIsOn() throws Exception {
+	@SuppressWarnings("deprecation")
+	void bonaFideMBeanExplicitlyExportedAndAutodetectionIsOn() throws Exception {
 		BeanDefinitionBuilder builder = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		factory.registerBeanDefinition(OBJECT_NAME, builder.getBeanDefinition());
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
-		Map<String, Object> beansToExport = new HashMap<>();
-		beansToExport.put(OBJECT_NAME, OBJECT_NAME);
+		Map<String, Object> beansToExport = Map.of(OBJECT_NAME, OBJECT_NAME);
 		exporter.setBeans(beansToExport);
 		exporter.setAssembler(new NamedBeanAutodetectCapableMBeanInfoAssemblerStub(OBJECT_NAME));
 		exporter.setBeanFactory(factory);
@@ -482,61 +446,112 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	public void testSetAutodetectModeToOutOfRangeNegativeValue() {
-		MBeanExporter exporter = new MBeanExporter();
-		thrown.expect(IllegalArgumentException.class);
-		exporter.setAutodetectMode(-1);
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeToOutOfRangeNegativeValue() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectMode(-1))
+				.withMessage("Only values of autodetect constants allowed");
+		assertThat(exporter.autodetectMode).isNull();
 	}
 
 	@Test
-	public void testSetAutodetectModeToOutOfRangePositiveValue() {
-		MBeanExporter exporter = new MBeanExporter();
-		thrown.expect(IllegalArgumentException.class);
-		exporter.setAutodetectMode(5);
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeToOutOfRangePositiveValue() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectMode(5))
+				.withMessage("Only values of autodetect constants allowed");
+		assertThat(exporter.autodetectMode).isNull();
+	}
+
+	/**
+	 * This test effectively verifies that the internal 'constants' map is properly
+	 * configured for all autodetect constants defined in {@link MBeanExporter}.
+	 */
+	@Test
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeToAllSupportedValues() {
+		streamAutodetectConstants()
+				.map(MBeanExporterTests::getFieldValue)
+				.forEach(mode -> assertThatNoException().isThrownBy(() -> exporter.setAutodetectMode(mode)));
 	}
 
 	@Test
-	public void testSetAutodetectModeNameToAnEmptyString() {
-		MBeanExporter exporter = new MBeanExporter();
-		thrown.expect(IllegalArgumentException.class);
-		exporter.setAutodetectModeName("");
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeToSupportedValue() {
+		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_ASSEMBLER);
+		assertThat(exporter.autodetectMode).isEqualTo(MBeanExporter.AUTODETECT_ASSEMBLER);
 	}
 
 	@Test
-	public void testSetAutodetectModeNameToAWhitespacedString() {
-		MBeanExporter exporter = new MBeanExporter();
-		thrown.expect(IllegalArgumentException.class);
-		exporter.setAutodetectModeName("  \t");
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToNull() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectModeName(null))
+				.withMessage("'constantName' must not be null or blank");
+		assertThat(exporter.autodetectMode).isNull();
 	}
 
 	@Test
-	public void testSetAutodetectModeNameToARubbishValue() {
-		MBeanExporter exporter = new MBeanExporter();
-		thrown.expect(IllegalArgumentException.class);
-		exporter.setAutodetectModeName("That Hansel is... *sssooo* hot right now!");
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToAnEmptyString() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectModeName(""))
+				.withMessage("'constantName' must not be null or blank");
+		assertThat(exporter.autodetectMode).isNull();
 	}
 
 	@Test
-	public void testNotRunningInBeanFactoryAndPassedBeanNameToExport() throws Exception {
-		MBeanExporter exporter = new MBeanExporter();
-		Map<String, Object> beans = new HashMap<>();
-		beans.put(OBJECT_NAME, "beanName");
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToWhitespace() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectModeName("  \t"))
+				.withMessage("'constantName' must not be null or blank");
+		assertThat(exporter.autodetectMode).isNull();
+	}
+
+	@Test
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToBogusValue() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectModeName("Bogus"))
+				.withMessage("Only autodetect constants allowed");
+		assertThat(exporter.autodetectMode).isNull();
+	}
+
+	/**
+	 * This test effectively verifies that the internal 'constants' map is properly
+	 * configured for all autodetect constants defined in {@link MBeanExporter}.
+	 */
+	@Test
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToAllSupportedValues() {
+		streamAutodetectConstants()
+				.map(Field::getName)
+				.forEach(name -> assertThatNoException().isThrownBy(() -> exporter.setAutodetectModeName(name)));
+	}
+
+	@Test
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToSupportedValue() {
+		exporter.setAutodetectModeName("AUTODETECT_ASSEMBLER");
+		assertThat(exporter.autodetectMode).isEqualTo(MBeanExporter.AUTODETECT_ASSEMBLER);
+	}
+
+	@Test
+	void notRunningInBeanFactoryAndPassedBeanNameToExport() {
+		Map<String, Object> beans = Map.of(OBJECT_NAME, "beanName");
 		exporter.setBeans(beans);
-		thrown.expect(MBeanExportException.class);
-		start(exporter);
+		assertThatExceptionOfType(MBeanExportException.class).isThrownBy(() -> start(exporter));
 	}
 
 	@Test
-	public void testNotRunningInBeanFactoryAndAutodetectionIsOn() throws Exception {
-		MBeanExporter exporter = new MBeanExporter();
-		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_ALL);
-		thrown.expect(MBeanExportException.class);
-		start(exporter);
+	void notRunningInBeanFactoryAndAutodetectionIsOn() {
+		exporter.setAutodetect(true);
+		assertThatExceptionOfType(MBeanExportException.class).isThrownBy(() -> start(exporter));
 	}
 
 	@Test  // SPR-2158
-	public void testMBeanIsNotUnregisteredSpuriouslyIfSomeExternalProcessHasUnregisteredMBean() throws Exception {
-		MBeanExporter exporter = new MBeanExporter();
+	void mbeanIsNotUnregisteredSpuriouslyIfSomeExternalProcessHasUnregisteredMBean() throws Exception {
 		exporter.setBeans(getBeanMap());
 		exporter.setServer(this.server);
 		MockMBeanExporterListener listener = new MockMBeanExporterListener();
@@ -547,12 +562,13 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 
 		this.server.unregisterMBean(new ObjectName(OBJECT_NAME));
 		exporter.destroy();
-		assertEquals("Listener should not have been invoked (MBean previously unregistered by external agent)", 0,
-				listener.getUnregistered().size());
+		assertThat(listener.getUnregistered())
+				.as("Listener should not have been invoked (MBean previously unregistered by external agent)")
+				.isEmpty();
 	}
 
 	@Test  // SPR-3302
-	public void testBeanNameCanBeUsedInNotificationListenersMap() throws Exception {
+	void beanNameCanBeUsedInNotificationListenersMap() {
 		String beanName = "charlesDexterWard";
 		BeanDefinitionBuilder testBean = BeanDefinitionBuilder.rootBeanDefinition(JmxTestBean.class);
 
@@ -561,10 +577,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		factory.preInstantiateSingletons();
 		Object testBeanInstance = factory.getBean(beanName);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
-		Map<String, Object> beansToExport = new HashMap<>();
-		beansToExport.put("test:what=ever", testBeanInstance);
+		Map<String, Object> beansToExport = Map.of("test:what=ever", testBeanInstance);
 		exporter.setBeans(beansToExport);
 		exporter.setBeanFactory(factory);
 		StubNotificationListener listener = new StubNotificationListener();
@@ -574,7 +588,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	public void testWildcardCanBeUsedInNotificationListenersMap() throws Exception {
+	void wildcardCanBeUsedInNotificationListenersMap() {
 		String beanName = "charlesDexterWard";
 		BeanDefinitionBuilder testBean = BeanDefinitionBuilder.rootBeanDefinition(JmxTestBean.class);
 
@@ -583,10 +597,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		factory.preInstantiateSingletons();
 		Object testBeanInstance = factory.getBean(beanName);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
-		Map<String, Object> beansToExport = new HashMap<>();
-		beansToExport.put("test:what=ever", testBeanInstance);
+		Map<String, Object> beansToExport = Map.of("test:what=ever", testBeanInstance);
 		exporter.setBeans(beansToExport);
 		exporter.setBeanFactory(factory);
 		StubNotificationListener listener = new StubNotificationListener();
@@ -596,7 +608,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test  // SPR-3625
-	public void testMBeanIsUnregisteredForRuntimeExceptionDuringInitialization() throws Exception {
+	void mbeanIsUnregisteredForRuntimeExceptionDuringInitialization() throws Exception {
 		BeanDefinitionBuilder builder1 = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		BeanDefinitionBuilder builder2 = BeanDefinitionBuilder
 				.rootBeanDefinition(RuntimeExceptionThrowingConstructorBean.class);
@@ -608,20 +620,16 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		factory.registerBeanDefinition(objectName1, builder1.getBeanDefinition());
 		factory.registerBeanDefinition(objectName2, builder2.getBeanDefinition());
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
-		Map<String, Object> beansToExport = new HashMap<>();
-		beansToExport.put(objectName1, objectName1);
-		beansToExport.put(objectName2, objectName2);
+		Map<String, Object> beansToExport = Map.of(
+				objectName1, objectName1,
+				objectName2, objectName2
+			);
 		exporter.setBeans(beansToExport);
 		exporter.setBeanFactory(factory);
 
-		try {
-			start(exporter);
-			fail("Must have failed during creation of RuntimeExceptionThrowingConstructorBean");
-		}
-		catch (RuntimeException expected) {
-		}
+		assertThatRuntimeException().as("failed during creation of RuntimeExceptionThrowingConstructorBean")
+				.isThrownBy(() -> start(exporter));
 
 		assertIsNotRegistered("Must have unregistered all previously registered MBeans due to RuntimeException",
 				ObjectNameManager.getInstance(objectName1));
@@ -630,36 +638,33 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	public void testIgnoreBeanName() throws MalformedObjectNameException {
+	void ignoreBeanName() throws MalformedObjectNameException {
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		String firstBeanName = "spring:type=TestBean";
 		factory.registerSingleton(firstBeanName, new TestBean("test"));
 		String secondBeanName = "spring:type=TestBean2";
 		factory.registerSingleton(secondBeanName, new TestBean("test2"));
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setAssembler(new NamedBeanAutodetectCapableMBeanInfoAssemblerStub(firstBeanName, secondBeanName));
 		exporter.setBeanFactory(factory);
-		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_ALL);
+		exporter.setAutodetect(true);
 		exporter.addExcludedBean(secondBeanName);
 
 		start(exporter);
-		assertIsRegistered("Bean not autodetected in (AUTODETECT_ALL) mode",
-				ObjectNameManager.getInstance(firstBeanName));
-		assertIsNotRegistered("Bean should have been excluded",
-				ObjectNameManager.getInstance(secondBeanName));
+		assertIsRegistered("Bean not autodetected", ObjectNameManager.getInstance(firstBeanName));
+		assertIsNotRegistered("Bean should have been excluded", ObjectNameManager.getInstance(secondBeanName));
 	}
 
 	@Test
-	public void testRegisterFactoryBean() throws MalformedObjectNameException {
+	void registerFactoryBean() throws MalformedObjectNameException {
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
-		factory.registerBeanDefinition("spring:type=FactoryBean", new RootBeanDefinition(ProperSomethingFactoryBean.class));
+		factory.registerBeanDefinition("spring:type=FactoryBean",
+				new RootBeanDefinition(ProperSomethingFactoryBean.class));
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setBeanFactory(factory);
-		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_ALL);
+		exporter.setAutodetect(true);
 
 		start(exporter);
 		assertIsRegistered("Non-null FactoryBean object registered",
@@ -667,14 +672,14 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	public void testIgnoreNullObjectFromFactoryBean() throws MalformedObjectNameException {
+	void ignoreNullObjectFromFactoryBean() throws MalformedObjectNameException {
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
-		factory.registerBeanDefinition("spring:type=FactoryBean", new RootBeanDefinition(NullSomethingFactoryBean.class));
+		factory.registerBeanDefinition("spring:type=FactoryBean",
+				new RootBeanDefinition(NullSomethingFactoryBean.class));
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setBeanFactory(factory);
-		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_ALL);
+		exporter.setAutodetect(true);
 
 		start(exporter);
 		assertIsNotRegistered("Null FactoryBean object not registered",
@@ -686,18 +691,14 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		return new ClassPathXmlApplicationContext(context, getClass());
 	}
 
-	private Map<String, Object> getBeanMap() {
-		Map<String, Object> map = new HashMap<>();
-		map.put(OBJECT_NAME, new JmxTestBean());
-		return map;
+	private static Map<String, Object> getBeanMap() {
+		return Map.of(OBJECT_NAME, new JmxTestBean());
 	}
 
-	private void assertListener(MockMBeanExporterListener listener) throws MalformedObjectNameException {
+	private static void assertListener(MockMBeanExporterListener listener) throws MalformedObjectNameException {
 		ObjectName desired = ObjectNameManager.getInstance(OBJECT_NAME);
-		assertEquals("Incorrect number of registrations", 1, listener.getRegistered().size());
-		assertEquals("Incorrect number of unregistrations", 1, listener.getUnregistered().size());
-		assertEquals("Incorrect ObjectName in register", desired, listener.getRegistered().get(0));
-		assertEquals("Incorrect ObjectName in unregister", desired, listener.getUnregistered().get(0));
+		assertThat(listener.getRegistered()).singleElement().isEqualTo(desired);
+		assertThat(listener.getUnregistered()).singleElement().isEqualTo(desired);
 	}
 
 
@@ -706,9 +707,24 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		private boolean invoked = false;
 
 		@Override
-		public ModelMBeanInfo getMBeanInfo(Object managedResource, String beanKey) throws JMException {
+		public ModelMBeanInfo getMBeanInfo(Object managedResource, String beanKey) {
 			invoked = true;
 			return null;
+		}
+	}
+
+	private static Stream<Field> streamAutodetectConstants() {
+		return Arrays.stream(MBeanExporter.class.getFields())
+				.filter(ReflectionUtils::isPublicStaticFinal)
+				.filter(field -> field.getName().startsWith("AUTODETECT_"));
+	}
+
+	private static Integer getFieldValue(Field field) {
+		try {
+			return (Integer) field.get(null);
+		}
+		catch (Exception ex) {
+			throw new RuntimeException(ex);
 		}
 	}
 
@@ -748,29 +764,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		}
 
 		@Override
-		public ObjectName getObjectName() throws MalformedObjectNameException {
+		public ObjectName getObjectName() {
 			return this.objectName;
-		}
-	}
-
-
-	public static interface PersonMBean {
-
-		String getName();
-	}
-
-
-	public static class Person implements PersonMBean {
-
-		private String name;
-
-		@Override
-		public String getName() {
-			return name;
-		}
-
-		public void setName(String name) {
-			this.name = name;
 		}
 	}
 
