@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2017 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,38 +18,42 @@ package org.springframework.jms.listener.adapter;
 
 import java.io.ByteArrayInputStream;
 import java.io.Serializable;
-import javax.jms.BytesMessage;
-import javax.jms.InvalidDestinationException;
-import javax.jms.JMSException;
-import javax.jms.Message;
-import javax.jms.MessageProducer;
-import javax.jms.ObjectMessage;
-import javax.jms.Queue;
-import javax.jms.QueueSender;
-import javax.jms.QueueSession;
-import javax.jms.Session;
-import javax.jms.TextMessage;
 
-import org.junit.Test;
-import org.mockito.invocation.InvocationOnMock;
+import jakarta.jms.BytesMessage;
+import jakarta.jms.InvalidDestinationException;
+import jakarta.jms.JMSException;
+import jakarta.jms.Message;
+import jakarta.jms.MessageProducer;
+import jakarta.jms.ObjectMessage;
+import jakarta.jms.Queue;
+import jakarta.jms.QueueSender;
+import jakarta.jms.QueueSession;
+import jakarta.jms.Session;
+import jakarta.jms.TextMessage;
+import org.junit.jupiter.api.Test;
 import org.mockito.stubbing.Answer;
 
 import org.springframework.jms.support.converter.MessageConversionException;
 import org.springframework.jms.support.converter.SimpleMessageConverter;
 
-import static org.junit.Assert.*;
-import static org.mockito.BDDMockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.willThrow;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 
 /**
  * @author Rick Evans
  * @author Juergen Hoeller
  * @author Chris Beams
  */
-public class MessageListenerAdapterTests {
+class MessageListenerAdapterTests {
 
 	private static final String TEXT = "I fancy a good cuppa right now";
 
-	private static final Integer NUMBER = new Integer(1);
+	private static final Integer NUMBER = 1;
 
 	private static final SerializableObject OBJECT = new SerializableObject();
 
@@ -59,12 +63,12 @@ public class MessageListenerAdapterTests {
 
 
 	@Test
-	public void testWithMessageContentsDelegateForTextMessage() throws Exception {
-		TextMessage textMessage = mock(TextMessage.class);
+	void testWithMessageContentsDelegateForTextMessage() throws Exception {
+		TextMessage textMessage = mock();
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
 
-		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
+		MessageContentsDelegate delegate = mock();
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(textMessage);
@@ -73,20 +77,17 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageContentsDelegateForBytesMessage() throws Exception {
-		BytesMessage bytesMessage = mock(BytesMessage.class);
+	void testWithMessageContentsDelegateForBytesMessage() throws Exception {
+		BytesMessage bytesMessage = mock();
 		// BytesMessage contents must be unwrapped...
-		given(bytesMessage.getBodyLength()).willReturn(new Long(TEXT.getBytes().length));
-		given(bytesMessage.readBytes(any(byte[].class))).willAnswer(new Answer<Integer>() {
-			@Override
-			public Integer answer(InvocationOnMock invocation) throws Throwable {
-				byte[] bytes = (byte[]) invocation.getArguments()[0];
-				ByteArrayInputStream inputStream = new ByteArrayInputStream(TEXT.getBytes());
-				return inputStream.read(bytes);
-			}
+		given(bytesMessage.getBodyLength()).willReturn(Long.valueOf(TEXT.getBytes().length));
+		given(bytesMessage.readBytes(any(byte[].class))).willAnswer((Answer<Integer>) invocation -> {
+			byte[] bytes = (byte[]) invocation.getArguments()[0];
+			ByteArrayInputStream inputStream = new ByteArrayInputStream(TEXT.getBytes());
+			return inputStream.read(bytes);
 		});
 
-		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
+		MessageContentsDelegate delegate = mock();
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(bytesMessage);
@@ -95,11 +96,11 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageContentsDelegateForObjectMessage() throws Exception {
-		ObjectMessage objectMessage = mock(ObjectMessage.class);
+	void testWithMessageContentsDelegateForObjectMessage() throws Exception {
+		ObjectMessage objectMessage = mock();
 		given(objectMessage.getObject()).willReturn(NUMBER);
 
-		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
+		MessageContentsDelegate delegate = mock();
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(objectMessage);
@@ -108,11 +109,11 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageContentsDelegateForObjectMessageWithPlainObject() throws Exception {
-		ObjectMessage objectMessage = mock(ObjectMessage.class);
+	void testWithMessageContentsDelegateForObjectMessageWithPlainObject() throws Exception {
+		ObjectMessage objectMessage = mock();
 		given(objectMessage.getObject()).willReturn(OBJECT);
 
-		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
+		MessageContentsDelegate delegate = mock();
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		adapter.onMessage(objectMessage);
@@ -121,10 +122,10 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageDelegate() throws Exception {
-		TextMessage textMessage = mock(TextMessage.class);
+	void testWithMessageDelegate() {
+		TextMessage textMessage = mock();
 
-		MessageDelegate delegate = mock(MessageDelegate.class);
+		MessageDelegate delegate = mock();
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
 		// we DON'T want the default SimpleMessageConversion happening...
@@ -135,46 +136,46 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWhenTheAdapterItselfIsTheDelegate() throws Exception {
-		TextMessage textMessage = mock(TextMessage.class);
+	void testWhenTheAdapterItselfIsTheDelegate() throws Exception {
+		TextMessage textMessage = mock();
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
 
 		StubMessageListenerAdapter adapter = new StubMessageListenerAdapter();
 		adapter.onMessage(textMessage);
-		assertTrue(adapter.wasCalled());
+		assertThat(adapter.wasCalled()).isTrue();
 	}
 
 	@Test
-	public void testRainyDayWithNoApplicableHandlingMethods() throws Exception {
-		TextMessage textMessage = mock(TextMessage.class);
+	void testRainyDayWithNoApplicableHandlingMethods() throws Exception {
+		TextMessage textMessage = mock();
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
 
 		StubMessageListenerAdapter adapter = new StubMessageListenerAdapter();
 		adapter.setDefaultListenerMethod("walnutsRock");
 		adapter.onMessage(textMessage);
-		assertFalse(adapter.wasCalled());
+		assertThat(adapter.wasCalled()).isFalse();
 	}
 
 	@Test
-	public void testThatAnExceptionThrownFromTheHandlingMethodIsSimplySwallowedByDefault() throws Exception {
+	void testThatAnExceptionThrownFromTheHandlingMethodIsSimplySwallowedByDefault() {
 		final IllegalArgumentException exception = new IllegalArgumentException();
 
-		TextMessage textMessage = mock(TextMessage.class);
-		MessageDelegate delegate = mock(MessageDelegate.class);
+		TextMessage textMessage = mock();
+		MessageDelegate delegate = mock();
 		willThrow(exception).given(delegate).handleMessage(textMessage);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
 			@Override
 			protected void handleListenerException(Throwable ex) {
-				assertNotNull("The Throwable passed to the handleListenerException(..) method must never be null.", ex);
-				assertTrue("The Throwable passed to the handleListenerException(..) method must be of type [ListenerExecutionFailedException].",
-						ex instanceof ListenerExecutionFailedException);
+				assertThat(ex).as("The Throwable passed to the handleListenerException(..) method must never be null.").isNotNull();
+				boolean condition = ex instanceof ListenerExecutionFailedException;
+				assertThat(condition).as("The Throwable passed to the handleListenerException(..) method must be of type [ListenerExecutionFailedException].").isTrue();
 				ListenerExecutionFailedException lefx = (ListenerExecutionFailedException) ex;
 				Throwable cause = lefx.getCause();
-				assertNotNull("The cause of a ListenerExecutionFailedException must be preserved.", cause);
-				assertSame(exception, cause);
+				assertThat(cause).as("The cause of a ListenerExecutionFailedException must be preserved.").isNotNull();
+				assertThat(cause).isSameAs(exception);
 			}
 		};
 		// we DON'T want the default SimpleMessageConversion happening...
@@ -183,29 +184,29 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testThatTheDefaultMessageConverterisIndeedTheSimpleMessageConverter() throws Exception {
+	void testThatTheDefaultMessageConverterisIndeedTheSimpleMessageConverter() {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
-		assertNotNull("The default [MessageConverter] must never be null.", adapter.getMessageConverter());
-		assertTrue("The default [MessageConverter] must be of the type [SimpleMessageConverter]",
-				adapter.getMessageConverter() instanceof SimpleMessageConverter);
+		assertThat(adapter.getMessageConverter()).as("The default [MessageConverter] must never be null.").isNotNull();
+		boolean condition = adapter.getMessageConverter() instanceof SimpleMessageConverter;
+		assertThat(condition).as("The default [MessageConverter] must be of the type [SimpleMessageConverter]").isTrue();
 	}
 
 	@Test
-	public void testThatWhenNoDelegateIsSuppliedTheDelegateIsAssumedToBeTheMessageListenerAdapterItself() throws Exception {
+	void testThatWhenNoDelegateIsSuppliedTheDelegateIsAssumedToBeTheMessageListenerAdapterItself() {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
-		assertSame(adapter, adapter.getDelegate());
+		assertThat(adapter.getDelegate()).isSameAs(adapter);
 	}
 
 	@Test
-	public void testThatTheDefaultMessageHandlingMethodNameIsTheConstantDefault() throws Exception {
+	void testThatTheDefaultMessageHandlingMethodNameIsTheConstantDefault() {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
-		assertEquals(MessageListenerAdapter.ORIGINAL_DEFAULT_LISTENER_METHOD, adapter.getDefaultListenerMethod());
+		assertThat(adapter.getDefaultListenerMethod()).isEqualTo(MessageListenerAdapter.ORIGINAL_DEFAULT_LISTENER_METHOD);
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegate_DoesNotSendReturnTextMessageIfNoSessionSupplied() throws Exception {
-		TextMessage textMessage = mock(TextMessage.class);
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+	void testWithResponsiveMessageDelegate_DoesNotSendReturnTextMessageIfNoSessionSupplied() {
+		TextMessage textMessage = mock();
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(textMessage)).willReturn(TEXT);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate);
@@ -215,23 +216,23 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateWithDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
-		Queue destination = mock(Queue.class);
-		TextMessage sentTextMessage = mock(TextMessage.class);
+	void testWithResponsiveMessageDelegateWithDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+		Queue destination = mock();
+		TextMessage sentTextMessage = mock();
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(
 				CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(null); // we want to fall back to the default...
 
-		TextMessage responseTextMessage = mock(TextMessage.class);
+		TextMessage responseTextMessage = mock();
 
-		QueueSender queueSender = mock(QueueSender.class);
-		Session session = mock(Session.class);
+		QueueSender queueSender = mock();
+		Session session = mock();
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 		given(session.createProducer(destination)).willReturn(queueSender);
 
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -250,22 +251,22 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
-		Queue destination = mock(Queue.class);
-		TextMessage sentTextMessage = mock(TextMessage.class);
+	void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+		Queue destination = mock();
+		TextMessage sentTextMessage = mock();
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(null);
 		given(sentTextMessage.getJMSMessageID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(destination);
 
-		TextMessage responseTextMessage = mock(TextMessage.class);
-		MessageProducer messageProducer = mock(MessageProducer.class);
-		Session session = mock(Session.class);
+		TextMessage responseTextMessage = mock();
+		MessageProducer messageProducer = mock();
+		Session session = mock();
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 		given(session.createProducer(destination)).willReturn(messageProducer);
 
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -283,18 +284,18 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateNoDefaultDestinationAndNoReplyToDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
-		final TextMessage sentTextMessage = mock(TextMessage.class);
+	void testWithResponsiveMessageDelegateNoDefaultDestinationAndNoReplyToDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+		final TextMessage sentTextMessage = mock();
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(null);
 
-		TextMessage responseTextMessage = mock(TextMessage.class);
-		final QueueSession session = mock(QueueSession.class);
+		TextMessage responseTextMessage = mock();
+		final QueueSession session = mock();
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -303,37 +304,33 @@ public class MessageListenerAdapterTests {
 				return message;
 			}
 		};
-		try {
-			adapter.onMessage(sentTextMessage, session);
-			fail("expected CouldNotSendReplyException with InvalidDestinationException");
-		}
-		catch (ReplyFailureException ex) {
-			assertEquals(InvalidDestinationException.class, ex.getCause().getClass());
-		}
+		assertThatExceptionOfType(ReplyFailureException.class).isThrownBy(() ->
+				adapter.onMessage(sentTextMessage, session))
+			.withCauseExactlyInstanceOf(InvalidDestinationException.class);
 
 		verify(responseTextMessage).setJMSCorrelationID(CORRELATION_ID);
 		verify(delegate).handleMessage(sentTextMessage);
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied_AndSendingThrowsJMSException() throws Exception {
-		Queue destination = mock(Queue.class);
+	void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied_AndSendingThrowsJMSException() throws Exception {
+		Queue destination = mock();
 
-		final TextMessage sentTextMessage = mock(TextMessage.class);
+		final TextMessage sentTextMessage = mock();
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(destination);
 
-		TextMessage responseTextMessage = mock(TextMessage.class);
-		MessageProducer messageProducer = mock(MessageProducer.class);
+		TextMessage responseTextMessage = mock();
+		MessageProducer messageProducer = mock();
 		willThrow(new JMSException("Doe!")).given(messageProducer).send(responseTextMessage);
 
-		final QueueSession session = mock(QueueSession.class);
+		final QueueSession session = mock();
 		given(session.createTextMessage(RESPONSE_TEXT)).willReturn(responseTextMessage);
 		given(session.createProducer(destination)).willReturn(messageProducer);
 
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -342,13 +339,9 @@ public class MessageListenerAdapterTests {
 				return message;
 			}
 		};
-		try {
-			adapter.onMessage(sentTextMessage, session);
-			fail("expected CouldNotSendReplyException with JMSException");
-		}
-		catch (ReplyFailureException ex) {
-			assertEquals(JMSException.class, ex.getCause().getClass());
-		}
+		assertThatExceptionOfType(ReplyFailureException.class).isThrownBy(() ->
+				adapter.onMessage(sentTextMessage, session))
+			.withCauseExactlyInstanceOf(JMSException.class);
 
 		verify(responseTextMessage).setJMSCorrelationID(CORRELATION_ID);
 		verify(messageProducer).close();
@@ -356,11 +349,11 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateDoesNotSendReturnTextMessageWhenSessionSupplied_AndListenerMethodThrowsException() throws Exception {
-		final TextMessage message = mock(TextMessage.class);
-		final QueueSession session = mock(QueueSession.class);
+	void testWithResponsiveMessageDelegateDoesNotSendReturnTextMessageWhenSessionSupplied_AndListenerMethodThrowsException() {
+		final TextMessage message = mock();
+		final QueueSession session = mock();
 
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+		ResponsiveMessageDelegate delegate = mock();
 		willThrow(new IllegalArgumentException("Doe!")).given(delegate).handleMessage(message);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -369,18 +362,15 @@ public class MessageListenerAdapterTests {
 				return message;
 			}
 		};
-		try {
-			adapter.onMessage(message, session);
-			fail("expected ListenerExecutionFailedException");
-		}
-		catch (ListenerExecutionFailedException ex) { /* expected */ }
+		assertThatExceptionOfType(ListenerExecutionFailedException.class).isThrownBy(() ->
+				adapter.onMessage(message, session));
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateWhenReturnTypeIsNotAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
-		final TextMessage sentTextMessage = mock(TextMessage.class);
-		final Session session = mock(Session.class);
-		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
+	void testWithResponsiveMessageDelegateWhenReturnTypeIsNotAJMSMessageAndNoMessageConverterIsSupplied() {
+		final TextMessage sentTextMessage = mock();
+		final Session session = mock();
+		ResponsiveMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(RESPONSE_TEXT);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
@@ -390,31 +380,27 @@ public class MessageListenerAdapterTests {
 			}
 		};
 		adapter.setMessageConverter(null);
-		try {
-			adapter.onMessage(sentTextMessage, session);
-			fail("expected CouldNotSendReplyException with MessageConversionException");
-		}
-		catch (ReplyFailureException ex) {
-			assertEquals(MessageConversionException.class, ex.getCause().getClass());
-		}
+		assertThatExceptionOfType(ReplyFailureException.class).isThrownBy(() ->
+				adapter.onMessage(sentTextMessage, session))
+			.withCauseExactlyInstanceOf(MessageConversionException.class);
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateWhenReturnTypeIsAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
-		Queue destination = mock(Queue.class);
-		final TextMessage sentTextMessage = mock(TextMessage.class);
+	void testWithResponsiveMessageDelegateWhenReturnTypeIsAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
+		Queue destination = mock();
+		final TextMessage sentTextMessage = mock();
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(CORRELATION_ID);
 		// Reply-To is queried when response is being created...
 		given(sentTextMessage.getJMSReplyTo()).willReturn(destination);
 
-		TextMessage responseMessage = mock(TextMessage.class);
-		QueueSender queueSender = mock(QueueSender.class);
+		TextMessage responseMessage = mock();
+		QueueSender queueSender = mock();
 
-		Session session = mock(Session.class);
+		Session session = mock();
 		given(session.createProducer(destination)).willReturn(queueSender);
 
-		ResponsiveJmsTextMessageReturningMessageDelegate delegate = mock(ResponsiveJmsTextMessageReturningMessageDelegate.class);
+		ResponsiveJmsTextMessageReturningMessageDelegate delegate = mock();
 		given(delegate.handleMessage(sentTextMessage)).willReturn(responseMessage);
 
 		final MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
