@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -22,51 +22,51 @@ import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
-import javax.jms.BytesMessage;
-import javax.jms.JMSException;
-import javax.jms.Session;
-import javax.jms.TextMessage;
+import java.util.Objects;
 
 import com.fasterxml.jackson.annotation.JsonView;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.mockito.invocation.InvocationOnMock;
+import jakarta.jms.BytesMessage;
+import jakarta.jms.JMSException;
+import jakarta.jms.Session;
+import jakarta.jms.TextMessage;
+import org.jspecify.annotations.Nullable;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.stubbing.Answer;
 
 import org.springframework.core.MethodParameter;
 
-import static org.junit.Assert.*;
-import static org.mockito.BDDMockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 
 /**
  * @author Arjen Poutsma
  * @author Dave Syer
  * @author Stephane Nicoll
  */
-public class MappingJackson2MessageConverterTests {
+@SuppressWarnings("removal")
+class MappingJackson2MessageConverterTests {
 
-	@Rule
-	public final ExpectedException thrown = ExpectedException.none();
+	private MappingJackson2MessageConverter converter = new MappingJackson2MessageConverter();
 
-	private MappingJackson2MessageConverter converter;
-
-	private Session sessionMock;
+	private Session sessionMock = mock();
 
 
-	@Before
-	public void setUp() throws Exception {
-		sessionMock = mock(Session.class);
-		converter = new MappingJackson2MessageConverter();
+	@BeforeEach
+	void setup() {
 		converter.setEncodingPropertyName("__encoding__");
 		converter.setTypeIdPropertyName("__typeid__");
 	}
 
 
 	@Test
-	public void toBytesMessage() throws Exception {
-		BytesMessage bytesMessageMock = mock(BytesMessage.class);
+	void toBytesMessage() throws Exception {
+		BytesMessage bytesMessageMock = mock();
 		Date toBeMarshalled = new Date();
 
 		given(sessionMock.createBytesMessage()).willReturn(bytesMessageMock);
@@ -79,8 +79,8 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void fromBytesMessage() throws Exception {
-		BytesMessage bytesMessageMock = mock(BytesMessage.class);
+	void fromBytesMessage() throws Exception {
+		BytesMessage bytesMessageMock = mock();
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
 		byte[] bytes = "{\"foo\":\"bar\"}".getBytes();
@@ -88,23 +88,18 @@ public class MappingJackson2MessageConverterTests {
 
 		given(bytesMessageMock.getStringProperty("__typeid__")).willReturn(Object.class.getName());
 		given(bytesMessageMock.propertyExists("__encoding__")).willReturn(false);
-		given(bytesMessageMock.getBodyLength()).willReturn(new Long(bytes.length));
+		given(bytesMessageMock.getBodyLength()).willReturn(Long.valueOf(bytes.length));
 		given(bytesMessageMock.readBytes(any(byte[].class))).willAnswer(
-				new Answer<Integer>() {
-					@Override
-					public Integer answer(InvocationOnMock invocation) throws Throwable {
-						return byteStream.read((byte[]) invocation.getArguments()[0]);
-					}
-				});
+				(Answer<Integer>) invocation -> byteStream.read((byte[]) invocation.getArguments()[0]));
 
 		Object result = converter.fromMessage(bytesMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void toTextMessageWithObject() throws Exception {
+	void toTextMessageWithObject() throws Exception {
 		converter.setTargetType(MessageType.TEXT);
-		TextMessage textMessageMock = mock(TextMessage.class);
+		TextMessage textMessageMock = mock();
 		Date toBeMarshalled = new Date();
 
 		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
@@ -114,9 +109,9 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void toTextMessageWithMap() throws Exception {
+	void toTextMessageWithMap() throws Exception {
 		converter.setTargetType(MessageType.TEXT);
-		TextMessage textMessageMock = mock(TextMessage.class);
+		TextMessage textMessageMock = mock();
 		Map<String, String> toBeMarshalled = new HashMap<>();
 		toBeMarshalled.put("foo", "bar");
 
@@ -127,8 +122,8 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void fromTextMessage() throws Exception {
-		TextMessage textMessageMock = mock(TextMessage.class);
+	void fromTextMessage() throws Exception {
+		TextMessage textMessageMock = mock();
 		MyBean unmarshalled = new MyBean("bar");
 
 		String text = "{\"foo\":\"bar\"}";
@@ -136,12 +131,12 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		MyBean result = (MyBean)converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void fromTextMessageWithUnknownProperty() throws Exception {
-		TextMessage textMessageMock = mock(TextMessage.class);
+	void fromTextMessageWithUnknownProperty() throws Exception {
+		TextMessage textMessageMock = mock();
 		MyBean unmarshalled = new MyBean("bar");
 
 		String text = "{\"foo\":\"bar\", \"unknownProperty\":\"value\"}";
@@ -149,12 +144,12 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		MyBean result = (MyBean)converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void fromTextMessageAsObject() throws Exception {
-		TextMessage textMessageMock = mock(TextMessage.class);
+	void fromTextMessageAsObject() throws Exception {
+		TextMessage textMessageMock = mock();
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
 		String text = "{\"foo\":\"bar\"}";
@@ -162,12 +157,12 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		Object result = converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void fromTextMessageAsMap() throws Exception {
-		TextMessage textMessageMock = mock(TextMessage.class);
+	void fromTextMessageAsMap() throws Exception {
+		TextMessage textMessageMock = mock();
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
 		String text = "{\"foo\":\"bar\"}";
@@ -175,26 +170,26 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		Object result = converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void toTextMessageWithReturnType() throws JMSException, NoSuchMethodException {
-		Method method = this.getClass().getDeclaredMethod("summary");
+	void toTextMessageWithReturnType() throws JMSException, NoSuchMethodException {
+		Method method = getClass().getDeclaredMethod("summary");
 		MethodParameter returnType = new MethodParameter(method, -1);
 		testToTextMessageWithReturnType(returnType);
 		verify(sessionMock).createTextMessage("{\"name\":\"test\"}");
 	}
 
 	@Test
-	public void toTextMessageWithNullReturnType() throws JMSException, NoSuchMethodException {
+	void toTextMessageWithNullReturnType() throws JMSException, NoSuchMethodException {
 		testToTextMessageWithReturnType(null);
 		verify(sessionMock).createTextMessage("{\"name\":\"test\",\"description\":\"lengthy description\"}");
 	}
 
 	@Test
-	public void toTextMessageWithReturnTypeAndNoJsonView() throws JMSException, NoSuchMethodException {
-		Method method = this.getClass().getDeclaredMethod("none");
+	void toTextMessageWithReturnTypeAndNoJsonView() throws JMSException, NoSuchMethodException {
+		Method method = getClass().getDeclaredMethod("none");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
 		testToTextMessageWithReturnType(returnType);
@@ -202,17 +197,17 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void toTextMessageWithReturnTypeAndMultipleJsonViews() throws JMSException, NoSuchMethodException {
-		Method method = this.getClass().getDeclaredMethod("invalid");
+	void toTextMessageWithReturnTypeAndMultipleJsonViews() throws NoSuchMethodException {
+		Method method = getClass().getDeclaredMethod("invalid");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
-		thrown.expect(IllegalArgumentException.class);
-		testToTextMessageWithReturnType(returnType);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				testToTextMessageWithReturnType(returnType));
 	}
 
-	private void testToTextMessageWithReturnType(MethodParameter returnType) throws JMSException, NoSuchMethodException {
+	private void testToTextMessageWithReturnType(MethodParameter returnType) throws JMSException {
 		converter.setTargetType(MessageType.TEXT);
-		TextMessage textMessageMock = mock(TextMessage.class);
+		TextMessage textMessageMock = mock();
 
 		MyAnotherBean bean = new MyAnotherBean("test", "lengthy description");
 		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
@@ -221,9 +216,9 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void toTextMessageWithJsonViewClass() throws JMSException {
+	void toTextMessageWithJsonViewClass() throws JMSException {
 		converter.setTargetType(MessageType.TEXT);
-		TextMessage textMessageMock = mock(TextMessage.class);
+		TextMessage textMessageMock = mock();
 
 		MyAnotherBean bean = new MyAnotherBean("test", "lengthy description");
 		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
@@ -235,9 +230,9 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void toTextMessageWithAnotherJsonViewClass() throws JMSException {
+	void toTextMessageWithAnotherJsonViewClass() throws JMSException {
 		converter.setTargetType(MessageType.TEXT);
-		TextMessage textMessageMock = mock(TextMessage.class);
+		TextMessage textMessageMock = mock();
 
 		MyAnotherBean bean = new MyAnotherBean("test", "lengthy description");
 		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
@@ -263,7 +258,10 @@ public class MappingJackson2MessageConverterTests {
 		return new MyAnotherBean();
 	}
 
+
 	public static class MyBean {
+
+		private String foo;
 
 		public MyBean() {
 		}
@@ -271,8 +269,6 @@ public class MappingJackson2MessageConverterTests {
 		public MyBean(String foo) {
 			this.foo = foo;
 		}
-
-		private String foo;
 
 		public String getFoo() {
 			return foo;
@@ -283,21 +279,15 @@ public class MappingJackson2MessageConverterTests {
 		}
 
 		@Override
-		public boolean equals(Object o) {
+		public boolean equals(@Nullable Object o) {
 			if (this == o) {
 				return true;
 			}
 			if (o == null || getClass() != o.getClass()) {
 				return false;
 			}
-
 			MyBean bean = (MyBean) o;
-
-			if (foo != null ? !foo.equals(bean.foo) : bean.foo != null) {
-				return false;
-			}
-
-			return true;
+			return Objects.equals(this.foo, bean.foo);
 		}
 
 		@Override
@@ -306,9 +296,13 @@ public class MappingJackson2MessageConverterTests {
 		}
 	}
 
-	private interface Summary {};
-	private interface Full extends Summary {};
 
+	private interface Summary {}
+
+	private interface Full extends Summary {}
+
+
+	@SuppressWarnings("unused")
 	private static class MyAnotherBean {
 
 		@JsonView(Summary.class)
