@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,26 +17,26 @@
 package org.springframework.mock.web;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
-import javax.servlet.Filter;
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.Servlet;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
 
-import org.springframework.lang.Nullable;
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.FilterConfig;
+import jakarta.servlet.Servlet;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import org.jspecify.annotations.Nullable;
+
 import org.springframework.util.Assert;
 import org.springframework.util.ObjectUtils;
 
 /**
- * Mock implementation of the {@link javax.servlet.FilterChain} interface.
+ * Mock implementation of the {@link jakarta.servlet.FilterChain} interface.
  *
- * <p>A {@link MockFilterChain} can be configured with one or more filters and a
+ * <p>A {@code MockFilterChain} can be configured with one or more filters and a
  * Servlet to invoke. The first time the chain is called, it invokes all filters
  * and the Servlet, and saves the request and response. Subsequent invocations
  * raise an {@link IllegalStateException} unless {@link #reset()} is called.
@@ -50,30 +50,25 @@ import org.springframework.util.ObjectUtils;
  */
 public class MockFilterChain implements FilterChain {
 
-	@Nullable
-	private ServletRequest request;
+	private @Nullable ServletRequest request;
 
-	@Nullable
-	private ServletResponse response;
+	private @Nullable ServletResponse response;
 
 	private final List<Filter> filters;
 
-	@Nullable
-	private Iterator<Filter> iterator;
+	private @Nullable Iterator<Filter> iterator;
 
 
 	/**
-	 * Register a single do-nothing {@link Filter} implementation. The first
-	 * invocation saves the request and response. Subsequent invocations raise
-	 * an {@link IllegalStateException} unless {@link #reset()} is called.
+	 * Create an empty {@code MockFilterChain} without any {@linkplain Filter filters}.
 	 */
 	public MockFilterChain() {
 		this.filters = Collections.emptyList();
 	}
 
 	/**
-	 * Create a FilterChain with a Servlet.
-	 * @param servlet the Servlet to invoke
+	 * Create a {@code MockFilterChain} with a {@link Servlet}.
+	 * @param servlet the {@code Servlet} to invoke
 	 * @since 3.2
 	 */
 	public MockFilterChain(Servlet servlet) {
@@ -81,9 +76,10 @@ public class MockFilterChain implements FilterChain {
 	}
 
 	/**
-	 * Create a {@code FilterChain} with Filter's and a Servlet.
-	 * @param servlet the {@link Servlet} to invoke in this {@link FilterChain}
-	 * @param filters the {@link Filter}'s to invoke in this {@link FilterChain}
+	 * Create a {@code MockFilterChain} with a {@link Servlet} and {@linkplain Filter
+	 * filters}.
+	 * @param servlet the {@code Servlet} to invoke in this {@code MockFilterChain}
+	 * @param filters the filters to invoke in this {@code MockFilterChain}
 	 * @since 3.2
 	 */
 	public MockFilterChain(Servlet servlet, Filter... filters) {
@@ -94,23 +90,21 @@ public class MockFilterChain implements FilterChain {
 
 	private static List<Filter> initFilterList(Servlet servlet, Filter... filters) {
 		Filter[] allFilters = ObjectUtils.addObjectToArray(filters, new ServletFilterProxy(servlet));
-		return Arrays.asList(allFilters);
+		return List.of(allFilters);
 	}
 
 
 	/**
 	 * Return the request that {@link #doFilter} has been called with.
 	 */
-	@Nullable
-	public ServletRequest getRequest() {
+	public @Nullable ServletRequest getRequest() {
 		return this.request;
 	}
 
 	/**
 	 * Return the response that {@link #doFilter} has been called with.
 	 */
-	@Nullable
-	public ServletResponse getResponse() {
+	public @Nullable ServletResponse getResponse() {
 		return this.response;
 	}
 
@@ -138,7 +132,7 @@ public class MockFilterChain implements FilterChain {
 	}
 
 	/**
-	 * Reset the {@link MockFilterChain} allowing it to be invoked again.
+	 * Reset this {@code MockFilterChain} allowing it to be invoked again.
 	 */
 	public void reset() {
 		this.request = null;
