@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,13 +17,13 @@
 package org.springframework.http.codec.protobuf;
 
 import java.io.IOException;
-import java.io.OutputStream;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import com.google.protobuf.Message;
+import org.jspecify.annotations.Nullable;
 import org.reactivestreams.Publisher;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -33,7 +33,7 @@ import org.springframework.core.io.buffer.DataBuffer;
 import org.springframework.core.io.buffer.DataBufferFactory;
 import org.springframework.http.MediaType;
 import org.springframework.http.codec.HttpMessageEncoder;
-import org.springframework.lang.Nullable;
+import org.springframework.util.FastByteArrayOutputStream;
 import org.springframework.util.MimeType;
 
 /**
@@ -47,21 +47,20 @@ import org.springframework.util.MimeType;
  *
  * <p>To generate {@code Message} Java classes, you need to install the {@code protoc} binary.
  *
- * <p>This encoder requires Protobuf 3 or higher, and supports
+ * <p>This encoder requires Protobuf 3.29 or higher, and supports
  * {@code "application/x-protobuf"} and {@code "application/octet-stream"} with the official
  * {@code "com.google.protobuf:protobuf-java"} library.
  *
- * @author Sébastien Deleuze
+ * @author Sebastien Deleuze
  * @since 5.1
  * @see ProtobufDecoder
  */
 public class ProtobufEncoder extends ProtobufCodecSupport implements HttpMessageEncoder<Message> {
 
-	private static final List<MediaType> streamingMediaTypes = MIME_TYPES
-			.stream()
+	private static final List<MediaType> streamingMediaTypes = Arrays.stream(MIME_TYPES)
 			.map(mimeType -> new MediaType(mimeType.getType(), mimeType.getSubtype(),
 					Collections.singletonMap(DELIMITED_KEY, DELIMITED_VALUE)))
-			.collect(Collectors.toList());
+			.toList();
 
 
 	@Override
@@ -73,22 +72,29 @@ public class ProtobufEncoder extends ProtobufCodecSupport implements HttpMessage
 	public Flux<DataBuffer> encode(Publisher<? extends Message> inputStream, DataBufferFactory bufferFactory,
 			ResolvableType elementType, @Nullable MimeType mimeType, @Nullable Map<String, Object> hints) {
 
-		return Flux
-				.from(inputStream)
-				.map(message -> encodeMessage(message, bufferFactory, !(inputStream instanceof Mono)));
+		return Flux.from(inputStream).map(message ->
+				encodeValue(message, bufferFactory, !(inputStream instanceof Mono)));
 	}
 
-	private DataBuffer encodeMessage(Message message, DataBufferFactory bufferFactory, boolean streaming) {
-		DataBuffer buffer = bufferFactory.allocateBuffer();
-		OutputStream outputStream = buffer.asOutputStream();
+	@Override
+	public DataBuffer encodeValue(Message message, DataBufferFactory bufferFactory,
+			ResolvableType valueType, @Nullable MimeType mimeType, @Nullable Map<String, Object> hints) {
+
+		return encodeValue(message, bufferFactory, false);
+	}
+
+	private DataBuffer encodeValue(Message message, DataBufferFactory bufferFactory, boolean delimited) {
+
+		FastByteArrayOutputStream bos = new FastByteArrayOutputStream();
 		try {
-			if (streaming) {
-				message.writeDelimitedTo(outputStream);
+			if (delimited) {
+				message.writeDelimitedTo(bos);
 			}
 			else {
-				message.writeTo(outputStream);
+				message.writeTo(bos);
 			}
-			return buffer;
+			byte[] bytes = bos.toByteArrayUnsafe();
+			return bufferFactory.wrap(bytes);
 		}
 		catch (IOException ex) {
 			throw new IllegalStateException("Unexpected I/O error while writing to data buffer", ex);
