@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,16 +16,18 @@
 
 package org.springframework.web.cors;
 
+import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.function.Consumer;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+
+import org.jspecify.annotations.Nullable;
 
 import org.springframework.http.HttpMethod;
-import org.springframework.lang.Nullable;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
@@ -44,44 +46,46 @@ import org.springframework.util.StringUtils;
  * @author Rossen Stoyanchev
  * @author Juergen Hoeller
  * @author Sam Brannen
+ * @author Ruslan Akhundov
  * @since 4.2
- * @see <a href="http://www.w3.org/TR/cors/">CORS spec</a>
+ * @see <a href="https://www.w3.org/TR/cors/">CORS spec</a>
  */
 public class CorsConfiguration {
 
 	/** Wildcard representing <em>all</em> origins, methods, or headers. */
 	public static final String ALL = "*";
 
-	private static final List<HttpMethod> DEFAULT_METHODS =
-			Collections.unmodifiableList(Arrays.asList(HttpMethod.GET, HttpMethod.HEAD));
+	private static final List<String> ALL_LIST = Collections.singletonList(ALL);
 
-	private static final List<String> DEFAULT_PERMIT_ALL =
-			Collections.unmodifiableList(Arrays.asList(ALL));
+	private static final OriginPattern ALL_PATTERN = new OriginPattern(ALL);
 
-	private static final List<String> DEFAULT_PERMIT_METHODS =
-			Collections.unmodifiableList(Arrays.asList(HttpMethod.GET.name(), HttpMethod.HEAD.name(), HttpMethod.POST.name()));
+	private static final List<OriginPattern> ALL_PATTERN_LIST = Collections.singletonList(ALL_PATTERN);
+
+	private static final List<String> DEFAULT_PERMIT_ALL = Collections.singletonList(ALL);
+
+	private static final List<HttpMethod> DEFAULT_METHODS = List.of(HttpMethod.GET, HttpMethod.HEAD);
+
+	private static final List<String> DEFAULT_PERMIT_METHODS = List.of(HttpMethod.GET.name(),
+			HttpMethod.HEAD.name(), HttpMethod.POST.name());
 
 
-	@Nullable
-	private List<String> allowedOrigins;
+	private @Nullable List<String> allowedOrigins;
 
-	@Nullable
-	private List<String> allowedMethods;
+	private @Nullable List<OriginPattern> allowedOriginPatterns;
 
-	@Nullable
-	private List<HttpMethod> resolvedMethods = DEFAULT_METHODS;
+	private @Nullable List<String> allowedMethods;
 
-	@Nullable
-	private List<String> allowedHeaders;
+	private @Nullable List<HttpMethod> resolvedMethods = DEFAULT_METHODS;
 
-	@Nullable
-	private List<String> exposedHeaders;
+	private @Nullable List<String> allowedHeaders;
 
-	@Nullable
-	private Boolean allowCredentials;
+	private @Nullable List<String> exposedHeaders;
 
-	@Nullable
-	private Long maxAge;
+	private @Nullable Boolean allowCredentials;
+
+	private @Nullable Boolean allowPrivateNetwork;
+
+	private @Nullable Long maxAge;
 
 
 	/**
@@ -98,60 +102,192 @@ public class CorsConfiguration {
 	 */
 	public CorsConfiguration(CorsConfiguration other) {
 		this.allowedOrigins = other.allowedOrigins;
+		this.allowedOriginPatterns = other.allowedOriginPatterns;
 		this.allowedMethods = other.allowedMethods;
 		this.resolvedMethods = other.resolvedMethods;
 		this.allowedHeaders = other.allowedHeaders;
 		this.exposedHeaders = other.exposedHeaders;
 		this.allowCredentials = other.allowCredentials;
+		this.allowPrivateNetwork = other.allowPrivateNetwork;
 		this.maxAge = other.maxAge;
 	}
 
 
 	/**
-	 * Set the origins to allow, e.g. {@code "http://domain1.com"}.
-	 * <p>The special value {@code "*"} allows all domains.
-	 * <p>By default this is not set.
+	 * A list of origins for which cross-origin requests are allowed where each
+	 * value may be one of the following:
+	 * <ul>
+	 * <li>a specific domain, for example, {@code "https://domain1.com"}
+	 * <li>comma-delimited list of specific domains, for example,
+	 * {@code "https://a1.com,https://a2.com"}; this is convenient when a value
+	 * is resolved through a property placeholder, for example, {@code "${origin}"};
+	 * note that such placeholders must be resolved externally.
+	 * <li>the CORS defined special value {@code "*"} for all origins
+	 * </ul>
+	 * <p>For matched pre-flight and actual requests the
+	 * {@code Access-Control-Allow-Origin} response header is set either to the
+	 * matched domain value or to {@code "*"}. Keep in mind however that the
+	 * CORS spec does not allow {@code "*"} when {@link #setAllowCredentials
+	 * allowCredentials} is set to {@code true}, and does not recommend {@code "*"}
+	 * when {@link #setAllowPrivateNetwork allowPrivateNetwork} is set to {@code true}.
+	 * As a consequence, those combinations are rejected in favor of using
+	 * {@link #setAllowedOriginPatterns allowedOriginPatterns} instead.
+	 * <p>By default this is not set which means that no origins are allowed.
+	 * However, an instance of this class is often initialized further, for example, for
+	 * {@code @CrossOrigin}, via {@link #applyPermitDefaultValues()}.
 	 */
-	public void setAllowedOrigins(@Nullable List<String> allowedOrigins) {
-		this.allowedOrigins = (allowedOrigins != null ? new ArrayList<>(allowedOrigins) : null);
+	public void setAllowedOrigins(@Nullable List<String> origins) {
+		if (origins == null) {
+			this.allowedOrigins = null;
+		}
+		else {
+			this.allowedOrigins = new ArrayList<>(origins.size());
+			for (String origin : origins) {
+				addAllowedOrigin(origin);
+			}
+		}
+	}
+
+	private String trimTrailingSlash(String origin) {
+		return (origin.endsWith("/") ? origin.substring(0, origin.length() - 1) : origin);
 	}
 
 	/**
 	 * Return the configured origins to allow, or {@code null} if none.
-	 * @see #addAllowedOrigin(String)
-	 * @see #setAllowedOrigins(List)
 	 */
-	@Nullable
-	public List<String> getAllowedOrigins() {
+	public @Nullable List<String> getAllowedOrigins() {
 		return this.allowedOrigins;
 	}
 
 	/**
-	 * Add an origin to allow.
+	 * Variant of {@link #setAllowedOrigins} for adding one origin at a time.
 	 */
-	public void addAllowedOrigin(String origin) {
+	@SuppressWarnings("NullAway") // Lambda
+	public void addAllowedOrigin(@Nullable String origin) {
+		if (origin == null) {
+			return;
+		}
 		if (this.allowedOrigins == null) {
 			this.allowedOrigins = new ArrayList<>(4);
 		}
-		else if (this.allowedOrigins == DEFAULT_PERMIT_ALL) {
+		else if (this.allowedOrigins == DEFAULT_PERMIT_ALL && CollectionUtils.isEmpty(this.allowedOriginPatterns)) {
 			setAllowedOrigins(DEFAULT_PERMIT_ALL);
 		}
-		this.allowedOrigins.add(origin);
+		parseCommaDelimitedOrigin(origin, value -> {
+			value = trimTrailingSlash(value);
+			this.allowedOrigins.add(value);
+		});
 	}
 
 	/**
-	 * Set the HTTP methods to allow, e.g. {@code "GET"}, {@code "POST"},
-	 * {@code "PUT"}, etc.
-	 * <p>The special value {@code "*"} allows all methods.
-	 * <p>If not set, only {@code "GET"} and {@code "HEAD"} are allowed.
+	 * Alternative to {@link #setAllowedOrigins} that supports more flexible
+	 * origins patterns with "*" anywhere in the host name in addition to port
+	 * lists. Examples:
+	 * <ul>
+	 * <li>{@literal https://*.domain1.com} -- domains ending with domain1.com
+	 * <li>{@literal https://*.domain1.com:[8080,8081]} -- domains ending with
+	 * domain1.com on port 8080 or port 8081
+	 * <li>{@literal https://*.domain1.com:[*]} -- domains ending with
+	 * domain1.com on any port, including the default port
+	 * <li>comma-delimited list of patters, for example,
+	 * {@code "https://*.a1.com,https://*.a2.com"}; this is convenient when a
+	 * value is resolved through a property placeholder, for example, {@code "${origin}"};
+	 * note that such placeholders must be resolved externally.
+	 * </ul>
+	 * <p>In contrast to {@link #setAllowedOrigins(List) allowedOrigins} which
+	 * only supports "*" and cannot be used with {@code allowCredentials} or
+	 * {@code allowPrivateNetwork}, when an {@code allowedOriginPattern} is matched,
+	 * the {@code Access-Control-Allow-Origin} response header is set to the
+	 * matched origin and not to {@code "*"} nor to the pattern.
+	 * Therefore, {@code allowedOriginPatterns} can be used in combination with
+	 * {@link #setAllowCredentials} and {@link #setAllowPrivateNetwork} set to
+	 * {@code true}.
 	 * <p>By default this is not set.
-	 * <p><strong>Note:</strong> CORS checks use values from "Forwarded"
-	 * (<a href="http://tools.ietf.org/html/rfc7239">RFC 7239</a>),
-	 * "X-Forwarded-Host", "X-Forwarded-Port", and "X-Forwarded-Proto" headers,
-	 * if present, in order to reflect the client-originated address.
-	 * Consider using the {@code ForwardedHeaderFilter} in order to choose from a
-	 * central place whether to extract and use, or to discard such headers.
-	 * See the Spring Framework reference for more on this filter.
+	 * @since 5.3
+	 */
+	public CorsConfiguration setAllowedOriginPatterns(@Nullable List<String> allowedOriginPatterns) {
+		if (allowedOriginPatterns == null) {
+			this.allowedOriginPatterns = null;
+		}
+		else {
+			this.allowedOriginPatterns = new ArrayList<>(allowedOriginPatterns.size());
+			for (String patternValue : allowedOriginPatterns) {
+				addAllowedOriginPattern(patternValue);
+			}
+		}
+		return this;
+	}
+
+	/**
+	 * Return the configured origins patterns to allow, or {@code null} if none.
+	 * @since 5.3
+	 */
+	public @Nullable List<String> getAllowedOriginPatterns() {
+		if (this.allowedOriginPatterns == null) {
+			return null;
+		}
+		return this.allowedOriginPatterns.stream()
+				.map(OriginPattern::getDeclaredPattern)
+				.toList();
+	}
+
+	/**
+	 * Variant of {@link #setAllowedOriginPatterns} for adding one origin at a time.
+	 * @since 5.3
+	 */
+	@SuppressWarnings("NullAway") // Lambda
+	public void addAllowedOriginPattern(@Nullable String originPattern) {
+		if (originPattern == null) {
+			return;
+		}
+		if (this.allowedOriginPatterns == null) {
+			this.allowedOriginPatterns = new ArrayList<>(4);
+		}
+		parseCommaDelimitedOrigin(originPattern, value -> {
+			value = trimTrailingSlash(value);
+			this.allowedOriginPatterns.add(new OriginPattern(value));
+			if (this.allowedOrigins == DEFAULT_PERMIT_ALL) {
+				this.allowedOrigins = null;
+			}
+		});
+	}
+
+	private static void parseCommaDelimitedOrigin(String rawValue, Consumer<String> valueConsumer) {
+		if (rawValue.indexOf(',') == -1) {
+			valueConsumer.accept(rawValue);
+			return;
+		}
+		int start = 0;
+		boolean withinPortRange = false;
+		for (int current = 0; current < rawValue.length(); current++) {
+			switch (rawValue.charAt(current)) {
+				case '[' -> withinPortRange = true;
+				case ']' -> withinPortRange = false;
+				case ',' -> {
+					if (!withinPortRange) {
+						String originValue = rawValue.substring(start, current).trim();
+						valueConsumer.accept(originValue);
+						start = current + 1;
+					}
+				}
+			}
+		}
+		if (start < rawValue.length()) {
+			String originValue = rawValue.substring(start).trim();
+			valueConsumer.accept(originValue);
+		}
+	}
+
+	/**
+	 * Set the HTTP methods to allow, for example, {@code "GET"}, {@code "POST"},
+	 * {@code "PUT"}, etc. The special value {@code "*"} allows all methods.
+	 * <p>{@code Access-Control-Allow-Methods} response header is set either
+	 * to the configured method or to {@code "*"}. Keep in mind however that the
+	 * CORS spec does not allow {@code "*"} when {@link #setAllowCredentials
+	 * allowCredentials} is set to {@code true}, that combination is handled
+	 * by copying the method specified in the CORS preflight request.
+	 * <p>If not set, only {@code "GET"} and {@code "HEAD"} are allowed.
+	 * <p>By default, this is not set.
 	 */
 	public void setAllowedMethods(@Nullable List<String> allowedMethods) {
 		this.allowedMethods = (allowedMethods != null ? new ArrayList<>(allowedMethods) : null);
@@ -162,7 +298,7 @@ public class CorsConfiguration {
 					this.resolvedMethods = null;
 					break;
 				}
-				this.resolvedMethods.add(HttpMethod.resolve(method));
+				this.resolvedMethods.add(HttpMethod.valueOf(method));
 			}
 		}
 		else {
@@ -173,24 +309,23 @@ public class CorsConfiguration {
 	/**
 	 * Return the allowed HTTP methods, or {@code null} in which case
 	 * only {@code "GET"} and {@code "HEAD"} allowed.
+	 * @see #setAllowedMethods(List)
 	 * @see #addAllowedMethod(HttpMethod)
 	 * @see #addAllowedMethod(String)
-	 * @see #setAllowedMethods(List)
 	 */
-	@Nullable
-	public List<String> getAllowedMethods() {
+	public @Nullable List<String> getAllowedMethods() {
 		return this.allowedMethods;
 	}
 
 	/**
-	 * Add an HTTP method to allow.
+	 * Variant of {@link #setAllowedMethods} for adding one allowed method at a time.
 	 */
 	public void addAllowedMethod(HttpMethod method) {
 		addAllowedMethod(method.name());
 	}
 
 	/**
-	 * Add an HTTP method to allow.
+	 * Variant of {@link #setAllowedMethods} for adding one allowed method at a time.
 	 */
 	public void addAllowedMethod(String method) {
 		if (StringUtils.hasText(method)) {
@@ -206,16 +341,20 @@ public class CorsConfiguration {
 				this.resolvedMethods = null;
 			}
 			else if (this.resolvedMethods != null) {
-				this.resolvedMethods.add(HttpMethod.resolve(method));
+				this.resolvedMethods.add(HttpMethod.valueOf(method));
 			}
 		}
 	}
 
 	/**
 	 * Set the list of headers that a pre-flight request can list as allowed
-	 * for use during an actual request.
-	 * <p>The special value {@code "*"} allows actual requests to send any
-	 * header.
+	 * for use during an actual request. The special value {@code "*"} allows
+	 * actual requests to send any header.
+	 * <p>{@code Access-Control-Allow-Headers} response header is set either
+	 * to the configured list of headers or to {@code "*"}. Keep in mind however
+	 * that the CORS spec does not allow {@code "*"} when {@link #setAllowCredentials
+	 * allowCredentials} is set to {@code true}, that combination is handled by
+	 * copying the headers specified in the CORS preflight request.
 	 * <p>A header name is not required to be listed if it is one of:
 	 * {@code Cache-Control}, {@code Content-Language}, {@code Expires},
 	 * {@code Last-Modified}, or {@code Pragma}.
@@ -230,13 +369,12 @@ public class CorsConfiguration {
 	 * @see #addAllowedHeader(String)
 	 * @see #setAllowedHeaders(List)
 	 */
-	@Nullable
-	public List<String> getAllowedHeaders() {
+	public @Nullable List<String> getAllowedHeaders() {
 		return this.allowedHeaders;
 	}
 
 	/**
-	 * Add an actual request header to allow.
+	 * Variant of {@link #setAllowedHeaders(List)} for adding one allowed header at a time.
 	 */
 	public void addAllowedHeader(String allowedHeader) {
 		if (this.allowedHeaders == null) {
@@ -249,17 +387,22 @@ public class CorsConfiguration {
 	}
 
 	/**
-	 * Set the list of response headers other than simple headers (i.e.
-	 * {@code Cache-Control}, {@code Content-Language}, {@code Content-Type},
-	 * {@code Expires}, {@code Last-Modified}, or {@code Pragma}) that an
-	 * actual response might have and can be exposed.
-	 * <p>Note that {@code "*"} is not a valid exposed header value.
+	 * Set the list of response headers that an actual response might have
+	 * and can be exposed to the client. The special value {@code "*"}
+	 * allows all headers to be exposed.
+	 * <p>{@code Access-Control-Expose-Headers} response header is set either
+	 * to the configured list of headers or to {@code "*"}. While the CORS
+	 * spec does not allow {@code "*"} when {@code Access-Control-Allow-Credentials}
+	 * is set to {@code true}, most browsers support it and
+	 * the response headers are not all available during the CORS processing,
+	 * so as a consequence {@code "*"} is the header value used when specified
+	 * regardless of the value of the `allowCredentials` property.
+	 * <p>A header name is not required to be listed if it is one of:
+	 * {@code Cache-Control}, {@code Content-Language}, {@code Expires},
+	 * {@code Last-Modified}, or {@code Pragma}.
 	 * <p>By default this is not set.
 	 */
 	public void setExposedHeaders(@Nullable List<String> exposedHeaders) {
-		if (exposedHeaders != null && exposedHeaders.contains(ALL)) {
-			throw new IllegalArgumentException("'*' is not a valid exposed header value");
-		}
 		this.exposedHeaders = (exposedHeaders != null ? new ArrayList<>(exposedHeaders) : null);
 	}
 
@@ -268,19 +411,14 @@ public class CorsConfiguration {
 	 * @see #addExposedHeader(String)
 	 * @see #setExposedHeaders(List)
 	 */
-	@Nullable
-	public List<String> getExposedHeaders() {
+	public @Nullable List<String> getExposedHeaders() {
 		return this.exposedHeaders;
 	}
 
 	/**
-	 * Add a response header to expose.
-	 * <p>Note that {@code "*"} is not a valid exposed header value.
+	 * Variant of {@link #setExposedHeaders} for adding one exposed header at a time.
 	 */
 	public void addExposedHeader(String exposedHeader) {
-		if (ALL.equals(exposedHeader)) {
-			throw new IllegalArgumentException("'*' is not a valid exposed header value");
-		}
 		if (this.exposedHeaders == null) {
 			this.exposedHeaders = new ArrayList<>(4);
 		}
@@ -289,7 +427,16 @@ public class CorsConfiguration {
 
 	/**
 	 * Whether user credentials are supported.
-	 * <p>By default this is not set (i.e. user credentials are not supported).
+	 * <p>Setting this property has an impact on how {@link #setAllowedOrigins(List)
+	 * origins}, {@link #setAllowedOriginPatterns(List) originPatterns},
+	 * {@link #setAllowedMethods(List)  allowedMethods} and
+	 * {@link #setAllowedHeaders(List) allowedHeaders} are processed, see related
+	 * API documentation for more details.
+	 * <p><strong>NOTE:</strong> Be aware that this option establishes a high
+	 * level of trust with the configured domains and also increases the surface
+	 * attack of the web application by exposing sensitive user-specific
+	 * information such as cookies and CSRF tokens.
+	 * <p>By default, this is not set (i.e. user credentials are not supported).
 	 */
 	public void setAllowCredentials(@Nullable Boolean allowCredentials) {
 		this.allowCredentials = allowCredentials;
@@ -299,9 +446,44 @@ public class CorsConfiguration {
 	 * Return the configured {@code allowCredentials} flag, or {@code null} if none.
 	 * @see #setAllowCredentials(Boolean)
 	 */
-	@Nullable
-	public Boolean getAllowCredentials() {
+	public @Nullable Boolean getAllowCredentials() {
 		return this.allowCredentials;
+	}
+
+	/**
+	 * Whether private network access is supported for user-agents restricting such access by default.
+	 * <p>Private network requests are requests whose target server's IP address is more private than
+	 * that from which the request initiator was fetched. For example, a request from a public website
+	 * (https://example.com) to a private website (https://router.local), or a request from a private
+	 * website to localhost.
+	 * <p>Setting this property has an impact on how {@link #setAllowedOrigins(List)
+	 * origins} and {@link #setAllowedOriginPatterns(List) originPatterns} are processed,
+	 * see related API documentation for more details.
+	 * <p>By default, this is not set (i.e. private network access is not supported).
+	 * @since 5.3.32
+	 * @see <a href="https://wicg.github.io/private-network-access/">Private network access specifications</a>
+	 */
+	public void setAllowPrivateNetwork(@Nullable Boolean allowPrivateNetwork) {
+		this.allowPrivateNetwork = allowPrivateNetwork;
+	}
+
+	/**
+	 * Return the configured {@code allowPrivateNetwork} flag, or {@code null} if none.
+	 * @since 5.3.32
+	 * @see #setAllowPrivateNetwork(Boolean)
+	 */
+	public @Nullable Boolean getAllowPrivateNetwork() {
+		return this.allowPrivateNetwork;
+	}
+
+	/**
+	 * Configure how long, as a duration, the response from a pre-flight request
+	 * can be cached by clients.
+	 * @since 5.2
+	 * @see #setMaxAge(Long)
+	 */
+	public void setMaxAge(Duration maxAge) {
+		this.maxAge = maxAge.getSeconds();
 	}
 
 	/**
@@ -317,37 +499,34 @@ public class CorsConfiguration {
 	 * Return the configured {@code maxAge} value, or {@code null} if none.
 	 * @see #setMaxAge(Long)
 	 */
-	@Nullable
-	public Long getMaxAge() {
+	public @Nullable Long getMaxAge() {
 		return this.maxAge;
 	}
 
+
 	/**
-	 * By default a newly created {@code CorsConfiguration} does not permit any
-	 * cross-origin requests and must be configured explicitly to indicate what
-	 * should be allowed.
-	 *
-	 * <p>Use this method to flip the initialization model to start with open
-	 * defaults that permit all cross-origin requests for GET, HEAD, and POST
-	 * requests. Note however that this method will not override any existing
-	 * values already set.
-	 *
-	 * <p>The following defaults are applied if not already set:
+	 * By default {@code CorsConfiguration} does not permit any cross-origin
+	 * requests and must be configured explicitly. Use this method to switch to
+	 * defaults that permit all cross-origin requests for GET, HEAD, and POST,
+	 * but not overriding any values that have already been set.
+	 * <p>The following defaults are applied for values that are not set:
 	 * <ul>
-	 *     <li>Allow all origins.</li>
-	 *     <li>Allow "simple" methods {@code GET}, {@code HEAD} and {@code POST}.</li>
-	 *     <li>Allow all headers.</li>
-	 *     <li>Set max age to 1800 seconds (30 minutes).</li>
+	 * <li>Allow all origins with the special value {@code "*"} defined in the
+	 * CORS spec. This is set only if neither {@link #setAllowedOrigins origins}
+	 * nor {@link #setAllowedOriginPatterns originPatterns} are already set.</li>
+	 * <li>Allow "simple" methods {@code GET}, {@code HEAD} and {@code POST}.</li>
+	 * <li>Allow all headers.</li>
+	 * <li>Set max age to 1800 seconds (30 minutes).</li>
 	 * </ul>
 	 */
 	public CorsConfiguration applyPermitDefaultValues() {
-		if (this.allowedOrigins == null) {
+		if (this.allowedOrigins == null && this.allowedOriginPatterns == null) {
 			this.allowedOrigins = DEFAULT_PERMIT_ALL;
 		}
 		if (this.allowedMethods == null) {
 			this.allowedMethods = DEFAULT_PERMIT_METHODS;
 			this.resolvedMethods = DEFAULT_PERMIT_METHODS
-					.stream().map(HttpMethod::resolve).collect(Collectors.toList());
+					.stream().map(HttpMethod::valueOf).toList();
 		}
 		if (this.allowedHeaders == null) {
 			this.allowedHeaders = DEFAULT_PERMIT_ALL;
@@ -359,40 +538,81 @@ public class CorsConfiguration {
 	}
 
 	/**
+	 * Validate that when {@link #setAllowCredentials allowCredentials} is {@code true},
+	 * {@link #setAllowedOrigins allowedOrigins} does not contain the special
+	 * value {@code "*"} since in that case the "Access-Control-Allow-Origin"
+	 * cannot be set to {@code "*"}.
+	 * @throws IllegalArgumentException if the validation fails
+	 * @since 5.3
+	 */
+	public void validateAllowCredentials() {
+		if (this.allowCredentials == Boolean.TRUE &&
+				this.allowedOrigins != null && this.allowedOrigins.contains(ALL)) {
+
+			throw new IllegalArgumentException(
+					"When allowCredentials is true, allowedOrigins cannot contain the special value \"*\" " +
+							"since that cannot be set on the \"Access-Control-Allow-Origin\" response header. " +
+							"To allow credentials to a set of origins, list them explicitly " +
+							"or consider using \"allowedOriginPatterns\" instead.");
+		}
+	}
+
+	/**
+	 * Validate that when {@link #setAllowPrivateNetwork allowPrivateNetwork} is {@code true},
+	 * {@link #setAllowedOrigins allowedOrigins} does not contain the special
+	 * value {@code "*"} since this is insecure.
+	 * @throws IllegalArgumentException if the validation fails
+	 * @since 5.3.32
+	 */
+	public void validateAllowPrivateNetwork() {
+		if (this.allowPrivateNetwork == Boolean.TRUE &&
+				this.allowedOrigins != null && this.allowedOrigins.contains(ALL)) {
+
+			throw new IllegalArgumentException(
+					"When allowPrivateNetwork is true, allowedOrigins cannot contain the special value \"*\" " +
+							"as it is not recommended from a security perspective. " +
+							"To allow private network access to a set of origins, list them explicitly " +
+							"or consider using \"allowedOriginPatterns\" instead.");
+		}
+	}
+
+	/**
 	 * Combine the non-null properties of the supplied
 	 * {@code CorsConfiguration} with this one.
-	 *
 	 * <p>When combining single values like {@code allowCredentials} or
 	 * {@code maxAge}, {@code this} properties are overridden by non-null
 	 * {@code other} properties if any.
-	 *
 	 * <p>Combining lists like {@code allowedOrigins}, {@code allowedMethods},
 	 * {@code allowedHeaders} or {@code exposedHeaders} is done in an additive
 	 * way. For example, combining {@code ["GET", "POST"]} with
-	 * {@code ["PATCH"]} results in {@code ["GET", "POST", "PATCH"]}, but keep
-	 * in mind that combining {@code ["GET", "POST"]} with {@code ["*"]}
-	 * results in {@code ["*"]}.
-	 *
-	 * <p>Notice that default permit values set by
+	 * {@code ["PATCH"]} results in {@code ["GET", "POST", "PATCH"]}. However,
+	 * combining {@code ["GET", "POST"]} with {@code ["*"]} results in
+	 * {@code ["*"]}. Note also that default permit values set by
 	 * {@link CorsConfiguration#applyPermitDefaultValues()} are overridden by
-	 * any value explicitly defined.
-	 *
-	 * @return the combined {@code CorsConfiguration} or {@code this}
+	 * any explicitly defined values.
+	 * @return the combined {@code CorsConfiguration}, or {@code this}
 	 * configuration if the supplied configuration is {@code null}
 	 */
-	@Nullable
 	public CorsConfiguration combine(@Nullable CorsConfiguration other) {
 		if (other == null) {
 			return this;
 		}
+		// Bypass setAllowedOrigins to avoid re-compiling patterns
 		CorsConfiguration config = new CorsConfiguration(this);
-		config.setAllowedOrigins(combine(getAllowedOrigins(), other.getAllowedOrigins()));
+		List<String> origins = combine(getAllowedOrigins(), other.getAllowedOrigins());
+		List<OriginPattern> patterns = combinePatterns(this.allowedOriginPatterns, other.allowedOriginPatterns);
+		config.allowedOrigins = (origins == DEFAULT_PERMIT_ALL && !CollectionUtils.isEmpty(patterns) ? null : origins);
+		config.allowedOriginPatterns = patterns;
 		config.setAllowedMethods(combine(getAllowedMethods(), other.getAllowedMethods()));
 		config.setAllowedHeaders(combine(getAllowedHeaders(), other.getAllowedHeaders()));
 		config.setExposedHeaders(combine(getExposedHeaders(), other.getExposedHeaders()));
 		Boolean allowCredentials = other.getAllowCredentials();
 		if (allowCredentials != null) {
 			config.setAllowCredentials(allowCredentials);
+		}
+		Boolean allowPrivateNetwork = other.getAllowPrivateNetwork();
+		if (allowPrivateNetwork != null) {
+			config.setAllowPrivateNetwork(allowPrivateNetwork);
 		}
 		Long maxAge = other.getMaxAge();
 		if (maxAge != null) {
@@ -415,42 +635,63 @@ public class CorsConfiguration {
 			return source;
 		}
 		if (source.contains(ALL) || other.contains(ALL)) {
-			return new ArrayList<>(Collections.singletonList(ALL));
+			return ALL_LIST;
 		}
-		Set<String> combined = new LinkedHashSet<>(source);
+		Set<String> combined = CollectionUtils.newLinkedHashSet(source.size() + other.size());
+		combined.addAll(source);
 		combined.addAll(other);
 		return new ArrayList<>(combined);
 	}
 
+	private List<OriginPattern> combinePatterns(
+			@Nullable List<OriginPattern> source, @Nullable List<OriginPattern> other) {
+
+		if (other == null) {
+			return (source != null ? source : Collections.emptyList());
+		}
+		if (source == null) {
+			return other;
+		}
+		if (source.contains(ALL_PATTERN) || other.contains(ALL_PATTERN)) {
+			return ALL_PATTERN_LIST;
+		}
+		Set<OriginPattern> combined = CollectionUtils.newLinkedHashSet(source.size() + other.size());
+		combined.addAll(source);
+		combined.addAll(other);
+		return new ArrayList<>(combined);
+	}
+
+
 	/**
 	 * Check the origin of the request against the configured allowed origins.
-	 * @param requestOrigin the origin to check
+	 * @param origin the origin to check
 	 * @return the origin to use for the response, or {@code null} which
 	 * means the request origin is not allowed
 	 */
-	@Nullable
-	public String checkOrigin(@Nullable String requestOrigin) {
-		if (!StringUtils.hasText(requestOrigin)) {
+	public @Nullable String checkOrigin(@Nullable String origin) {
+		if (!StringUtils.hasText(origin)) {
 			return null;
 		}
-		if (ObjectUtils.isEmpty(this.allowedOrigins)) {
-			return null;
-		}
-
-		if (this.allowedOrigins.contains(ALL)) {
-			if (this.allowCredentials != Boolean.TRUE) {
+		String originToCheck = trimTrailingSlash(origin);
+		if (!ObjectUtils.isEmpty(this.allowedOrigins)) {
+			if (this.allowedOrigins.contains(ALL)) {
+				validateAllowCredentials();
+				validateAllowPrivateNetwork();
 				return ALL;
 			}
-			else {
-				return requestOrigin;
+			for (String allowedOrigin : this.allowedOrigins) {
+				if (originToCheck.equalsIgnoreCase(allowedOrigin)) {
+					return origin;
+				}
 			}
 		}
-		for (String allowedOrigin : this.allowedOrigins) {
-			if (requestOrigin.equalsIgnoreCase(allowedOrigin)) {
-				return requestOrigin;
+		if (!ObjectUtils.isEmpty(this.allowedOriginPatterns)) {
+			for (OriginPattern p : this.allowedOriginPatterns) {
+				if (p.getDeclaredPattern().equals(ALL) || p.getPattern().matcher(originToCheck).matches()) {
+					return origin;
+				}
 			}
 		}
-
 		return null;
 	}
 
@@ -462,8 +703,7 @@ public class CorsConfiguration {
 	 * @return the list of HTTP methods to list in the response of a pre-flight
 	 * request, or {@code null} if the supplied {@code requestMethod} is not allowed
 	 */
-	@Nullable
-	public List<HttpMethod> checkHttpMethod(@Nullable HttpMethod requestMethod) {
+	public @Nullable List<HttpMethod> checkHttpMethod(@Nullable HttpMethod requestMethod) {
 		if (requestMethod == null) {
 			return null;
 		}
@@ -481,8 +721,7 @@ public class CorsConfiguration {
 	 * @return the list of allowed headers to list in the response of a pre-flight
 	 * request, or {@code null} if none of the supplied request headers is allowed
 	 */
-	@Nullable
-	public List<String> checkHeaders(@Nullable List<String> requestHeaders) {
+	public @Nullable List<String> checkHeaders(@Nullable List<String> requestHeaders) {
 		if (requestHeaders == null) {
 			return null;
 		}
@@ -494,7 +733,9 @@ public class CorsConfiguration {
 		}
 
 		boolean allowAnyHeader = this.allowedHeaders.contains(ALL);
-		List<String> result = new ArrayList<>(requestHeaders.size());
+		int maxResultSize = (allowAnyHeader ? requestHeaders.size() :
+				Math.min(requestHeaders.size(), this.allowedHeaders.size()));
+		List<String> result = new ArrayList<>(maxResultSize);
 		for (String requestHeader : requestHeaders) {
 			if (StringUtils.hasText(requestHeader)) {
 				requestHeader = requestHeader.trim();
@@ -512,6 +753,73 @@ public class CorsConfiguration {
 			}
 		}
 		return (result.isEmpty() ? null : result);
+	}
+
+
+	/**
+	 * Contains both the user-declared pattern (for example, "https://*.domain.com") and
+	 * the regex {@link Pattern} derived from it.
+	 */
+	private static class OriginPattern {
+
+		private static final Pattern PORTS_PATTERN = Pattern.compile("(.*):\\[(\\*|\\d+(,\\d+)*)]");
+
+		private final String declaredPattern;
+
+		private final Pattern pattern;
+
+		OriginPattern(String declaredPattern) {
+			this.declaredPattern = declaredPattern;
+			this.pattern = initPattern(declaredPattern);
+		}
+
+		private static Pattern initPattern(String patternValue) {
+			String portList = null;
+			Matcher matcher = PORTS_PATTERN.matcher(patternValue);
+			if (matcher.matches()) {
+				patternValue = matcher.group(1);
+				portList = matcher.group(2);
+			}
+
+			patternValue = "\\Q" + patternValue + "\\E";
+			patternValue = patternValue.replace("*", "\\E.*\\Q");
+
+			if (portList != null) {
+				patternValue += (portList.equals(ALL) ? "(:\\d+)?" : ":(" + portList.replace(',', '|') + ")");
+			}
+
+			return Pattern.compile(patternValue);
+		}
+
+		public String getDeclaredPattern() {
+			return this.declaredPattern;
+		}
+
+		public Pattern getPattern() {
+			return this.pattern;
+		}
+
+		@Override
+		public boolean equals(@Nullable Object other) {
+			if (this == other) {
+				return true;
+			}
+			if (other == null || !getClass().equals(other.getClass())) {
+				return false;
+			}
+			return ObjectUtils.nullSafeEquals(
+					this.declaredPattern, ((OriginPattern) other).declaredPattern);
+		}
+
+		@Override
+		public int hashCode() {
+			return this.declaredPattern.hashCode();
+		}
+
+		@Override
+		public String toString() {
+			return this.declaredPattern;
+		}
 	}
 
 }
