@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,8 +16,6 @@
 
 package org.springframework.web.filter.reactive;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -49,8 +47,7 @@ import org.springframework.web.server.WebFilterChain;
 public class HiddenHttpMethodFilter implements WebFilter {
 
 	private static final List<HttpMethod> ALLOWED_METHODS =
-			Collections.unmodifiableList(Arrays.asList(HttpMethod.PUT,
-					HttpMethod.DELETE, HttpMethod.PATCH));
+			List.of(HttpMethod.PUT, HttpMethod.DELETE, HttpMethod.PATCH);
 
 	/** Default name of the form parameter with the HTTP method to use. */
 	public static final String DEFAULT_METHOD_PARAMETER_NAME = "_method";
@@ -91,8 +88,7 @@ public class HiddenHttpMethodFilter implements WebFilter {
 	}
 
 	private ServerWebExchange mapExchange(ServerWebExchange exchange, String methodParamValue) {
-		HttpMethod httpMethod = HttpMethod.resolve(methodParamValue.toUpperCase(Locale.ENGLISH));
-		Assert.notNull(httpMethod, () -> "HttpMethod '" + methodParamValue + "' not supported");
+		HttpMethod httpMethod = HttpMethod.valueOf(methodParamValue.toUpperCase(Locale.ROOT));
 		if (ALLOWED_METHODS.contains(httpMethod)) {
 			return exchange.mutate().request(builder -> builder.method(httpMethod)).build();
 		}
