@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -22,20 +22,22 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
+import java.util.Objects;
+import java.util.StringJoiner;
 import java.util.function.BiFunction;
 import java.util.function.UnaryOperator;
 
-import org.springframework.lang.NonNull;
-import org.springframework.lang.Nullable;
+import org.jspecify.annotations.Nullable;
+
 import org.springframework.util.Assert;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 import org.springframework.util.ObjectUtils;
+import org.springframework.util.StreamUtils;
 import org.springframework.util.StringUtils;
 
 /**
@@ -45,15 +47,16 @@ import org.springframework.util.StringUtils;
  * @author Juergen Hoeller
  * @author Rossen Stoyanchev
  * @author Phillip Webb
+ * @author Sam Brannen
  * @since 3.1.3
- * @see <a href="http://tools.ietf.org/html/rfc3986#section-1.2.3">Hierarchical URIs</a>
+ * @see <a href="https://tools.ietf.org/html/rfc3986#section-1.2.3">Hierarchical URIs</a>
  */
 @SuppressWarnings("serial")
 final class HierarchicalUriComponents extends UriComponents {
 
 	private static final char PATH_DELIMITER = '/';
 
-	private static final String PATH_DELIMITER_STRING = "/";
+	private static final String PATH_DELIMITER_STRING = String.valueOf(PATH_DELIMITER);
 
 	private static final MultiValueMap<String, String> EMPTY_QUERY_PARAMS =
 			CollectionUtils.unmodifiableMultiValueMap(new LinkedMultiValueMap<>());
@@ -86,7 +89,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		public void copyToUriComponentsBuilder(UriComponentsBuilder builder) {
 		}
 		@Override
-		public boolean equals(Object other) {
+		public boolean equals(@Nullable Object other) {
 			return (this == other);
 		}
 		@Override
@@ -96,14 +99,11 @@ final class HierarchicalUriComponents extends UriComponents {
 	};
 
 
-	@Nullable
-	private final String userInfo;
+	private final @Nullable String userInfo;
 
-	@Nullable
-	private final String host;
+	private final @Nullable String host;
 
-	@Nullable
-	private final String port;
+	private final @Nullable String port;
 
 	private final PathComponent path;
 
@@ -111,8 +111,7 @@ final class HierarchicalUriComponents extends UriComponents {
 
 	private final EncodeState encodeState;
 
-	@Nullable
-	private UnaryOperator<String> variableEncoder;
+	private @Nullable UnaryOperator<String> variableEncoder;
 
 
 	/**
@@ -165,20 +164,17 @@ final class HierarchicalUriComponents extends UriComponents {
 	// Component getters
 
 	@Override
-	@Nullable
-	public String getSchemeSpecificPart() {
+	public @Nullable String getSchemeSpecificPart() {
 		return null;
 	}
 
 	@Override
-	@Nullable
-	public String getUserInfo() {
+	public @Nullable String getUserInfo() {
 		return this.userInfo;
 	}
 
 	@Override
-	@Nullable
-	public String getHost() {
+	public @Nullable String getHost() {
 		return this.host;
 	}
 
@@ -191,11 +187,15 @@ final class HierarchicalUriComponents extends UriComponents {
 			throw new IllegalStateException(
 					"The port contains a URI variable but has not been expanded yet: " + this.port);
 		}
-		return Integer.parseInt(this.port);
+		try {
+			return Integer.parseInt(this.port);
+		}
+		catch (NumberFormatException ex) {
+			throw new IllegalStateException("The port must be an integer: " + this.port);
+		}
 	}
 
 	@Override
-	@NonNull
 	public String getPath() {
 		return this.path.getPath();
 	}
@@ -206,8 +206,7 @@ final class HierarchicalUriComponents extends UriComponents {
 	}
 
 	@Override
-	@Nullable
-	public String getQuery() {
+	public @Nullable String getQuery() {
 		if (!this.queryParams.isEmpty()) {
 			StringBuilder queryBuilder = new StringBuilder();
 			this.queryParams.forEach((name, values) -> {
@@ -335,25 +334,31 @@ final class HierarchicalUriComponents extends UriComponents {
 		Assert.notNull(type, "Type must not be null");
 
 		byte[] bytes = source.getBytes(charset);
-		ByteArrayOutputStream bos = new ByteArrayOutputStream(bytes.length);
-		boolean changed = false;
+		boolean original = true;
 		for (byte b : bytes) {
-			if (b < 0) {
-				b += 256;
-			}
-			if (type.isAllowed(b)) {
-				bos.write(b);
-			}
-			else {
-				bos.write('%');
-				char hex1 = Character.toUpperCase(Character.forDigit((b >> 4) & 0xF, 16));
-				char hex2 = Character.toUpperCase(Character.forDigit(b & 0xF, 16));
-				bos.write(hex1);
-				bos.write(hex2);
-				changed = true;
+			if (!type.isAllowed(b)) {
+				original = false;
+				break;
 			}
 		}
-		return (changed ? new String(bos.toByteArray(), charset) : source);
+		if (original) {
+			return source;
+		}
+
+		ByteArrayOutputStream baos = new ByteArrayOutputStream(bytes.length);
+		for (byte b : bytes) {
+			if (type.isAllowed(b)) {
+				baos.write(b);
+			}
+			else {
+				baos.write('%');
+				char hex1 = Character.toUpperCase(Character.forDigit((b >> 4) & 0xF, 16));
+				char hex2 = Character.toUpperCase(Character.forDigit(b & 0xF, 16));
+				baos.write(hex1);
+				baos.write(hex2);
+			}
+		}
+		return StreamUtils.copyToString(baos, charset);
 	}
 
 	private Type getHostType() {
@@ -416,17 +421,17 @@ final class HierarchicalUriComponents extends UriComponents {
 
 	@Override
 	protected HierarchicalUriComponents expandInternal(UriTemplateVariables uriVariables) {
-
 		Assert.state(!this.encodeState.equals(EncodeState.FULLY_ENCODED),
 				"URI components already encoded, and could not possibly contain '{' or '}'.");
 
+		// Array-based vars rely on the order below...
 		String schemeTo = expandUriComponent(getScheme(), uriVariables, this.variableEncoder);
-		String fragmentTo = expandUriComponent(getFragment(), uriVariables, this.variableEncoder);
 		String userInfoTo = expandUriComponent(this.userInfo, uriVariables, this.variableEncoder);
 		String hostTo = expandUriComponent(this.host, uriVariables, this.variableEncoder);
 		String portTo = expandUriComponent(this.port, uriVariables, this.variableEncoder);
 		PathComponent pathTo = this.path.expand(uriVariables, this.variableEncoder);
 		MultiValueMap<String, String> queryParamsTo = expandQueryParams(uriVariables);
+		String fragmentTo = expandUriComponent(getFragment(), uriVariables, this.variableEncoder);
 
 		return new HierarchicalUriComponents(schemeTo, fragmentTo, userInfoTo,
 				hostTo, portTo, pathTo, queryParamsTo, this.encodeState, this.variableEncoder);
@@ -438,11 +443,10 @@ final class HierarchicalUriComponents extends UriComponents {
 		UriTemplateVariables queryVariables = new QueryUriTemplateVariables(variables);
 		this.queryParams.forEach((key, values) -> {
 			String name = expandUriComponent(key, queryVariables, this.variableEncoder);
-			List<String> expandedValues = new ArrayList<>(values.size());
+			List<String> expandedValues = result.computeIfAbsent(name, k -> new ArrayList<>(values.size()));
 			for (String value : values) {
 				expandedValues.add(expandUriComponent(value, queryVariables, this.variableEncoder));
 			}
-			result.put(name, expandedValues);
 		});
 		return CollectionUtils.unmodifiableMultiValueMap(result);
 	}
@@ -472,7 +476,7 @@ final class HierarchicalUriComponents extends UriComponents {
 			if (this.host != null) {
 				uriBuilder.append(this.host);
 			}
-			if (getPort() != -1) {
+			if (StringUtils.hasText(this.port) && !this.port.equals("-1")) {
 				uriBuilder.append(':').append(this.port);
 			}
 		}
@@ -526,7 +530,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		if (getHost() != null) {
 			builder.host(getHost());
 		}
-		// Avoid parsing the port, may have URI variable..
+		// Avoid parsing the port, may have URI variable.
 		if (this.port != null) {
 			builder.port(this.port);
 		}
@@ -541,33 +545,21 @@ final class HierarchicalUriComponents extends UriComponents {
 
 
 	@Override
-	public boolean equals(Object other) {
-		if (this == other) {
-			return true;
-		}
-		if (!(other instanceof HierarchicalUriComponents)) {
-			return false;
-		}
-		HierarchicalUriComponents otherComp = (HierarchicalUriComponents) other;
-		return (ObjectUtils.nullSafeEquals(getScheme(), otherComp.getScheme()) &&
-				ObjectUtils.nullSafeEquals(getUserInfo(), otherComp.getUserInfo()) &&
-				ObjectUtils.nullSafeEquals(getHost(), otherComp.getHost()) &&
-				getPort() == otherComp.getPort() &&
-				this.path.equals(otherComp.path) &&
-				this.queryParams.equals(otherComp.queryParams) &&
-				ObjectUtils.nullSafeEquals(getFragment(), otherComp.getFragment()));
+	public boolean equals(@Nullable Object other) {
+		return (this == other || (other instanceof HierarchicalUriComponents that &&
+				ObjectUtils.nullSafeEquals(getScheme(), that.getScheme()) &&
+				ObjectUtils.nullSafeEquals(getUserInfo(), that.getUserInfo()) &&
+				ObjectUtils.nullSafeEquals(getHost(), that.getHost()) &&
+				getPort() == that.getPort() &&
+				this.path.equals(that.path) &&
+				this.queryParams.equals(that.queryParams) &&
+				ObjectUtils.nullSafeEquals(getFragment(), that.getFragment())));
 	}
 
 	@Override
 	public int hashCode() {
-		int result = ObjectUtils.nullSafeHashCode(getScheme());
-		result = 31 * result + ObjectUtils.nullSafeHashCode(this.userInfo);
-		result = 31 * result + ObjectUtils.nullSafeHashCode(this.host);
-		result = 31 * result + ObjectUtils.nullSafeHashCode(this.port);
-		result = 31 * result + this.path.hashCode();
-		result = 31 * result + this.queryParams.hashCode();
-		result = 31 * result + ObjectUtils.nullSafeHashCode(getFragment());
-		return result;
+		return Objects.hash(getScheme(), this.userInfo, this.host, this.port,
+				this.path, this.queryParams, getFragment());
 	}
 
 
@@ -576,7 +568,7 @@ final class HierarchicalUriComponents extends UriComponents {
 	/**
 	 * Enumeration used to identify the allowed characters per URI component.
 	 * <p>Contains methods to indicate whether a given character is valid in a specific URI component.
-	 * @see <a href="http://www.ietf.org/rfc/rfc3986.txt">RFC 3986</a>
+	 * @see <a href="https://tools.ietf.org/html/rfc3986">RFC 3986</a>
 	 */
 	enum Type {
 
@@ -589,25 +581,25 @@ final class HierarchicalUriComponents extends UriComponents {
 		AUTHORITY {
 			@Override
 			public boolean isAllowed(int c) {
-				return isUnreserved(c) || isSubDelimiter(c) || ':' == c || '@' == c;
+				return (isUnreservedOrSubDelimiter(c) || ':' == c || '@' == c);
 			}
 		},
 		USER_INFO {
 			@Override
 			public boolean isAllowed(int c) {
-				return isUnreserved(c) || isSubDelimiter(c) || ':' == c;
+				return (isUnreservedOrSubDelimiter(c) || ':' == c);
 			}
 		},
 		HOST_IPV4 {
 			@Override
 			public boolean isAllowed(int c) {
-				return isUnreserved(c) || isSubDelimiter(c);
+				return isUnreservedOrSubDelimiter(c);
 			}
 		},
 		HOST_IPV6 {
 			@Override
 			public boolean isAllowed(int c) {
-				return isUnreserved(c) || isSubDelimiter(c) || '[' == c || ']' == c || ':' == c;
+				return (isUnreservedOrSubDelimiter(c) || '[' == c || ']' == c || ':' == c);
 			}
 		},
 		PORT {
@@ -619,7 +611,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		PATH {
 			@Override
 			public boolean isAllowed(int c) {
-				return isPchar(c) || '/' == c;
+				return (isPchar(c) || '/' == c);
 			}
 		},
 		PATH_SEGMENT {
@@ -631,7 +623,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		QUERY {
 			@Override
 			public boolean isAllowed(int c) {
-				return isPchar(c) || '/' == c || '?' == c;
+				return (isPchar(c) || '/' == c || '?' == c);
 			}
 		},
 		QUERY_PARAM {
@@ -641,14 +633,14 @@ final class HierarchicalUriComponents extends UriComponents {
 					return false;
 				}
 				else {
-					return isPchar(c) || '/' == c || '?' == c;
+					return (isPchar(c) || '/' == c || '?' == c);
 				}
 			}
 		},
 		FRAGMENT {
 			@Override
 			public boolean isAllowed(int c) {
-				return isPchar(c) || '/' == c || '?' == c;
+				return (isPchar(c) || '/' == c || '?' == c);
 			}
 		},
 		URI {
@@ -658,6 +650,15 @@ final class HierarchicalUriComponents extends UriComponents {
 			}
 		};
 
+		private static final boolean[] unreservedOrSubDelimiterArray = new boolean[128];
+
+		static {
+			for (int i = 0; i < 128; i++) {
+				char c = (char) i;
+				unreservedOrSubDelimiterArray[i] = (URI.isUnreserved(c) || URI.isSubDelimiter(c));
+			}
+		}
+
 		/**
 		 * Indicates whether the given character is allowed in this URI component.
 		 * @return {@code true} if the character is allowed; {@code false} otherwise
@@ -666,7 +667,7 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		/**
 		 * Indicates whether the given character is in the {@code ALPHA} set.
-		 * @see <a href="http://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
+		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isAlpha(int c) {
 			return (c >= 'a' && c <= 'z' || c >= 'A' && c <= 'Z');
@@ -674,7 +675,7 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		/**
 		 * Indicates whether the given character is in the {@code DIGIT} set.
-		 * @see <a href="http://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
+		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isDigit(int c) {
 			return (c >= '0' && c <= '9');
@@ -682,7 +683,7 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		/**
 		 * Indicates whether the given character is in the {@code gen-delims} set.
-		 * @see <a href="http://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
+		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isGenericDelimiter(int c) {
 			return (':' == c || '/' == c || '?' == c || '#' == c || '[' == c || ']' == c || '@' == c);
@@ -690,16 +691,16 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		/**
 		 * Indicates whether the given character is in the {@code sub-delims} set.
-		 * @see <a href="http://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
+		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isSubDelimiter(int c) {
-			return ('!' == c || '$' == c || '&' == c || '\'' == c || '(' == c || ')' == c || '*' == c || '+' == c ||
-					',' == c || ';' == c || '=' == c);
+			return ('!' == c || '$' == c || '&' == c || '\'' == c ||
+					'(' == c || ')' == c || '*' == c || '+' == c || ',' == c || ';' == c || '=' == c);
 		}
 
 		/**
 		 * Indicates whether the given character is in the {@code reserved} set.
-		 * @see <a href="http://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
+		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isReserved(int c) {
 			return (isGenericDelimiter(c) || isSubDelimiter(c));
@@ -707,7 +708,7 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		/**
 		 * Indicates whether the given character is in the {@code unreserved} set.
-		 * @see <a href="http://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
+		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isUnreserved(int c) {
 			return (isAlpha(c) || isDigit(c) || '-' == c || '.' == c || '_' == c || '~' == c);
@@ -715,11 +716,19 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		/**
 		 * Indicates whether the given character is in the {@code pchar} set.
-		 * @see <a href="http://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
+		 * @see <a href="https://www.ietf.org/rfc/rfc3986.txt">RFC 3986, appendix A</a>
 		 */
 		protected boolean isPchar(int c) {
-			return (isUnreserved(c) || isSubDelimiter(c) || ':' == c || '@' == c);
+			return (isUnreservedOrSubDelimiter(c) || ':' == c || '@' == c);
 		}
+
+		/**
+		 * Combined check whether a character is unreserved or a sub-delimiter.
+		 */
+		protected boolean isUnreservedOrSubDelimiter(int c) {
+			return (c < unreservedOrSubDelimiterArray.length && c >= 0 && unreservedOrSubDelimiterArray[c]);
+		}
+
 	}
 
 
@@ -750,7 +759,7 @@ final class HierarchicalUriComponents extends UriComponents {
 	}
 
 
-	private static class UriTemplateEncoder	implements BiFunction<String, Type, String> {
+	private static class UriTemplateEncoder implements BiFunction<String, Type, String> {
 
 		private final Charset charset;
 
@@ -760,43 +769,47 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		private final StringBuilder output = new StringBuilder();
 
+		private boolean variableWithNameAndRegex;
 
 		public UriTemplateEncoder(Charset charset) {
 			this.charset = charset;
 		}
 
-
 		@Override
 		public String apply(String source, Type type) {
-
-			// Only URI variable (nothing to encode)..
-			if (source.length() > 1 && source.charAt(0) == '{' && source.charAt(source.length() -1) == '}') {
+			// URI variable only?
+			if (isUriVariable(source)) {
 				return source;
 			}
-
-			// Only literal (encode full source)..
+			// Literal template only?
 			if (source.indexOf('{') == -1) {
 				return encodeUriComponent(source, this.charset, type);
 			}
-
-			// Mixed literal parts and URI variables, maybe (encode literal parts only)..
 			int level = 0;
 			clear(this.currentLiteral);
 			clear(this.currentVariable);
 			clear(this.output);
-			for (char c : source.toCharArray()) {
+			for (int i = 0; i < source.length(); i++) {
+				char c = source.charAt(i);
+				if (c == ':' && level == 1) {
+					this.variableWithNameAndRegex = true;
+				}
 				if (c == '{') {
 					level++;
 					if (level == 1) {
-						encodeAndAppendCurrentLiteral(type);
+						append(this.currentLiteral, true, type);
 					}
 				}
 				if (c == '}' && level > 0) {
 					level--;
 					this.currentVariable.append('}');
 					if (level == 0) {
-						this.output.append(this.currentVariable);
-						clear(this.currentVariable);
+						boolean encode = !isUriVariable(this.currentVariable);
+						append(this.currentVariable, encode, type);
+					}
+					else if (!this.variableWithNameAndRegex) {
+						append(this.currentVariable, true, type);
+						level = 0;
 					}
 				}
 				else if (level > 0) {
@@ -809,13 +822,38 @@ final class HierarchicalUriComponents extends UriComponents {
 			if (level > 0) {
 				this.currentLiteral.append(this.currentVariable);
 			}
-			encodeAndAppendCurrentLiteral(type);
+			append(this.currentLiteral, true, type);
 			return this.output.toString();
 		}
 
-		private void encodeAndAppendCurrentLiteral(Type type) {
-			this.output.append(encodeUriComponent(this.currentLiteral.toString(), this.charset, type));
-			clear(this.currentLiteral);
+		/**
+		 * Whether the given String is a single URI variable that can be
+		 * expanded. It must have '{' and '}' surrounding non-empty text and no
+		 * nested placeholders unless it is a variable with regex syntax,
+		 * for example, {@code "/{year:\d{1,4}}"}.
+		 */
+		private boolean isUriVariable(CharSequence source) {
+			if (source.length() < 2 || source.charAt(0) != '{' || source.charAt(source.length() -1) != '}') {
+				return false;
+			}
+			boolean hasText = false;
+			for (int i = 1; i < source.length() - 1; i++) {
+				char c = source.charAt(i);
+				if (c == ':' && i > 1) {
+					return true;
+				}
+				if (c == '{' || c == '}') {
+					return false;
+				}
+				hasText = (hasText || !Character.isWhitespace(c));
+			}
+			return hasText;
+		}
+
+		private void append(StringBuilder sb, boolean encode, Type type) {
+			this.output.append(encode ? encodeUriComponent(sb.toString(), this.charset, type) : sb);
+			clear(sb);
+			this.variableWithNameAndRegex = false;
 		}
 
 		private void clear(StringBuilder sb) {
@@ -862,7 +900,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		@Override
 		public List<String> getPathSegments() {
 			String[] segments = StringUtils.tokenizeToStringArray(getPath(), PATH_DELIMITER_STRING);
-			return Collections.unmodifiableList(Arrays.asList(segments));
+			return List.of(segments);
 		}
 
 		@Override
@@ -888,9 +926,9 @@ final class HierarchicalUriComponents extends UriComponents {
 		}
 
 		@Override
-		public boolean equals(Object other) {
-			return (this == other || (other instanceof FullPathComponent &&
-					getPath().equals(((FullPathComponent) other).getPath())));
+		public boolean equals(@Nullable Object other) {
+			return (this == other || (other instanceof FullPathComponent fullPathComponent &&
+					getPath().equals(fullPathComponent.getPath())));
 		}
 
 		@Override
@@ -909,19 +947,15 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		public PathSegmentComponent(List<String> pathSegments) {
 			Assert.notNull(pathSegments, "List must not be null");
-			this.pathSegments = Collections.unmodifiableList(new ArrayList<>(pathSegments));
+			this.pathSegments = List.copyOf(pathSegments);
 		}
 
 		@Override
 		public String getPath() {
-			StringBuilder pathBuilder = new StringBuilder();
-			pathBuilder.append(PATH_DELIMITER);
-			for (Iterator<String> iterator = this.pathSegments.iterator(); iterator.hasNext(); ) {
-				String pathSegment = iterator.next();
-				pathBuilder.append(pathSegment);
-				if (iterator.hasNext()) {
-					pathBuilder.append(PATH_DELIMITER);
-				}
+			String delimiter = PATH_DELIMITER_STRING;
+			StringJoiner pathBuilder = new StringJoiner(delimiter, delimiter, "");
+			for (String pathSegment : this.pathSegments) {
+				pathBuilder.add(pathSegment);
 			}
 			return pathBuilder.toString();
 		}
@@ -966,9 +1000,9 @@ final class HierarchicalUriComponents extends UriComponents {
 		}
 
 		@Override
-		public boolean equals(Object other) {
-			return (this == other || (other instanceof PathSegmentComponent &&
-					getPathSegments().equals(((PathSegmentComponent) other).getPathSegments())));
+		public boolean equals(@Nullable Object other) {
+			return (this == other || (other instanceof PathSegmentComponent pathSegmentComponent &&
+					getPathSegments().equals(pathSegmentComponent.getPathSegments())));
 		}
 
 		@Override
@@ -1051,10 +1085,13 @@ final class HierarchicalUriComponents extends UriComponents {
 		}
 
 		@Override
-		public Object getValue(@Nullable String name) {
+		public @Nullable Object getValue(@Nullable String name) {
 			Object value = this.delegate.getValue(name);
 			if (ObjectUtils.isArray(value)) {
 				value = StringUtils.arrayToCommaDelimitedString(ObjectUtils.toObjectArray(value));
+			}
+			else if (value instanceof Collection<?> collection) {
+				value = StringUtils.collectionToCommaDelimitedString(collection);
 			}
 			return value;
 		}
