@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2013 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,24 +16,24 @@
 
 package org.springframework.web.bind;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import org.springframework.tests.sample.beans.TestBean;
+import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.validation.BindException;
 import org.springframework.validation.Errors;
 import org.springframework.validation.FieldError;
 import org.springframework.validation.ObjectError;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * @author Juergen Hoeller
  * @since 02.05.2003
  */
-public class EscapedErrorsTests {
+class EscapedErrorsTests {
 
 	@Test
-	public void testEscapedErrors() {
+	void testEscapedErrors() {
 		TestBean tb = new TestBean();
 		tb.setName("empty &");
 
@@ -43,52 +43,55 @@ public class EscapedErrorsTests {
 		errors.rejectValue("age", "AGE_NOT_32 <tag>", null, "message: <tag>");
 		errors.reject("GENERAL_ERROR \" '", null, "message: \" '");
 
-		assertTrue("Correct errors flag", errors.hasErrors());
-		assertTrue("Correct number of errors", errors.getErrorCount() == 4);
-		assertTrue("Correct object name", "tb".equals(errors.getObjectName()));
+		assertThat(errors.hasErrors()).as("Correct errors flag").isTrue();
+		assertThat(errors.getErrorCount()).as("Correct number of errors").isEqualTo(4);
+		assertThat(errors.getObjectName()).as("Correct object name").isEqualTo("tb");
 
-		assertTrue("Correct global errors flag", errors.hasGlobalErrors());
-		assertTrue("Correct number of global errors", errors.getGlobalErrorCount() == 1);
+		assertThat(errors.hasGlobalErrors()).as("Correct global errors flag").isTrue();
+		assertThat(errors.getGlobalErrorCount()).as("Correct number of global errors").isOne();
 		ObjectError globalError = errors.getGlobalError();
 		String defaultMessage = globalError.getDefaultMessage();
-		assertTrue("Global error message escaped", "message: &quot; &#39;".equals(defaultMessage));
-		assertTrue("Global error code not escaped", "GENERAL_ERROR \" '".equals(globalError.getCode()));
+		assertThat(defaultMessage).as("Global error message escaped").isEqualTo("message: &quot; &#39;");
+		assertThat(globalError.getCode()).as("Global error code not escaped").isEqualTo("GENERAL_ERROR \" '");
 		ObjectError globalErrorInList = errors.getGlobalErrors().get(0);
-		assertTrue("Same global error in list", defaultMessage.equals(globalErrorInList.getDefaultMessage()));
+		assertThat(defaultMessage).as("Same global error in list").isEqualTo(globalErrorInList.getDefaultMessage());
 		ObjectError globalErrorInAllList = errors.getAllErrors().get(3);
-		assertTrue("Same global error in list", defaultMessage.equals(globalErrorInAllList.getDefaultMessage()));
+		assertThat(defaultMessage).as("Same global error in list").isEqualTo(globalErrorInAllList.getDefaultMessage());
 
-		assertTrue("Correct field errors flag", errors.hasFieldErrors());
-		assertTrue("Correct number of field errors", errors.getFieldErrorCount() == 3);
-		assertTrue("Correct number of field errors in list", errors.getFieldErrors().size() == 3);
+		assertThat(errors.hasFieldErrors()).as("Correct field errors flag").isTrue();
+		assertThat(errors.getFieldErrorCount()).as("Correct number of field errors").isEqualTo(3);
+		assertThat(errors.getFieldErrors()).as("Correct number of field errors in list").hasSize(3);
 		FieldError fieldError = errors.getFieldError();
-		assertTrue("Field error code not escaped", "NAME_EMPTY &".equals(fieldError.getCode()));
-		assertTrue("Field value escaped", "empty &amp;".equals(errors.getFieldValue("name")));
+		assertThat(fieldError.getCode()).as("Field error code not escaped").isEqualTo("NAME_EMPTY &");
+		assertThat(errors.getFieldValue("name")).as("Field value escaped").isEqualTo("empty &amp;");
 		FieldError fieldErrorInList = errors.getFieldErrors().get(0);
-		assertTrue("Same field error in list", fieldError.getDefaultMessage().equals(fieldErrorInList.getDefaultMessage()));
+		assertThat(fieldError.getDefaultMessage()).as("Same field error in list")
+				.isEqualTo(fieldErrorInList.getDefaultMessage());
 
-		assertTrue("Correct name errors flag", errors.hasFieldErrors("name"));
-		assertTrue("Correct number of name errors", errors.getFieldErrorCount("name") == 1);
-		assertTrue("Correct number of name errors in list", errors.getFieldErrors("name").size() == 1);
+		assertThat(errors.hasFieldErrors("name")).as("Correct name errors flag").isTrue();
+		assertThat(errors.getFieldErrorCount("name")).as("Correct number of name errors").isOne();
+		assertThat(errors.getFieldErrors("name")).as("Correct number of name errors in list").hasSize(1);
 		FieldError nameError = errors.getFieldError("name");
-		assertTrue("Name error message escaped", "message: &amp;".equals(nameError.getDefaultMessage()));
-		assertTrue("Name error code not escaped", "NAME_EMPTY &".equals(nameError.getCode()));
-		assertTrue("Name value escaped", "empty &amp;".equals(errors.getFieldValue("name")));
+		assertThat(nameError.getDefaultMessage()).as("Name error message escaped").isEqualTo("message: &amp;");
+		assertThat(nameError.getCode()).as("Name error code not escaped").isEqualTo("NAME_EMPTY &");
+		assertThat(errors.getFieldValue("name")).as("Name value escaped").isEqualTo("empty &amp;");
 		FieldError nameErrorInList = errors.getFieldErrors("name").get(0);
-		assertTrue("Same name error in list", nameError.getDefaultMessage().equals(nameErrorInList.getDefaultMessage()));
+		assertThat(nameError.getDefaultMessage()).as("Same name error in list")
+				.isEqualTo(nameErrorInList.getDefaultMessage());
 
-		assertTrue("Correct age errors flag", errors.hasFieldErrors("age"));
-		assertTrue("Correct number of age errors", errors.getFieldErrorCount("age") == 2);
-		assertTrue("Correct number of age errors in list", errors.getFieldErrors("age").size() == 2);
+		assertThat(errors.hasFieldErrors("age")).as("Correct age errors flag").isTrue();
+		assertThat(errors.getFieldErrorCount("age")).as("Correct number of age errors").isEqualTo(2);
+		assertThat(errors.getFieldErrors("age")).as("Correct number of age errors in list").hasSize(2);
 		FieldError ageError = errors.getFieldError("age");
-		assertTrue("Age error message escaped", "message: &lt;tag&gt;".equals(ageError.getDefaultMessage()));
-		assertTrue("Age error code not escaped", "AGE_NOT_SET <tag>".equals(ageError.getCode()));
-		assertTrue("Age value not escaped", (new Integer(0)).equals(errors.getFieldValue("age")));
+		assertThat(ageError.getDefaultMessage()).as("Age error message escaped").isEqualTo("message: &lt;tag&gt;");
+		assertThat(ageError.getCode()).as("Age error code not escaped").isEqualTo("AGE_NOT_SET <tag>");
+		assertThat((Integer.valueOf(0))).as("Age value not escaped").isEqualTo(errors.getFieldValue("age"));
 		FieldError ageErrorInList = errors.getFieldErrors("age").get(0);
-		assertTrue("Same name error in list", ageError.getDefaultMessage().equals(ageErrorInList.getDefaultMessage()));
+		assertThat(ageError.getDefaultMessage()).as("Same name error in list")
+				.isEqualTo(ageErrorInList.getDefaultMessage());
 		FieldError ageError2 = errors.getFieldErrors("age").get(1);
-		assertTrue("Age error 2 message escaped", "message: &lt;tag&gt;".equals(ageError2.getDefaultMessage()));
-		assertTrue("Age error 2 code not escaped", "AGE_NOT_32 <tag>".equals(ageError2.getCode()));
+		assertThat(ageError2.getDefaultMessage()).as("Age error 2 message escaped").isEqualTo("message: &lt;tag&gt;");
+		assertThat(ageError2.getCode()).as("Age error 2 code not escaped").isEqualTo("AGE_NOT_32 <tag>");
 	}
 
 }
