@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,206 +17,232 @@
 package org.springframework.web.util;
 
 import java.net.URI;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.assertThatNoException;
 
 /**
  * @author Arjen Poutsma
  * @author Juergen Hoeller
  * @author Rossen Stoyanchev
  */
-public class UriTemplateTests {
+class UriTemplateTests {
 
 	@Test
-	public void getVariableNames() throws Exception {
+	void emptyPathDoesNotThrowException() {
+		assertThatNoException().isThrownBy(() -> new UriTemplate(""));
+	}
+
+	@Test
+	void nullPathThrowsException() {
+		assertThatIllegalArgumentException().isThrownBy(() -> new UriTemplate(null));
+	}
+
+	@Test
+	void getVariableNames() {
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		List<String> variableNames = template.getVariableNames();
-		assertEquals("Invalid variable names", Arrays.asList("hotel", "booking"), variableNames);
+		assertThat(variableNames).as("Invalid variable names").containsExactly("hotel", "booking");
 	}
 
 	@Test
-	public void expandVarArgs() throws Exception {
+	void getVariableNamesFromEmpty() {
+		UriTemplate template = new UriTemplate("");
+		List<String> variableNames = template.getVariableNames();
+		assertThat(variableNames).isEmpty();
+	}
+
+	@Test
+	void expandVarArgs() {
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		URI result = template.expand("1", "42");
-		assertEquals("Invalid expanded template", new URI("/hotels/1/bookings/42"), result);
+		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create("/hotels/1/bookings/42"));
 	}
 
-	// SPR-9712
-
 	@Test
-	public void expandVarArgsWithArrayValue() throws Exception {
+	void expandVarArgsFromEmpty() {
+		UriTemplate template = new UriTemplate("");
+		URI result = template.expand();
+		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create(""));
+
+		result = template.expand("1", "42");
+		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create(""));
+	}
+
+	@Test  // SPR-9712
+	void expandVarArgsWithArrayValue() {
 		UriTemplate template = new UriTemplate("/sum?numbers={numbers}");
 		URI result = template.expand(new int[] {1, 2, 3});
-		assertEquals(new URI("/sum?numbers=1,2,3"), result);
-	}
-
-	@Test(expected = IllegalArgumentException.class)
-	public void expandVarArgsNotEnoughVariables() throws Exception {
-		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
-		template.expand("1");
+		assertThat(result).isEqualTo(URI.create("/sum?numbers=1,2,3"));
 	}
 
 	@Test
-	public void expandMap() throws Exception {
-		Map<String, String> uriVariables = new HashMap<>(2);
-		uriVariables.put("booking", "42");
-		uriVariables.put("hotel", "1");
+	void expandVarArgsNotEnoughVariables() {
+		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
+		assertThatIllegalArgumentException().isThrownBy(() -> template.expand("1"));
+	}
+
+	@Test
+	void expandMap() {
+		Map<String, String> uriVariables = Map.of("booking", "42", "hotel", "1");
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		URI result = template.expand(uriVariables);
-		assertEquals("Invalid expanded template", new URI("/hotels/1/bookings/42"), result);
+		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create("/hotels/1/bookings/42"));
 	}
 
 	@Test
-	public void expandMapDuplicateVariables() throws Exception {
+	void expandMapDuplicateVariables() {
 		UriTemplate template = new UriTemplate("/order/{c}/{c}/{c}");
-		assertEquals(Arrays.asList("c", "c", "c"), template.getVariableNames());
-		URI result = template.expand(Collections.singletonMap("c", "cheeseburger"));
-		assertEquals(new URI("/order/cheeseburger/cheeseburger/cheeseburger"), result);
+		assertThat(template.getVariableNames()).containsExactly("c", "c", "c");
+		URI result = template.expand(Map.of("c", "cheeseburger"));
+		assertThat(result).isEqualTo(URI.create("/order/cheeseburger/cheeseburger/cheeseburger"));
 	}
 
 	@Test
-	public void expandMapNonString() throws Exception {
-		Map<String, Integer> uriVariables = new HashMap<>(2);
-		uriVariables.put("booking", 42);
-		uriVariables.put("hotel", 1);
+	void expandMapNonString() {
+		Map<String, Integer> uriVariables = Map.of("booking", 42, "hotel", 1);
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		URI result = template.expand(uriVariables);
-		assertEquals("Invalid expanded template", new URI("/hotels/1/bookings/42"), result);
+		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create("/hotels/1/bookings/42"));
 	}
 
 	@Test
-	public void expandMapEncoded() throws Exception {
-		Map<String, String> uriVariables = Collections.singletonMap("hotel", "Z\u00fcrich");
+	void expandMapEncoded() {
+		Map<String, String> uriVariables = Map.of("hotel", "Z\u00fcrich");
 		UriTemplate template = new UriTemplate("/hotel list/{hotel}");
 		URI result = template.expand(uriVariables);
-		assertEquals("Invalid expanded template", new URI("/hotel%20list/Z%C3%BCrich"), result);
-	}
-
-	@Test(expected = IllegalArgumentException.class)
-	public void expandMapUnboundVariables() throws Exception {
-		Map<String, String> uriVariables = new HashMap<>(2);
-		uriVariables.put("booking", "42");
-		uriVariables.put("bar", "1");
-		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
-		template.expand(uriVariables);
+		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create("/hotel%20list/Z%C3%BCrich"));
 	}
 
 	@Test
-	public void expandEncoded() throws Exception {
+	void expandMapUnboundVariables() {
+		Map<String, String> uriVariables = Map.of("booking", "42", "bar", "1");
+		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
+		assertThatIllegalArgumentException().isThrownBy(() -> template.expand(uriVariables));
+	}
+
+	@Test
+	void expandEncoded() {
 		UriTemplate template = new UriTemplate("/hotel list/{hotel}");
 		URI result = template.expand("Z\u00fcrich");
-		assertEquals("Invalid expanded template", new URI("/hotel%20list/Z%C3%BCrich"), result);
+		assertThat(result).as("Invalid expanded template").isEqualTo(URI.create("/hotel%20list/Z%C3%BCrich"));
 	}
 
 	@Test
-	public void matches() throws Exception {
+	void matches() {
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
-		assertTrue("UriTemplate does not match", template.matches("/hotels/1/bookings/42"));
-		assertFalse("UriTemplate matches", template.matches("/hotels/bookings"));
-		assertFalse("UriTemplate matches", template.matches(""));
-		assertFalse("UriTemplate matches", template.matches(null));
+		assertThat(template.matches("/hotels/1/bookings/42")).as("UriTemplate does not match").isTrue();
+		assertThat(template.matches("/hotels/bookings")).as("UriTemplate matches").isFalse();
+		assertThat(template.matches("")).as("UriTemplate matches").isFalse();
+		assertThat(template.matches(null)).as("UriTemplate matches").isFalse();
 	}
 
 	@Test
-	public void matchesCustomRegex() throws Exception {
+	void matchesAgainstEmpty() {
+		UriTemplate template = new UriTemplate("");
+		assertThat(template.matches("/hotels/1/bookings/42")).as("UriTemplate matches").isFalse();
+		assertThat(template.matches("/hotels/bookings")).as("UriTemplate matches").isFalse();
+		assertThat(template.matches("")).as("UriTemplate does not match").isTrue();
+		assertThat(template.matches(null)).as("UriTemplate matches").isFalse();
+	}
+
+	@Test
+	void matchesCustomRegex() {
 		UriTemplate template = new UriTemplate("/hotels/{hotel:\\d+}");
-		assertTrue("UriTemplate does not match", template.matches("/hotels/42"));
-		assertFalse("UriTemplate matches", template.matches("/hotels/foo"));
+		assertThat(template.matches("/hotels/42")).as("UriTemplate does not match").isTrue();
+		assertThat(template.matches("/hotels/foo")).as("UriTemplate matches").isFalse();
 	}
 
 	@Test
-	public void match() throws Exception {
-		Map<String, String> expected = new HashMap<>(2);
-		expected.put("booking", "42");
-		expected.put("hotel", "1");
+	void match() {
+		Map<String, String> expected = Map.of("booking", "42", "hotel", "1");
 
 		UriTemplate template = new UriTemplate("/hotels/{hotel}/bookings/{booking}");
 		Map<String, String> result = template.match("/hotels/1/bookings/42");
-		assertEquals("Invalid match", expected, result);
+		assertThat(result).as("Invalid match").isEqualTo(expected);
 	}
 
 	@Test
-	public void matchCustomRegex() throws Exception {
-		Map<String, String> expected = new HashMap<>(2);
-		expected.put("booking", "42");
-		expected.put("hotel", "1");
+	void matchAgainstEmpty() {
+		UriTemplate template = new UriTemplate("");
+		Map<String, String> result = template.match("/hotels/1/bookings/42");
+		assertThat(result).as("Invalid match").isEmpty();
+	}
+
+	@Test
+	void matchCustomRegex() {
+		Map<String, String> expected = Map.of("booking", "42", "hotel", "1");
 
 		UriTemplate template = new UriTemplate("/hotels/{hotel:\\d}/bookings/{booking:\\d+}");
 		Map<String, String> result = template.match("/hotels/1/bookings/42");
-		assertEquals("Invalid match", expected, result);
+		assertThat(result).as("Invalid match").isEqualTo(expected);
 	}
 
-	@Test // SPR-13627
-	public void matchCustomRegexWithNestedCurlyBraces() throws Exception {
+	@Test  // SPR-13627
+	void matchCustomRegexWithNestedCurlyBraces() {
 		UriTemplate template = new UriTemplate("/site.{domain:co.[a-z]{2}}");
 		Map<String, String> result = template.match("/site.co.eu");
-		assertEquals("Invalid match", Collections.singletonMap("domain", "co.eu"), result);
+		assertThat(result).as("Invalid match").isEqualTo(Map.of("domain", "co.eu"));
 	}
 
 	@Test
-	public void matchDuplicate() throws Exception {
+	void matchDuplicate() {
 		UriTemplate template = new UriTemplate("/order/{c}/{c}/{c}");
 		Map<String, String> result = template.match("/order/cheeseburger/cheeseburger/cheeseburger");
-		Map<String, String> expected = Collections.singletonMap("c", "cheeseburger");
-		assertEquals("Invalid match", expected, result);
+		assertThat(result).as("Invalid match").isEqualTo(Map.of("c", "cheeseburger"));
 	}
 
 	@Test
-	public void matchMultipleInOneSegment() throws Exception {
+	void matchMultipleInOneSegment() {
 		UriTemplate template = new UriTemplate("/{foo}-{bar}");
 		Map<String, String> result = template.match("/12-34");
-		Map<String, String> expected = new HashMap<>(2);
-		expected.put("foo", "12");
-		expected.put("bar", "34");
-		assertEquals("Invalid match", expected, result);
+		Map<String, String> expected = Map.of("foo", "12", "bar", "34");
+		assertThat(result).as("Invalid match").isEqualTo(expected);
 	}
 
-	@Test // SPR-16169
-	public void matchWithMultipleSegmentsAtTheEnd() {
+	@Test  // SPR-16169
+	void matchWithMultipleSegmentsAtTheEnd() {
 		UriTemplate template = new UriTemplate("/account/{accountId}");
-		assertFalse(template.matches("/account/15/alias/5"));
+		assertThat(template.matches("/account/15/alias/5")).isFalse();
 	}
 
 	@Test
-	public void queryVariables() throws Exception {
+	void queryVariables() {
 		UriTemplate template = new UriTemplate("/search?q={query}");
-		assertTrue(template.matches("/search?q=foo"));
+		assertThat(template.matches("/search?q=foo")).isTrue();
 	}
 
 	@Test
-	public void fragments() throws Exception {
+	void fragments() {
 		UriTemplate template = new UriTemplate("/search#{fragment}");
-		assertTrue(template.matches("/search#foo"));
+		assertThat(template.matches("/search#foo")).isTrue();
 
 		template = new UriTemplate("/search?query={query}#{fragment}");
-		assertTrue(template.matches("/search?query=foo#bar"));
+		assertThat(template.matches("/search?query=foo#bar")).isTrue();
 	}
 
-	@Test // SPR-13705
-	public void matchesWithSlashAtTheEnd() {
-		UriTemplate uriTemplate = new UriTemplate("/test/");
-		assertTrue(uriTemplate.matches("/test/"));
+	@Test  // SPR-13705
+	void matchesWithSlashAtTheEnd() {
+		assertThat(new UriTemplate("/test/").matches("/test/")).isTrue();
 	}
 
 	@Test
-	public void expandWithDollar() {
+	void expandWithDollar() {
 		UriTemplate template = new UriTemplate("/{a}");
 		URI uri = template.expand("$replacement");
-		assertEquals("/$replacement", uri.toString());
+		assertThat(uri).hasToString("/$replacement");
 	}
 
 	@Test
-	public void expandWithAtSign() {
+	void expandWithAtSign() {
 		UriTemplate template = new UriTemplate("http://localhost/query={query}");
 		URI uri = template.expand("foo@bar");
-		assertEquals("http://localhost/query=foo@bar", uri.toString());
+		assertThat(uri).hasToString("http://localhost/query=foo@bar");
 	}
 
 }
