@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2017 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -20,16 +20,18 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+
+import org.jspecify.annotations.Nullable;
 
 import org.springframework.format.FormatterRegistry;
 import org.springframework.http.codec.ServerCodecConfigurer;
-import org.springframework.lang.Nullable;
 import org.springframework.util.CollectionUtils;
 import org.springframework.validation.MessageCodesResolver;
 import org.springframework.validation.Validator;
+import org.springframework.web.ErrorResponse;
 import org.springframework.web.reactive.accept.RequestedContentTypeResolverBuilder;
 import org.springframework.web.reactive.result.method.annotation.ArgumentResolverConfigurer;
+import org.springframework.web.reactive.socket.server.WebSocketService;
 
 /**
  * A {@link WebFluxConfigurer} that delegates to one or more others.
@@ -51,31 +53,6 @@ public class WebFluxConfigurerComposite implements WebFluxConfigurer {
 
 
 	@Override
-	public void configureContentTypeResolver(RequestedContentTypeResolverBuilder builder) {
-		this.delegates.forEach(delegate -> delegate.configureContentTypeResolver(builder));
-	}
-
-	@Override
-	public void addCorsMappings(CorsRegistry registry) {
-		this.delegates.forEach(delegate -> delegate.addCorsMappings(registry));
-	}
-
-	@Override
-	public void configurePathMatching(PathMatchConfigurer configurer) {
-		this.delegates.forEach(delegate -> delegate.configurePathMatching(configurer));
-	}
-
-	@Override
-	public void addResourceHandlers(ResourceHandlerRegistry registry) {
-		this.delegates.forEach(delegate -> delegate.addResourceHandlers(registry));
-	}
-
-	@Override
-	public void configureArgumentResolvers(ArgumentResolverConfigurer configurer) {
-		this.delegates.forEach(delegate -> delegate.configureArgumentResolvers(configurer));
-	}
-
-	@Override
 	public void configureHttpMessageCodecs(ServerCodecConfigurer configurer) {
 		this.delegates.forEach(delegate -> delegate.configureHttpMessageCodecs(configurer));
 	}
@@ -86,13 +63,54 @@ public class WebFluxConfigurerComposite implements WebFluxConfigurer {
 	}
 
 	@Override
-	public Validator getValidator() {
+	@SuppressWarnings("NullAway") // https://github.com/uber/NullAway/issues/1128
+	public @Nullable Validator getValidator() {
 		return createSingleBean(WebFluxConfigurer::getValidator, Validator.class);
 	}
 
 	@Override
-	public MessageCodesResolver getMessageCodesResolver() {
+	@SuppressWarnings("NullAway") // https://github.com/uber/NullAway/issues/1128
+	public @Nullable MessageCodesResolver getMessageCodesResolver() {
 		return createSingleBean(WebFluxConfigurer::getMessageCodesResolver, MessageCodesResolver.class);
+	}
+
+	@Override
+	public void addCorsMappings(CorsRegistry registry) {
+		this.delegates.forEach(delegate -> delegate.addCorsMappings(registry));
+	}
+
+	@Override
+	public void configureBlockingExecution(BlockingExecutionConfigurer configurer) {
+		this.delegates.forEach(delegate -> delegate.configureBlockingExecution(configurer));
+	}
+
+	@Override
+	public void configureContentTypeResolver(RequestedContentTypeResolverBuilder builder) {
+		this.delegates.forEach(delegate -> delegate.configureContentTypeResolver(builder));
+	}
+
+	@Override
+	public void configureApiVersioning(ApiVersionConfigurer configurer) {
+		for (WebFluxConfigurer delegate : this.delegates) {
+			delegate.configureApiVersioning(configurer);
+		}
+	}
+
+	@Override
+	public void configurePathMatching(PathMatchConfigurer configurer) {
+		this.delegates.forEach(delegate -> delegate.configurePathMatching(configurer));
+	}
+
+	@Override
+	public void configureArgumentResolvers(ArgumentResolverConfigurer configurer) {
+		this.delegates.forEach(delegate -> delegate.configureArgumentResolvers(configurer));
+	}
+
+	@Override
+	public void addErrorResponseInterceptors(List<ErrorResponse.Interceptor> interceptors) {
+		for (WebFluxConfigurer delegate : this.delegates) {
+			delegate.addErrorResponseInterceptors(interceptors);
+		}
 	}
 
 	@Override
@@ -100,9 +118,19 @@ public class WebFluxConfigurerComposite implements WebFluxConfigurer {
 		this.delegates.forEach(delegate -> delegate.configureViewResolvers(registry));
 	}
 
-	@Nullable
-	private <T> T createSingleBean(Function<WebFluxConfigurer, T> factory, Class<T> beanType) {
-		List<T> result = this.delegates.stream().map(factory).filter(Objects::nonNull).collect(Collectors.toList());
+	@Override
+	public void addResourceHandlers(ResourceHandlerRegistry registry) {
+		this.delegates.forEach(delegate -> delegate.addResourceHandlers(registry));
+	}
+
+	@Override
+	@SuppressWarnings("NullAway") // https://github.com/uber/NullAway/issues/1128
+	public @Nullable WebSocketService getWebSocketService() {
+		return createSingleBean(WebFluxConfigurer::getWebSocketService, WebSocketService.class);
+	}
+
+	private <T> @Nullable T createSingleBean(Function<WebFluxConfigurer, @Nullable T> factory, Class<T> beanType) {
+		List<T> result = this.delegates.stream().map(factory).filter(Objects::nonNull).toList();
 		if (result.isEmpty()) {
 			return null;
 		}
