@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,8 +17,6 @@
 package org.springframework.web.reactive.result;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
@@ -26,13 +24,14 @@ import java.util.function.Supplier;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.jspecify.annotations.Nullable;
 
 import org.springframework.core.Ordered;
 import org.springframework.core.ReactiveAdapter;
 import org.springframework.core.ReactiveAdapterRegistry;
 import org.springframework.http.MediaType;
-import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
+import org.springframework.util.MimeTypeUtils;
 import org.springframework.web.reactive.HandlerMapping;
 import org.springframework.web.reactive.HandlerResult;
 import org.springframework.web.reactive.accept.RequestedContentTypeResolver;
@@ -49,7 +48,7 @@ import org.springframework.web.server.ServerWebExchange;
 public abstract class HandlerResultHandlerSupport implements Ordered {
 
 	private static final List<MediaType> ALL_APPLICATION_MEDIA_TYPES =
-			Arrays.asList(MediaType.ALL, new MediaType("application"));
+			List.of(MediaType.ALL, new MediaType("application"));
 
 
 	protected final Log logger = LogFactory.getLog(getClass());
@@ -88,7 +87,7 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 	/**
 	 * Set the order for this result handler relative to others.
 	 * <p>By default set to {@link Ordered#LOWEST_PRECEDENCE}, however see
-	 * Javadoc of sub-classes which may change this default.
+	 * Javadoc of subclasses which may change this default.
 	 * @param order the order
 	 */
 	public void setOrder(int order) {
@@ -105,20 +104,28 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 	 * Get a {@code ReactiveAdapter} for the top-level return value type.
 	 * @return the matching adapter, or {@code null} if none
 	 */
-	@Nullable
-	protected ReactiveAdapter getAdapter(HandlerResult result) {
+	protected @Nullable ReactiveAdapter getAdapter(HandlerResult result) {
 		return getAdapterRegistry().getAdapter(result.getReturnType().resolve(), result.getReturnValue());
 	}
 
 	/**
-	 * Select the best media type for the current request through a content negotiation algorithm.
+	 * Select the best media type for the current request through a content
+	 * negotiation algorithm.
 	 * @param exchange the current request
-	 * @param producibleTypesSupplier the media types that can be produced for the current request
+	 * @param producibleTypesSupplier the media types producible for the request
 	 * @return the selected media type, or {@code null} if none
 	 */
-	@Nullable
-	protected MediaType selectMediaType(ServerWebExchange exchange,
-			Supplier<List<MediaType>> producibleTypesSupplier) {
+	protected @Nullable MediaType selectMediaType(ServerWebExchange exchange, Supplier<List<MediaType>> producibleTypesSupplier) {
+		return selectMediaType(exchange, producibleTypesSupplier, getAcceptableTypes(exchange));
+	}
+
+	/**
+	 * Variant of {@link #selectMediaType(ServerWebExchange, Supplier)} with a
+	 * given list of requested (acceptable) media types.
+	 */
+	protected @Nullable MediaType selectMediaType(
+			ServerWebExchange exchange, Supplier<List<MediaType>> producibleTypesSupplier,
+			List<MediaType> acceptableTypes) {
 
 		MediaType contentType = exchange.getResponse().getHeaders().getContentType();
 		if (contentType != null && contentType.isConcrete()) {
@@ -128,7 +135,6 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 			return contentType;
 		}
 
-		List<MediaType> acceptableTypes = getAcceptableTypes(exchange);
 		List<MediaType> producibleTypes = getProducibleTypes(exchange, producibleTypesSupplier);
 
 		Set<MediaType> compatibleMediaTypes = new LinkedHashSet<>();
@@ -141,7 +147,7 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 		}
 
 		List<MediaType> result = new ArrayList<>(compatibleMediaTypes);
-		MediaType.sortBySpecificityAndQuality(result);
+		MimeTypeUtils.sortBySpecificity(result);
 
 		MediaType selected = null;
 		for (MediaType mediaType : result) {
@@ -156,9 +162,10 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 		}
 
 		if (selected != null) {
+			selected = selected.removeQualityValue();
 			if (logger.isDebugEnabled()) {
-				logger.debug("Using '" + selected + "' given " +
-						acceptableTypes + " and supported " + producibleTypes);
+				logger.debug(exchange.getLogPrefix() + "Using '" + selected + "' given " + acceptableTypes +
+						" and supported " + producibleTypes);
 			}
 		}
 		else if (logger.isDebugEnabled()) {
@@ -173,9 +180,8 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 		return getContentTypeResolver().resolveMediaTypes(exchange);
 	}
 
-	@SuppressWarnings("unchecked")
-	private List<MediaType> getProducibleTypes(ServerWebExchange exchange,
-			Supplier<List<MediaType>> producibleTypesSupplier) {
+	private List<MediaType> getProducibleTypes(
+			ServerWebExchange exchange, Supplier<List<MediaType>> producibleTypesSupplier) {
 
 		Set<MediaType> mediaTypes = exchange.getAttribute(HandlerMapping.PRODUCIBLE_MEDIA_TYPES_ATTRIBUTE);
 		return (mediaTypes != null ? new ArrayList<>(mediaTypes) : producibleTypesSupplier.get());
@@ -183,8 +189,12 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 
 	private MediaType selectMoreSpecificMediaType(MediaType acceptable, MediaType producible) {
 		producible = producible.copyQualityValue(acceptable);
-		Comparator<MediaType> comparator = MediaType.SPECIFICITY_COMPARATOR;
-		return (comparator.compare(acceptable, producible) <= 0 ? acceptable : producible);
+		if (acceptable.isLessSpecific(producible)) {
+			return producible;
+		}
+		else {
+			return acceptable;
+		}
 	}
 
 }
