@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,162 +18,148 @@ package org.springframework.web.reactive.result.condition;
 
 import java.util.Arrays;
 import java.util.Iterator;
-import java.util.stream.Collectors;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import org.springframework.mock.web.test.server.MockServerWebExchange;
 import org.springframework.web.server.ServerWebExchange;
+import org.springframework.web.testfixture.server.MockServerWebExchange;
 import org.springframework.web.util.pattern.PathPattern;
 import org.springframework.web.util.pattern.PathPatternParser;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.springframework.mock.http.server.reactive.test.MockServerHttpRequest.get;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.springframework.web.testfixture.http.server.reactive.MockServerHttpRequest.get;
 
 /**
- * Unit tests for {@link PatternsRequestCondition}.
+ * Tests for {@link PatternsRequestCondition}.
  *
  * @author Rossen Stoyanchev
  */
-public class PatternsRequestConditionTests {
+class PatternsRequestConditionTests {
 
 	private final PathPatternParser parser = new PathPatternParser();
 
 	@Test
-	public void prependNonEmptyPatternsOnly() {
+	void prependNonEmptyPatternsOnly() {
 		PatternsRequestCondition c = createPatternsCondition("");
-		assertEquals("Do not prepend empty patterns (SPR-8255)", "",
-				c.getPatterns().iterator().next().getPatternString());
+		assertThat(c.getPatterns().iterator().next().getPatternString())
+				.as("Do not prepend empty patterns (SPR-8255)").isEmpty();
 	}
 
 	@Test
-	public void combineEmptySets() {
+	void combineEmptySets() {
 		PatternsRequestCondition c1 = new PatternsRequestCondition();
 		PatternsRequestCondition c2 = new PatternsRequestCondition();
+		PatternsRequestCondition c3 = c1.combine(c2);
 
-		assertEquals(createPatternsCondition(), c1.combine(c2));
+		assertThat(c1.getPatterns()).isSameAs(c2.getPatterns()).containsExactly(this.parser.parse(""));
+		assertThat(c3.toString()).isEqualTo("[/ || ]");
 	}
 
 	@Test
-	public void combineOnePatternWithEmptySet() {
+	void combineOnePatternWithEmptySet() {
 		PatternsRequestCondition c1 = createPatternsCondition("/type1", "/type2");
 		PatternsRequestCondition c2 = new PatternsRequestCondition();
 
-		assertEquals(createPatternsCondition("/type1", "/type2"), c1.combine(c2));
+		assertThat(c1.combine(c2)).isEqualTo(createPatternsCondition("/type1", "/type2"));
 
 		c1 = new PatternsRequestCondition();
 		c2 = createPatternsCondition("/method1", "/method2");
 
-		assertEquals(createPatternsCondition("/method1", "/method2"), c1.combine(c2));
+		assertThat(c1.combine(c2)).isEqualTo(createPatternsCondition("/method1", "/method2"));
 	}
 
 	@Test
-	public void combineMultiplePatterns() {
+	void combineMultiplePatterns() {
 		PatternsRequestCondition c1 = createPatternsCondition("/t1", "/t2");
 		PatternsRequestCondition c2 = createPatternsCondition("/m1", "/m2");
 
-		assertEquals(createPatternsCondition("/t1/m1", "/t1/m2", "/t2/m1", "/t2/m2"), c1.combine(c2));
+		assertThat(c1.combine(c2)).isEqualTo(createPatternsCondition("/t1/m1", "/t1/m2", "/t2/m1", "/t2/m2"));
 	}
 
 	@Test
-	public void matchDirectPath() throws Exception {
+	void matchDirectPath() {
 		PatternsRequestCondition condition = createPatternsCondition("/foo");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
 
-		assertNotNull(match);
+		assertThat(match).isNotNull();
 	}
 
 	@Test
-	public void matchPattern() throws Exception {
+	void matchPattern() {
 		PatternsRequestCondition condition = createPatternsCondition("/foo/*");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo/bar"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
 
-		assertNotNull(match);
+		assertThat(match).isNotNull();
 	}
 
 	@Test
-	public void matchSortPatterns() throws Exception {
+	void matchSortPatterns() {
 		PatternsRequestCondition condition = createPatternsCondition("/*/*", "/foo/bar", "/foo/*");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo/bar"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
 		PatternsRequestCondition expected = createPatternsCondition("/foo/bar", "/foo/*", "/*/*");
 
-		assertEquals(expected, match);
+		assertThat(match).isEqualTo(expected);
 	}
 
 	@Test
-	public void matchTrailingSlash() throws Exception {
-		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo/"));
-
-		PatternsRequestCondition condition = createPatternsCondition("/foo");
-		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
-
-		assertNotNull(match);
-		assertEquals("Should match by default", "/foo",
-				match.getPatterns().iterator().next().getPatternString());
-
-		condition = createPatternsCondition("/foo");
-		match = condition.getMatchingCondition(exchange);
-
-		assertNotNull(match);
-		assertEquals("Trailing slash should be insensitive to useSuffixPatternMatch settings (SPR-6164, SPR-5636)",
-				"/foo", match.getPatterns().iterator().next().getPatternString());
-
-		PathPatternParser parser = new PathPatternParser();
-		parser.setMatchOptionalTrailingSeparator(false);
-		condition = new PatternsRequestCondition(parser.parse("/foo"));
-		match = condition.getMatchingCondition(MockServerWebExchange.from(get("/foo/")));
-
-		assertNull(match);
-	}
-
-	@Test
-	public void matchPatternContainsExtension() throws Exception {
+	void matchPatternContainsExtension() {
 		PatternsRequestCondition condition = createPatternsCondition("/foo.jpg");
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo.html"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
 
-		assertNull(match);
+		assertThat(match).isNull();
+	}
+
+	@Test // gh-22543
+	public void matchWithEmptyPatterns() {
+		PatternsRequestCondition condition = new PatternsRequestCondition();
+		assertThat(condition.getMatchingCondition(MockServerWebExchange.from(get("")))).isNotNull();
+		assertThat(condition.getMatchingCondition(MockServerWebExchange.from(get("/anything")))).isNull();
+
+		condition = condition.combine(new PatternsRequestCondition());
+		assertThat(condition.getMatchingCondition(MockServerWebExchange.from(get("")))).isNotNull();
+		assertThat(condition.getMatchingCondition(MockServerWebExchange.from(get("/anything")))).isNull();
 	}
 
 	@Test
-	public void compareToConsistentWithEquals() throws Exception {
+	void compareToConsistentWithEquals() {
 		PatternsRequestCondition c1 = createPatternsCondition("/foo*");
 		PatternsRequestCondition c2 = createPatternsCondition("/foo*");
 
-		assertEquals(0, c1.compareTo(c2, MockServerWebExchange.from(get("/foo"))));
+		assertThat(c1.compareTo(c2, MockServerWebExchange.from(get("/foo")))).isEqualTo(0);
 	}
 
 	@Test
-	public void equallyMatchingPatternsAreBothPresent() throws Exception {
+	void equallyMatchingPatternsAreBothPresent() {
 		PatternsRequestCondition c = createPatternsCondition("/a", "/b");
-		assertEquals(2, c.getPatterns().size());
+		assertThat(c.getPatterns()).hasSize(2);
 		Iterator<PathPattern> itr = c.getPatterns().iterator();
-		assertEquals("/a", itr.next().getPatternString());
-		assertEquals("/b", itr.next().getPatternString());
+		assertThat(itr.next().getPatternString()).isEqualTo("/a");
+		assertThat(itr.next().getPatternString()).isEqualTo("/b");
 	}
 
 	@Test
-	public void comparePatternSpecificity() throws Exception {
+	void comparePatternSpecificity() {
 		ServerWebExchange exchange = MockServerWebExchange.from(get("/foo"));
 
 		PatternsRequestCondition c1 = createPatternsCondition("/fo*");
 		PatternsRequestCondition c2 = createPatternsCondition("/foo");
 
-		assertEquals(1, c1.compareTo(c2, exchange));
+		assertThat(c1.compareTo(c2, exchange)).isEqualTo(1);
 
 		c1 = createPatternsCondition("/fo*");
 		c2 = createPatternsCondition("/*oo");
 
-		assertEquals("Patterns are equally specific even if not the same", 0, c1.compareTo(c2, exchange));
+		assertThat(c1.compareTo(c2, exchange))
+				.as("Patterns are equally specific even if not the same")
+				.isEqualTo(0);
 	}
 
 	@Test
-	public void compareNumberOfMatchingPatterns() throws Exception {
+	void compareNumberOfMatchingPatterns() {
 		ServerWebExchange exchange = MockServerWebExchange.from(get("/foo.html"));
 
 		PatternsRequestCondition c1 = createPatternsCondition("/foo.*", "/foo.jpeg");
@@ -182,15 +168,15 @@ public class PatternsRequestConditionTests {
 		PatternsRequestCondition match1 = c1.getMatchingCondition(exchange);
 		PatternsRequestCondition match2 = c2.getMatchingCondition(exchange);
 
-		assertNotNull(match1);
-		assertEquals(1, match1.compareTo(match2, exchange));
+		assertThat(match1).isNotNull();
+		assertThat(match1.compareTo(match2, exchange)).isEqualTo(1);
 	}
 
 	private PatternsRequestCondition createPatternsCondition(String... patterns) {
 		return new PatternsRequestCondition(Arrays
 				.stream(patterns)
-				.map(rawPattern -> this.parser.parse(rawPattern))
-				.collect(Collectors.toList()));
+				.map(this.parser::parse)
+				.toList());
 	}
 
 }
