@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2017 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -21,16 +21,13 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.mockito.Mockito;
+import org.jspecify.annotations.Nullable;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.core.Ordered;
-import org.springframework.lang.Nullable;
-import org.springframework.mock.web.test.MockHttpServletRequest;
-import org.springframework.mock.web.test.MockHttpServletResponse;
+import org.springframework.http.server.RequestPath;
 import org.springframework.ui.ModelMap;
-import org.springframework.util.AntPathMatcher;
 import org.springframework.util.PathMatcher;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.context.request.WebRequestInterceptor;
@@ -38,12 +35,13 @@ import org.springframework.web.servlet.HandlerInterceptor;
 import org.springframework.web.servlet.handler.MappedInterceptor;
 import org.springframework.web.servlet.handler.WebRequestHandlerInterceptorAdapter;
 import org.springframework.web.servlet.i18n.LocaleChangeInterceptor;
-import org.springframework.web.servlet.theme.ThemeChangeInterceptor;
+import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
+import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
+import org.springframework.web.util.ServletRequestPathUtils;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.fail;
+import static org.mockito.Mockito.mock;
 
 /**
  * Test fixture with a {@link InterceptorRegistry}, two {@link HandlerInterceptor}s and two
@@ -52,13 +50,14 @@ import static org.junit.Assert.fail;
  * @author Rossen Stoyanchev
  * @author Eko Kurniawan Khannedy
  */
+@SuppressWarnings("deprecation")
 public class InterceptorRegistryTests {
 
 	private InterceptorRegistry registry;
 
 	private final HandlerInterceptor interceptor1 = new LocaleChangeInterceptor();
 
-	private final HandlerInterceptor interceptor2 = new ThemeChangeInterceptor();
+	private final HandlerInterceptor interceptor2 = new LocaleChangeInterceptor();
 
 	private TestWebRequestInterceptor webInterceptor1;
 
@@ -69,78 +68,79 @@ public class InterceptorRegistryTests {
 	private final MockHttpServletResponse response = new MockHttpServletResponse();
 
 
-	@Before
-	public void setUp() {
+	@BeforeEach
+	void setUp() {
 		this.registry = new InterceptorRegistry();
 		this.webInterceptor1 = new TestWebRequestInterceptor();
 		this.webInterceptor2 = new TestWebRequestInterceptor();
 	}
 
 	@Test
-	public void addInterceptor() {
+	void addInterceptor() {
 		this.registry.addInterceptor(this.interceptor1);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
-		assertEquals(Arrays.asList(this.interceptor1), interceptors);
+		assertThat(interceptors).isEqualTo(List.of(this.interceptor1));
 	}
 
 	@Test
-	public void addTwoInterceptors() {
+	void addTwoInterceptors() {
 		this.registry.addInterceptor(this.interceptor1);
 		this.registry.addInterceptor(this.interceptor2);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
-		assertEquals(Arrays.asList(this.interceptor1, this.interceptor2), interceptors);
+		assertThat(interceptors).isEqualTo(Arrays.asList(this.interceptor1, this.interceptor2));
 	}
 
 	@Test
-	public void addInterceptorsWithUrlPatterns() {
+	void addInterceptorsWithUrlPatterns() {
 		this.registry.addInterceptor(this.interceptor1).addPathPatterns("/path1/**").excludePathPatterns("/path1/secret");
 		this.registry.addInterceptor(this.interceptor2).addPathPatterns("/path2");
 
-		assertEquals(Arrays.asList(this.interceptor1), getInterceptorsForPath("/path1/test"));
-		assertEquals(Arrays.asList(this.interceptor2), getInterceptorsForPath("/path2"));
-		assertEquals(Collections.emptyList(), getInterceptorsForPath("/path1/secret"));
+		assertThat(getInterceptorsForPath("/path1/test")).containsExactly(this.interceptor1);
+		assertThat(getInterceptorsForPath("/path2")).containsExactly(this.interceptor2);
+		assertThat(getInterceptorsForPath("/path1/secret")).isEmpty();
 	}
 
 	@Test
-	public void addWebRequestInterceptor() throws Exception {
+	void addWebRequestInterceptor() throws Exception {
 		this.registry.addWebRequestInterceptor(this.webInterceptor1);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
 
-		assertEquals(1, interceptors.size());
+		assertThat(interceptors).hasSize(1);
 		verifyWebInterceptor(interceptors.get(0), this.webInterceptor1);
 	}
 
 	@Test
-	public void addWebRequestInterceptors() throws Exception {
+	void addWebRequestInterceptors() throws Exception {
 		this.registry.addWebRequestInterceptor(this.webInterceptor1);
 		this.registry.addWebRequestInterceptor(this.webInterceptor2);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
 
-		assertEquals(2, interceptors.size());
+		assertThat(interceptors).hasSize(2);
 		verifyWebInterceptor(interceptors.get(0), this.webInterceptor1);
 		verifyWebInterceptor(interceptors.get(1), this.webInterceptor2);
 	}
 
+	@SuppressWarnings("removal")
 	@Test
-	public void addInterceptorsWithCustomPathMatcher() {
-		PathMatcher pathMatcher = Mockito.mock(PathMatcher.class);
+	void addInterceptorsWithCustomPathMatcher() {
+		PathMatcher pathMatcher = mock();
 		this.registry.addInterceptor(interceptor1).addPathPatterns("/path1/**").pathMatcher(pathMatcher);
 
 		MappedInterceptor mappedInterceptor = (MappedInterceptor) this.registry.getInterceptors().get(0);
-		assertSame(pathMatcher, mappedInterceptor.getPathMatcher());
+		assertThat(mappedInterceptor.getPathMatcher()).isSameAs(pathMatcher);
 	}
 
 	@Test
-	public void addWebRequestInterceptorsWithUrlPatterns() throws Exception {
+	void addWebRequestInterceptorsWithUrlPatterns() throws Exception {
 		this.registry.addWebRequestInterceptor(this.webInterceptor1).addPathPatterns("/path1");
 		this.registry.addWebRequestInterceptor(this.webInterceptor2).addPathPatterns("/path2");
 
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath("/path1");
-		assertEquals(1, interceptors.size());
+		assertThat(interceptors).hasSize(1);
 		verifyWebInterceptor(interceptors.get(0), this.webInterceptor1);
 
 		interceptors = getInterceptorsForPath("/path2");
-		assertEquals(1, interceptors.size());
+		assertThat(interceptors).hasSize(1);
 		verifyWebInterceptor(interceptors.get(0), this.webInterceptor2);
 	}
 
@@ -149,19 +149,43 @@ public class InterceptorRegistryTests {
 		this.registry.addInterceptor(this.interceptor1).excludePathPatterns("/path1/secret");
 		this.registry.addInterceptor(this.interceptor2).addPathPatterns("/path2");
 
-		assertEquals(Collections.singletonList(this.interceptor1), getInterceptorsForPath("/path1"));
-		assertEquals(Arrays.asList(this.interceptor1, this.interceptor2), getInterceptorsForPath("/path2"));
-		assertEquals(Collections.emptyList(), getInterceptorsForPath("/path1/secret"));
+		assertThat(getInterceptorsForPath("/path1")).isEqualTo(Collections.singletonList(this.interceptor1));
+		assertThat(getInterceptorsForPath("/path2")).isEqualTo(Arrays.asList(this.interceptor1, this.interceptor2));
+		assertThat(getInterceptorsForPath("/path1/secret")).isEqualTo(Collections.emptyList());
+	}
+
+	@Test
+	void orderedInterceptors() {
+		this.registry.addInterceptor(this.interceptor1).order(Ordered.LOWEST_PRECEDENCE);
+		this.registry.addInterceptor(this.interceptor2).order(Ordered.HIGHEST_PRECEDENCE);
+
+		List<Object> interceptors = this.registry.getInterceptors();
+		assertThat(interceptors).hasSize(2);
+
+		assertThat(interceptors).element(0).isSameAs(this.interceptor2);
+		assertThat(interceptors).element(1).isSameAs(this.interceptor1);
+	}
+
+	@Test
+	void nonOrderedInterceptors() {
+		this.registry.addInterceptor(this.interceptor1).order(0);
+		this.registry.addInterceptor(this.interceptor2).order(0);
+
+		List<Object> interceptors = this.registry.getInterceptors();
+		assertThat(interceptors).hasSize(2);
+
+		assertThat(interceptors).element(0).isSameAs(this.interceptor1);
+		assertThat(interceptors).element(1).isSameAs(this.interceptor2);
 	}
 
 
-	private List<HandlerInterceptor> getInterceptorsForPath(String lookupPath) {
-		PathMatcher pathMatcher = new AntPathMatcher();
+	private List<HandlerInterceptor> getInterceptorsForPath(@Nullable String lookupPath) {
+		lookupPath = (lookupPath != null ? lookupPath : "");
+		this.request.setAttribute(ServletRequestPathUtils.PATH_ATTRIBUTE, RequestPath.parse(lookupPath, null));
 		List<HandlerInterceptor> result = new ArrayList<>();
 		for (Object interceptor : this.registry.getInterceptors()) {
-			if (interceptor instanceof MappedInterceptor) {
-				MappedInterceptor mappedInterceptor = (MappedInterceptor) interceptor;
-				if (mappedInterceptor.matches(lookupPath, pathMatcher)) {
+			if (interceptor instanceof MappedInterceptor mappedInterceptor) {
+				if (mappedInterceptor.matches(this.request)) {
 					result.add(mappedInterceptor.getInterceptor());
 				}
 			}
@@ -178,50 +202,29 @@ public class InterceptorRegistryTests {
 	private void verifyWebInterceptor(HandlerInterceptor interceptor,
 			TestWebRequestInterceptor webInterceptor) throws Exception {
 
-		assertTrue(interceptor instanceof WebRequestHandlerInterceptorAdapter);
+		boolean condition = interceptor instanceof WebRequestHandlerInterceptorAdapter;
+		assertThat(condition).isTrue();
 		interceptor.preHandle(this.request, this.response, null);
-		assertTrue(webInterceptor.preHandleInvoked);
+		assertThat(webInterceptor.preHandleInvoked).isTrue();
 	}
+
 
 	private static class TestWebRequestInterceptor implements WebRequestInterceptor {
 
 		private boolean preHandleInvoked = false;
 
 		@Override
-		public void preHandle(WebRequest request) throws Exception {
+		public void preHandle(WebRequest request) {
 			preHandleInvoked = true;
 		}
 
 		@Override
-		public void postHandle(WebRequest request, @Nullable ModelMap model) throws Exception {
+		public void postHandle(WebRequest request, @Nullable ModelMap model) {
 		}
 
 		@Override
-		public void afterCompletion(WebRequest request, @Nullable Exception ex) throws Exception {
+		public void afterCompletion(WebRequest request, @Nullable Exception ex) {
 		}
 	}
 
-	@Test
-	public void orderedInterceptors() throws Exception {
-		this.registry.addInterceptor(this.interceptor1).order(Ordered.LOWEST_PRECEDENCE);
-		this.registry.addInterceptor(this.interceptor2).order(Ordered.HIGHEST_PRECEDENCE);
-
-		List<Object> interceptors = this.registry.getInterceptors();
-		assertEquals(2, interceptors.size());
-
-		assertSame(this.interceptor2, interceptors.get(0));
-		assertSame(this.interceptor1, interceptors.get(1));
-	}
-
-	@Test
-	public void nonOrderedInterceptors() throws Exception {
-		this.registry.addInterceptor(this.interceptor1).order(0);
-		this.registry.addInterceptor(this.interceptor2).order(0);
-
-		List<Object> interceptors = this.registry.getInterceptors();
-		assertEquals(2, interceptors.size());
-
-		assertSame(this.interceptor1, interceptors.get(0));
-		assertSame(this.interceptor2, interceptors.get(1));
-	}
 }
