@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,21 +16,16 @@
 
 package org.springframework.web.servlet.view;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
+import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.http.HttpStatus;
-import org.springframework.mock.web.test.MockHttpServletRequest;
-import org.springframework.mock.web.test.MockHttpServletResponse;
-import org.springframework.mock.web.test.MockServletContext;
-import org.springframework.tests.sample.beans.TestBean;
 import org.springframework.ui.ModelMap;
 import org.springframework.web.context.ContextLoader;
 import org.springframework.web.context.support.StaticWebApplicationContext;
@@ -40,18 +35,21 @@ import org.springframework.web.servlet.View;
 import org.springframework.web.servlet.support.RequestDataValueProcessor;
 import org.springframework.web.servlet.support.RequestDataValueProcessorWrapper;
 import org.springframework.web.servlet.support.SessionFlashMapManager;
+import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
+import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
+import org.springframework.web.testfixture.servlet.MockServletContext;
 import org.springframework.web.util.WebUtils;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.BDDMockito.mock;
-import static org.mockito.BDDMockito.verify;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 
 /**
- * Tests for redirect view, and query string construction.
- * Doesn't test URL encoding, although it does check that it's called.
+ * Tests for redirect view and query string construction.
+ *
+ * <p>Doesn't test URL encoding, although it does check that it's called.
  *
  * @author Rod Johnson
  * @author Juergen Hoeller
@@ -60,109 +58,105 @@ import static org.mockito.BDDMockito.verify;
  * @author Rossen Stoyanchev
  * @since 27.05.2003
  */
-public class RedirectViewTests {
+class RedirectViewTests {
 
-	private MockHttpServletRequest request;
+	private MockHttpServletRequest request = new MockHttpServletRequest();
 
-	private MockHttpServletResponse response;
+	private MockHttpServletResponse response = new MockHttpServletResponse();
 
 
-	@Before
-	public void setUp() throws Exception {
-		this.request = new MockHttpServletRequest();
+	@BeforeEach
+	void setUp() {
 		this.request.setContextPath("/context");
 		this.request.setCharacterEncoding(WebUtils.DEFAULT_CHARACTER_ENCODING);
 		this.request.setAttribute(DispatcherServlet.OUTPUT_FLASH_MAP_ATTRIBUTE, new FlashMap());
 		this.request.setAttribute(DispatcherServlet.FLASH_MAP_MANAGER_ATTRIBUTE, new SessionFlashMapManager());
-		this.response = new MockHttpServletResponse();
-
 	}
 
 
-	@Test(expected = IllegalArgumentException.class)
-	public void noUrlSet() throws Exception {
+	@Test
+	void noUrlSet() {
 		RedirectView rv = new RedirectView();
-		rv.afterPropertiesSet();
+		assertThatIllegalArgumentException().isThrownBy(rv::afterPropertiesSet);
 	}
 
 	@Test
-	public void http11() throws Exception {
+	void http11() throws Exception {
 		RedirectView rv = new RedirectView();
-		rv.setUrl("http://url.somewhere.com");
+		rv.setUrl("https://url.somewhere.com");
 		rv.setHttp10Compatible(false);
 		rv.render(new HashMap<>(), request, response);
-		assertEquals(303, response.getStatus());
-		assertEquals("http://url.somewhere.com", response.getHeader("Location"));
+		assertThat(response.getStatus()).isEqualTo(303);
+		assertThat(response.getHeader("Location")).isEqualTo("https://url.somewhere.com");
 	}
 
 	@Test
-	public void explicitStatusCodeHttp11() throws Exception {
+	void explicitStatusCodeHttp11() throws Exception {
 		RedirectView rv = new RedirectView();
-		rv.setUrl("http://url.somewhere.com");
+		rv.setUrl("https://url.somewhere.com");
 		rv.setHttp10Compatible(false);
 		rv.setStatusCode(HttpStatus.MOVED_PERMANENTLY);
 		rv.render(new HashMap<>(), request, response);
-		assertEquals(301, response.getStatus());
-		assertEquals("http://url.somewhere.com", response.getHeader("Location"));
+		assertThat(response.getStatus()).isEqualTo(301);
+		assertThat(response.getHeader("Location")).isEqualTo("https://url.somewhere.com");
 	}
 
 	@Test
-	public void explicitStatusCodeHttp10() throws Exception {
+	void explicitStatusCodeHttp10() throws Exception {
 		RedirectView rv = new RedirectView();
-		rv.setUrl("http://url.somewhere.com");
+		rv.setUrl("https://url.somewhere.com");
 		rv.setStatusCode(HttpStatus.MOVED_PERMANENTLY);
 		rv.render(new HashMap<>(), request, response);
-		assertEquals(301, response.getStatus());
-		assertEquals("http://url.somewhere.com", response.getHeader("Location"));
+		assertThat(response.getStatus()).isEqualTo(301);
+		assertThat(response.getHeader("Location")).isEqualTo("https://url.somewhere.com");
 	}
 
 	@Test
-	public void attributeStatusCodeHttp10() throws Exception {
+	void attributeStatusCodeHttp10() throws Exception {
 		RedirectView rv = new RedirectView();
-		rv.setUrl("http://url.somewhere.com");
+		rv.setUrl("https://url.somewhere.com");
 		request.setAttribute(View.RESPONSE_STATUS_ATTRIBUTE, HttpStatus.CREATED);
 		rv.render(new HashMap<>(), request, response);
-		assertEquals(201, response.getStatus());
-		assertEquals("http://url.somewhere.com", response.getHeader("Location"));
+		assertThat(response.getStatus()).isEqualTo(201);
+		assertThat(response.getHeader("Location")).isEqualTo("https://url.somewhere.com");
 	}
 
 	@Test
-	public void attributeStatusCodeHttp11() throws Exception {
+	void attributeStatusCodeHttp11() throws Exception {
 		RedirectView rv = new RedirectView();
-		rv.setUrl("http://url.somewhere.com");
+		rv.setUrl("https://url.somewhere.com");
 		rv.setHttp10Compatible(false);
 		request.setAttribute(View.RESPONSE_STATUS_ATTRIBUTE, HttpStatus.CREATED);
 		rv.render(new HashMap<>(), request, response);
-		assertEquals(201, response.getStatus());
-		assertEquals("http://url.somewhere.com", response.getHeader("Location"));
+		assertThat(response.getStatus()).isEqualTo(201);
+		assertThat(response.getHeader("Location")).isEqualTo("https://url.somewhere.com");
 	}
 
 	@Test
-	@SuppressWarnings("AssertEqualsBetweenInconvertibleTypes")
-	public void flashMap() throws Exception {
+	void flashMap() throws Exception {
 		RedirectView rv = new RedirectView();
-		rv.setUrl("http://url.somewhere.com/path");
+		rv.setUrl("https://url.somewhere.com/path");
 		rv.setHttp10Compatible(false);
 		FlashMap flashMap = new FlashMap();
 		flashMap.put("successMessage", "yay!");
 		request.setAttribute(DispatcherServlet.OUTPUT_FLASH_MAP_ATTRIBUTE, flashMap);
 		ModelMap model = new ModelMap("id", "1");
 		rv.render(model, request, response);
-		assertEquals(303, response.getStatus());
-		assertEquals("http://url.somewhere.com/path?id=1", response.getHeader("Location"));
+		assertThat(response.getStatus()).isEqualTo(303);
+		assertThat(response.getHeader("Location")).isEqualTo("https://url.somewhere.com/path?id=1");
 
-		assertEquals("/path", flashMap.getTargetRequestPath());
-		assertEquals(model, flashMap.getTargetRequestParams().toSingleValueMap());
+		assertThat(flashMap.getTargetRequestPath()).isEqualTo("/path");
+		assertThat(flashMap.getTargetRequestParams().asSingleValueMap()).isEqualTo(model);
 	}
 
 	@Test
-	public void updateTargetUrl() throws Exception {
+	void updateTargetUrl() throws Exception {
 		StaticWebApplicationContext wac = new StaticWebApplicationContext();
 		wac.registerSingleton("requestDataValueProcessor", RequestDataValueProcessorWrapper.class);
 		wac.setServletContext(new MockServletContext());
 		wac.refresh();
 
-		RequestDataValueProcessor mockProcessor = mock(RequestDataValueProcessor.class);
+		RequestDataValueProcessor mockProcessor = mock();
 		wac.getBean(RequestDataValueProcessorWrapper.class).setRequestDataValueProcessor(mockProcessor);
 
 		RedirectView rv = new RedirectView();
@@ -176,9 +170,8 @@ public class RedirectViewTests {
 		verify(mockProcessor).processUrl(request, "/path");
 	}
 
-
 	@Test
-	public void updateTargetUrlWithContextLoader() throws Exception {
+	void updateTargetUrlWithContextLoader() throws Exception {
 		StaticWebApplicationContext wac = new StaticWebApplicationContext();
 		wac.registerSingleton("requestDataValueProcessor", RequestDataValueProcessorWrapper.class);
 
@@ -187,7 +180,7 @@ public class RedirectViewTests {
 		contextLoader.initWebApplicationContext(servletContext);
 
 		try {
-			RequestDataValueProcessor mockProcessor = mock(RequestDataValueProcessor.class);
+			RequestDataValueProcessor mockProcessor = mock();
 			wac.getBean(RequestDataValueProcessorWrapper.class).setRequestDataValueProcessor(mockProcessor);
 
 			RedirectView rv = new RedirectView();
@@ -203,19 +196,18 @@ public class RedirectViewTests {
 	}
 
 	@Test // SPR-13693
-	public void remoteHost() throws Exception {
+	public void remoteHost() {
 		RedirectView rv = new RedirectView();
 
-		assertFalse(rv.isRemoteHost("http://url.somewhere.com"));
-		assertFalse(rv.isRemoteHost("/path"));
-		assertFalse(rv.isRemoteHost("http://url.somewhereelse.com"));
+		assertThat(rv.isRemoteHost("https://url.somewhere.com")).isFalse();
+		assertThat(rv.isRemoteHost("/path")).isFalse();
+		assertThat(rv.isRemoteHost("http://somewhereelse.example")).isFalse();
 
-		rv.setHosts(new String[] {"url.somewhere.com"});
+		rv.setHosts("url.somewhere.com");
 
-		assertFalse(rv.isRemoteHost("http://url.somewhere.com"));
-		assertFalse(rv.isRemoteHost("/path"));
-		assertTrue(rv.isRemoteHost("http://url.somewhereelse.com"));
-
+		assertThat(rv.isRemoteHost("https://url.somewhere.com")).isFalse();
+		assertThat(rv.isRemoteHost("/path")).isFalse();
+		assertThat(rv.isRemoteHost("http://somewhereelse.example")).isTrue();
 	}
 
 	@Test // SPR-16752
@@ -232,119 +224,93 @@ public class RedirectViewTests {
 	}
 
 	@Test
-	public void emptyMap() throws Exception {
+	void emptyMap() throws Exception {
 		String url = "/myUrl";
 		doTest(new HashMap<>(), url, false, url);
 	}
 
 	@Test
-	public void emptyMapWithContextRelative() throws Exception {
+	void emptyMapWithContextRelative() throws Exception {
 		String url = "/myUrl";
 		doTest(new HashMap<>(), url, true, "/context" + url);
 	}
 
 	@Test
-	public void singleParam() throws Exception {
-		String url = "http://url.somewhere.com";
+	void singleParam() throws Exception {
+		String url = "https://url.somewhere.com";
 		String key = "foo";
 		String val = "bar";
-		Map<String, String> model = new HashMap<>();
-		model.put(key, val);
+		Map<String, String> model = Map.of(key, val);
 		String expectedUrlForEncoding = url + "?" + key + "=" + val;
 		doTest(model, url, false, expectedUrlForEncoding);
 	}
 
 	@Test
-	public void singleParamWithoutExposingModelAttributes() throws Exception {
-		String url = "http://url.somewhere.com";
-		Map<String, String> model = Collections.singletonMap("foo", "bar");
+	void singleParamWithoutExposingModelAttributes() throws Exception {
+		String url = "https://url.somewhere.com";
+		Map<String, String> model = Map.of("foo", "bar");
 
 		TestRedirectView rv = new TestRedirectView(url, false, model);
 		rv.setExposeModelAttributes(false);
 		rv.render(model, request, response);
 
-		assertEquals(url, this.response.getRedirectedUrl());
+		assertThat(this.response.getRedirectedUrl()).isEqualTo(url);
 	}
 
 	@Test
-	public void paramWithAnchor() throws Exception {
-		String url = "http://url.somewhere.com/test.htm#myAnchor";
+	void paramWithAnchor() throws Exception {
+		String url = "https://url.somewhere.com/test.htm#myAnchor";
 		String key = "foo";
 		String val = "bar";
 		Map<String, String> model = new HashMap<>();
 		model.put(key, val);
-		String expectedUrlForEncoding = "http://url.somewhere.com/test.htm" + "?" + key + "=" + val + "#myAnchor";
+		String expectedUrlForEncoding = "https://url.somewhere.com/test.htm" + "?" + key + "=" + val + "#myAnchor";
 		doTest(model, url, false, expectedUrlForEncoding);
 	}
 
 	@Test
-	public void contextRelativeQueryParam() throws Exception {
+	void contextRelativeQueryParam() throws Exception {
 		String url = "/test.html?id=1";
 		doTest(new HashMap<>(), url, true, "/context" + url);
 	}
 
 	@Test
-	public void twoParams() throws Exception {
-		String url = "http://url.somewhere.com";
+	void twoParams() throws Exception {
+		String url = "https://url.somewhere.com";
 		String key = "foo";
 		String val = "bar";
 		String key2 = "thisIsKey2";
 		String val2 = "andThisIsVal2";
-		Map<String, String> model = new HashMap<>();
+		Map<String, String> model = new LinkedHashMap<>();
 		model.put(key, val);
 		model.put(key2, val2);
-		try {
-			String expectedUrlForEncoding = url + "?" + key + "=" + val + "&" + key2 + "=" + val2;
-			doTest(model, url, false, expectedUrlForEncoding);
-		}
-		catch (AssertionError err) {
-			// OK, so it's the other order... probably on Sun JDK 1.6 or IBM JDK 1.5
-			String expectedUrlForEncoding = url + "?" + key2 + "=" + val2 + "&" + key + "=" + val;
-			doTest(model, url, false, expectedUrlForEncoding);
-		}
+		String expectedUrlForEncoding = url + "?" + key + "=" + val + "&" + key2 + "=" + val2;
+		doTest(model, url, false, expectedUrlForEncoding);
 	}
 
 	@Test
-	public void arrayParam() throws Exception {
-		String url = "http://url.somewhere.com";
+	void arrayParam() throws Exception {
+		String url = "https://url.somewhere.com";
 		String key = "foo";
 		String[] val = new String[] {"bar", "baz"};
-		Map<String, String[]> model = new HashMap<>();
-		model.put(key, val);
-		try {
-			String expectedUrlForEncoding = url + "?" + key + "=" + val[0] + "&" + key + "=" + val[1];
-			doTest(model, url, false, expectedUrlForEncoding);
-		}
-		catch (AssertionError err) {
-			// OK, so it's the other order... probably on Sun JDK 1.6 or IBM JDK 1.5
-			String expectedUrlForEncoding = url + "?" + key + "=" + val[1] + "&" + key + "=" + val[0];
-			doTest(model, url, false, expectedUrlForEncoding);
-		}
+		Map<String, String[]> model = Map.of(key, val);
+		String expectedUrlForEncoding = url + "?" + key + "=" + val[0] + "&" + key + "=" + val[1];
+		doTest(model, url, false, expectedUrlForEncoding);
 	}
 
 	@Test
-	public void collectionParam() throws Exception {
-		String url = "http://url.somewhere.com";
+	void collectionParam() throws Exception {
+		String url = "https://url.somewhere.com";
 		String key = "foo";
-		List<String> val = new ArrayList<>();
-		val.add("bar");
-		val.add("baz");
-		Map<String, List<String>> model = new HashMap<>();
-		model.put(key, val);
-		try {
-			String expectedUrlForEncoding = url + "?" + key + "=" + val.get(0) + "&" + key + "=" + val.get(1);
-			doTest(model, url, false, expectedUrlForEncoding);
-		}
-		catch (AssertionError err) {
-			// OK, so it's the other order... probably on Sun JDK 1.6 or IBM JDK 1.5
-			String expectedUrlForEncoding = url + "?" + key + "=" + val.get(1) + "&" + key + "=" + val.get(0);
-			doTest(model, url, false, expectedUrlForEncoding);
-		}
+		List<String> val = List.of("bar", "baz");
+		Map<String, List<String>> model = Map.of(key, val);
+		String expectedUrlForEncoding = url + "?" + key + "=" + val.get(0) + "&" + key + "=" + val.get(1);
+		doTest(model, url, false, expectedUrlForEncoding);
 	}
 
 	@Test
-	public void objectConversion() throws Exception {
-		String url = "http://url.somewhere.com";
+	void objectConversion() throws Exception {
+		String url = "https://url.somewhere.com";
 		String key = "foo";
 		String val = "bar";
 		String key2 = "int2";
@@ -360,14 +326,14 @@ public class RedirectViewTests {
 	}
 
 	@Test
-	public void propagateQueryParams() throws Exception {
+	void propagateQueryParams() throws Exception {
 		RedirectView rv = new RedirectView();
 		rv.setPropagateQueryParams(true);
-		rv.setUrl("http://url.somewhere.com?foo=bar#bazz");
+		rv.setUrl("https://url.somewhere.com?foo=bar#bazz");
 		request.setQueryString("a=b&c=d");
 		rv.render(new HashMap<>(), request, response);
-		assertEquals(302, response.getStatus());
-		assertEquals("http://url.somewhere.com?foo=bar&a=b&c=d#bazz", response.getHeader("Location"));
+		assertThat(response.getStatus()).isEqualTo(302);
+		assertThat(response.getHeader("Location")).isEqualTo("https://url.somewhere.com?foo=bar&a=b&c=d#bazz");
 	}
 
 	private void doTest(Map<String, ?> map, String url, boolean contextRelative, String expectedUrl)
@@ -376,14 +342,14 @@ public class RedirectViewTests {
 		TestRedirectView rv = new TestRedirectView(url, contextRelative, map);
 		rv.render(map, request, response);
 
-		assertTrue("queryProperties() should have been called.", rv.queryPropertiesCalled);
-		assertEquals(expectedUrl, this.response.getRedirectedUrl());
+		assertThat(rv.queryPropertiesCalled).as("queryProperties() should have been called.").isTrue();
+		assertThat(this.response.getRedirectedUrl()).isEqualTo(expectedUrl);
 	}
 
 
 	private static class TestRedirectView extends RedirectView {
 
-		private Map<String, ?> expectedModel;
+		private final Map<String, ?> expectedModel;
 
 		private boolean queryPropertiesCalled = false;
 
@@ -398,7 +364,7 @@ public class RedirectViewTests {
 		 */
 		@Override
 		protected Map<String, Object> queryProperties(Map<String, Object> model) {
-			assertTrue("Map and model must be equal.", this.expectedModel.equals(model));
+			assertThat(this.expectedModel.equals(model)).as("Map and model must be equal.").isTrue();
 			this.queryPropertiesCalled = true;
 			return super.queryProperties(model);
 		}
