@@ -1,15 +1,15 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIOsNS OF ANY KIND, either express or implied.
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
@@ -17,12 +17,15 @@
 package org.springframework.web.socket.messaging;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+
 import org.springframework.beans.DirectFieldAccessor;
 import org.springframework.messaging.MessageChannel;
 import org.springframework.messaging.SubscribableChannel;
@@ -31,8 +34,13 @@ import org.springframework.web.socket.TextMessage;
 import org.springframework.web.socket.handler.ConcurrentWebSocketSessionDecorator;
 import org.springframework.web.socket.handler.TestWebSocketSession;
 
-import static org.junit.Assert.*;
-import static org.mockito.BDDMockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 /**
  * Test fixture for {@link SubProtocolWebSocketHandler}.
@@ -40,11 +48,8 @@ import static org.mockito.BDDMockito.*;
  * @author Rossen Stoyanchev
  * @author Andy Wilkinson
  */
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class SubProtocolWebSocketHandlerTests {
-
-	private SubProtocolWebSocketHandler webSocketHandler;
-
-	private TestWebSocketSession session;
 
 	@Mock SubProtocolHandler stompHandler;
 
@@ -57,13 +62,16 @@ public class SubProtocolWebSocketHandlerTests {
 	@Mock
 	SubscribableChannel outClientChannel;
 
+	private SubProtocolWebSocketHandler webSocketHandler;
 
-	@Before
-	public void setup() {
-		MockitoAnnotations.initMocks(this);
+	private TestWebSocketSession session;
+
+
+	@BeforeEach
+	void setup() {
 		this.webSocketHandler = new SubProtocolWebSocketHandler(this.inClientChannel, this.outClientChannel);
 		given(stompHandler.getSupportedProtocols()).willReturn(Arrays.asList("v10.stomp", "v11.stomp", "v12.stomp"));
-		given(mqttHandler.getSupportedProtocols()).willReturn(Arrays.asList("MQTT"));
+		given(mqttHandler.getSupportedProtocols()).willReturn(List.of("MQTT"));
 		this.session = new TestWebSocketSession();
 		this.session.setId("1");
 		this.session.setOpen(true);
@@ -71,7 +79,7 @@ public class SubProtocolWebSocketHandlerTests {
 
 
 	@Test
-	public void subProtocolMatch() throws Exception {
+	void subProtocolMatch() throws Exception {
 		this.webSocketHandler.setProtocolHandlers(Arrays.asList(stompHandler, mqttHandler));
 		this.session.setAcceptedProtocol("v12.sToMp");
 		this.webSocketHandler.afterConnectionEstablished(session);
@@ -82,7 +90,7 @@ public class SubProtocolWebSocketHandlerTests {
 	}
 
 	@Test
-	public void subProtocolDefaultHandlerOnly() throws Exception {
+	void subProtocolDefaultHandlerOnly() throws Exception {
 		this.webSocketHandler.setDefaultProtocolHandler(stompHandler);
 		this.session.setAcceptedProtocol("v12.sToMp");
 		this.webSocketHandler.afterConnectionEstablished(session);
@@ -91,17 +99,18 @@ public class SubProtocolWebSocketHandlerTests {
 				isA(ConcurrentWebSocketSessionDecorator.class), eq(this.inClientChannel));
 	}
 
-	@Test(expected = IllegalStateException.class)
-	public void subProtocolNoMatch() throws Exception {
+	@Test
+	void subProtocolNoMatch() {
 		this.webSocketHandler.setDefaultProtocolHandler(defaultHandler);
 		this.webSocketHandler.setProtocolHandlers(Arrays.asList(stompHandler, mqttHandler));
 		this.session.setAcceptedProtocol("wamp");
 
-		this.webSocketHandler.afterConnectionEstablished(session);
+		assertThatIllegalStateException().isThrownBy(() ->
+				this.webSocketHandler.afterConnectionEstablished(session));
 	}
 
 	@Test
-	public void nullSubProtocol() throws Exception {
+	void nullSubProtocol() throws Exception {
 		this.webSocketHandler.setDefaultProtocolHandler(defaultHandler);
 		this.webSocketHandler.afterConnectionEstablished(session);
 
@@ -112,7 +121,7 @@ public class SubProtocolWebSocketHandlerTests {
 	}
 
 	@Test
-	public void emptySubProtocol() throws Exception {
+	void emptySubProtocol() throws Exception {
 		this.session.setAcceptedProtocol("");
 		this.webSocketHandler.setDefaultProtocolHandler(this.defaultHandler);
 		this.webSocketHandler.afterConnectionEstablished(session);
@@ -124,24 +133,26 @@ public class SubProtocolWebSocketHandlerTests {
 	}
 
 	@Test
-	public void noSubProtocolOneHandler() throws Exception {
-		this.webSocketHandler.setProtocolHandlers(Arrays.asList(stompHandler));
+	void noSubProtocolOneHandler() throws Exception {
+		this.webSocketHandler.setProtocolHandlers(List.of(stompHandler));
 		this.webSocketHandler.afterConnectionEstablished(session);
 
 		verify(this.stompHandler).afterSessionStarted(
 				isA(ConcurrentWebSocketSessionDecorator.class), eq(this.inClientChannel));
 	}
 
-	@Test(expected = IllegalStateException.class)
-	public void noSubProtocolTwoHandlers() throws Exception {
+	@Test
+	void noSubProtocolTwoHandlers() {
 		this.webSocketHandler.setProtocolHandlers(Arrays.asList(stompHandler, mqttHandler));
-		this.webSocketHandler.afterConnectionEstablished(session);
+		assertThatIllegalStateException().isThrownBy(() ->
+				this.webSocketHandler.afterConnectionEstablished(session));
 	}
 
-	@Test(expected = IllegalStateException.class)
-	public void noSubProtocolNoDefaultHandler() throws Exception {
+	@Test
+	void noSubProtocolNoDefaultHandler() {
 		this.webSocketHandler.setProtocolHandlers(Arrays.asList(stompHandler, mqttHandler));
-		this.webSocketHandler.afterConnectionEstablished(session);
+		assertThatIllegalStateException().isThrownBy(() ->
+				this.webSocketHandler.afterConnectionEstablished(session));
 	}
 
 	@Test
@@ -154,7 +165,7 @@ public class SubProtocolWebSocketHandlerTests {
 		session1.setAcceptedProtocol("v12.stomp");
 		session2.setAcceptedProtocol("v12.stomp");
 
-		this.webSocketHandler.setProtocolHandlers(Arrays.asList(this.stompHandler));
+		this.webSocketHandler.setProtocolHandlers(List.of(this.stompHandler));
 		this.webSocketHandler.afterConnectionEstablished(session1);
 		this.webSocketHandler.afterConnectionEstablished(session2);
 
@@ -171,14 +182,18 @@ public class SubProtocolWebSocketHandlerTests {
 		this.webSocketHandler.start();
 		this.webSocketHandler.handleMessage(session1, new TextMessage("foo"));
 
-		assertTrue(session1.isOpen());
-		assertNull(session1.getCloseStatus());
+		TestWebSocketSession session3 = new TestWebSocketSession("id3");
+		session3.setOpen(true);
+		session3.setAcceptedProtocol("v12.stomp");
+		this.webSocketHandler.afterConnectionEstablished(session1);
 
-		assertFalse(session2.isOpen());
-		assertEquals(CloseStatus.SESSION_NOT_RELIABLE, session2.getCloseStatus());
+		assertThat(session1.isOpen()).isTrue();
+		assertThat(session1.getCloseStatus()).isNull();
 
-		assertNotEquals("lastSessionCheckTime not updated", sixtyOneSecondsAgo,
-				handlerAccessor.getPropertyValue("lastSessionCheckTime"));
+		assertThat(session2.isOpen()).isFalse();
+		assertThat(session2.getCloseStatus()).isEqualTo(CloseStatus.SESSION_NOT_RELIABLE);
+
+		assertThat(handlerAccessor.getPropertyValue("lastSessionCheckTime")).isNotEqualTo(sixtyOneSecondsAgo);
 	}
 
 }
